No need for \hyp{} in the word near-by

--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -22,7 +22,7 @@
 \vs p014 1:11 \pc Time is not reckoned on Paradise; the sequence of successive events is inherent in the concept of those who are indigenous to the central Isle. But time is germane to the Havona circuits and to numerous beings of both celestial and terrestrial origin sojourning thereon. Each Havona world has its own local time, determined by its circuit. All worlds in a given circuit have the same length of year since they uniformly swing around Paradise, and the length of these planetary years decreases from the outermost to the innermost circuit.
 \vs p014 1:12 Besides Havona\hyp{}circuit time, there is the Paradise\hyp{}Havona standard day and other time designations which are determined on, and are sent out from, the seven Paradise satellites of the Infinite Spirit. The Paradise\hyp{}Havona standard day is based on the length of time required for the planetary abodes of the first or inner Havona circuit to complete one revolution around the Isle of Paradise; and though their velocity is enormous, owing to their situation between the dark gravity bodies and gigantic Paradise, it requires almost 1,000 years for these spheres to complete their circuit. You have unwittingly read the truth when your eyes rested on the statement “A day is as a thousand years with God, as but a watch in the night.” One Paradise\hyp{}Havona day is just 7 minutes, 3\,\bibfrac{1}{8} seconds less than 1,000 years of the present Urantia leap\hyp{}year calendar.
 \vs p014 1:13 This Paradise\hyp{}Havona day is the standard time measurement for the seven superuniverses, although each maintains its own internal time standards.
-\vs p014 1:14 \pc On the outskirts of this vast central universe, far out beyond the seventh belt of Havona worlds, there swirl an unbelievable number of enormous dark gravity bodies. These multitudinous dark masses are quite unlike other space bodies in many particulars; even in form they are very different. These dark gravity bodies neither reflect nor absorb light; they are nonreactive to physical\hyp{}energy light, and they so completely encircle and enshroud Havona as to hide it from the view of even near\hyp{}by inhabited universes of time and space.
+\vs p014 1:14 \pc On the outskirts of this vast central universe, far out beyond the seventh belt of Havona worlds, there swirl an unbelievable number of enormous dark gravity bodies. These multitudinous dark masses are quite unlike other space bodies in many particulars; even in form they are very different. These dark gravity bodies neither reflect nor absorb light; they are nonreactive to physical\hyp{}energy light, and they so completely encircle and enshroud Havona as to hide it from the view of even near-by inhabited universes of time and space.
 \vs p014 1:15 The great belt of dark gravity bodies is divided into two equal elliptical circuits by a unique space intrusion. The inner belt revolves counterclockwise; the outer revolves clockwise. These alternate directions of motion, coupled with the extraordinary mass of the dark bodies, so effectively equalize the lines of Havona gravity as to render the central universe a physically balanced and perfectly stabilized creation.
 \vs p014 1:16 The inner procession of dark gravity bodies is tubular in arrangement, consisting of three circular groupings. A cross section of this circuit would exhibit three concentric circles of about equal density. The outer circuit of dark gravity bodies is arranged perpendicularly, being 10,000 times higher than the inner circuit. The up\hyp{}and\hyp{}down diameter of the outer circuit is 50,000 times that of the transverse diameter.
 \vs p014 1:17 The intervening space which exists between these two circuits of gravity bodies is \bibemph{unique} in that nothing like it is to be found elsewhere in all the wide universe. This zone is characterized by enormous wave movements of an up\hyp{}and\hyp{}down nature and is permeated by tremendous energy activities of an unknown order.
