--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -52,7 +52,7 @@
 \vs p015 2:25 \pc All such estimates are approximations at best, for new systems are constantly evolving while other organizations are temporarily passing out of material existence.
 \usection{The Superuniverse of Orvonton}
 \vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about one seventh of the inhabited evolutionary universes.
-\vs p015 3:2 From the astronomical position of Urantia, as you look through the cross section of near\hyp{}by systems to the great Milky Way, you observe that the spheres of Orvonton are travelling in a vast elongated plane, the breadth being far greater than the thickness and the length far greater than the breadth.
+\vs p015 3:2 From the astronomical position of Urantia, as you look through the cross section of near-by systems to the great Milky Way, you observe that the spheres of Orvonton are travelling in a vast elongated plane, the breadth being far greater than the thickness and the length far greater than the breadth.
 \vs p015 3:3 Observation of the so\hyp{}called Milky Way discloses the comparative increase in Orvonton stellar density when the heavens are viewed in one direction, while on either side the density diminishes; the number of stars and other spheres decreases away from the chief plane of our material superuniverse. When the angle of observation is propitious, gazing through the main body of this realm of maximum density, you are looking toward the residential universe and the centre of all things.
 \vs p015 3:4 \pc Of the ten major divisions of Orvonton, eight have been roughly identified by Urantian astronomers. The other two are difficult of separate recognition because you are obliged to view these phenomena from the inside. If you could look upon the superuniverse of Orvonton from a position far\hyp{}distant in space, you would immediately recognize the ten major sectors of the seventh galaxy.
 \vs p015 3:5 The rotational centre of your minor sector is situated far away in the enormous and dense star cloud of Sagittarius, around which your local universe and its associated creations all move, and from opposite sides of the vast Sagittarius subgalactic system you may observe two great streams of star clouds emerging in stupendous stellar coils.
@@ -76,7 +76,7 @@
 \vs p015 4:6 Nebulae are not directly related to any of the administrative units, such as minor sectors or local universes, although some local universes have been organized from the products of a single nebula. Each local universe embraces exactly\fnst{In \bibref[32:1.4]{p032 1:4} we are told this is \bibemph{approximately} so, not \bibemph{exactly}. The only apparent difference is that there it refers to the \bibemph{force endowment}, whereas here to the \bibemph{energy charge} of a superuniverse.} 1/100,000\ts{th} of the total energy charge of a superuniverse irrespective of nebular relationship, for energy is not organized by nebulae --- it is universally distributed.
 \vs p015 4:7 Not all spiral nebulae are engaged in sun making. Some have retained control of many of their segregated stellar offspring, and their spiral appearance is occasioned by the fact that their suns pass out of the nebular arm in close formation but return by diverse routes, thus making it easy to observe them at one point but more difficult to see them when widely scattered on their different returning routes farther out and away from the arm of the nebula. There are not many sun\hyp{}forming nebulae active in Orvonton at the present time, though Andromeda, which is outside the inhabited superuniverse, is very active. This far\hyp{}distant nebula is visible to the naked eye, and when you view it, pause to consider that the light you behold left those distant suns almost million years\fnst{The modern (2003) estimate of the distance to the Andromeda galaxy (M31) is $2.54 \pm\ 0.06 \times 10^6$ light years. The estimate given in the text corresponds to one given in the book ``Stars and Atoms'' by Sir Arthur Eddington, which was published in 1927. Edwin Hubble was the first to identify the Cepheid variable stars in M31 in 1925, thus forever settling the debate about the object being extragalactic.} ago.
 \vs p015 4:8 The Milky Way galaxy is composed of vast numbers of former spiral and other nebulae, and many still retain their original configuration. But as the result of internal catastrophes and external attraction, many have suffered such distortion and rearrangement as to cause these enormous aggregations to appear as gigantic luminous masses of blazing suns, like the Magellanic Cloud. The globular type of star clusters predominates near the outer margins of Orvonton.
-\vs p015 4:9 The vast star clouds of Orvonton should be regarded as individual aggregations of matter comparable to the separate nebulae observable in the space regions external to the Milky Way galaxy. Many of the so\hyp{}called star clouds of space, however, consist of gaseous material only. The energy potential of these stellar gas clouds is unbelievably enormous, and some of it is taken up by near\hyp{}by suns and redispatched in space as solar emanations.
+\vs p015 4:9 The vast star clouds of Orvonton should be regarded as individual aggregations of matter comparable to the separate nebulae observable in the space regions external to the Milky Way galaxy. Many of the so\hyp{}called star clouds of space, however, consist of gaseous material only. The energy potential of these stellar gas clouds is unbelievably enormous, and some of it is taken up by near-by suns and redispatched in space as solar emanations.
 \usection{The Origin of Space Bodies}
 \vs p015 5:1 The bulk of the mass contained in the suns and planets of a superuniverse originates in the nebular wheels; very little of superuniverse mass is organized by the direct action of the power directors (as in the construction of architectural spheres), although a constantly varying quantity of matter originates in open space.
 \vs p015 5:2 As to origin, the majority of the suns, planets, and other spheres can be classified in one of the following ten groups:
@@ -103,14 +103,14 @@
 \vs p015 6:8 \pc \bibemph{The Suns.} These are the stars of space in all their various stages of existence. Some are solitary evolving space systems; others are double stars, contracting or disappearing planetary systems. The stars of space exist in no less than a thousand different states and stages. You are familiar with suns that emit light accompanied by heat; but there are also suns which shine without heat.
 \vs p015 6:9 The trillions upon trillions of years that an ordinary sun will continue to give out heat and light well illustrates the vast store of energy which each unit of matter contains. The actual energy stored in these invisible particles of physical matter is well\hyp{}nigh unimaginable. And this energy becomes almost wholly available as light when subjected to the tremendous heat pressure and the associated energy activities which prevail in the interior of the blazing suns. Still other conditions enable these suns to transform and send forth much of the energy of space which comes their way in the established space circuits. Many phases of physical energy and all forms of matter are attracted to, and subsequently distributed by, the solar dynamos. In this way the suns serve as local accelerators of energy circulation, acting as automatic power\hyp{}control stations.
 \vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world\fnst{Assuming the present value of the volume of the oceans (together with their seas) to be $1.5 \times 10^{18}\,m^3$ and a standard 250\,ml glass of water we obtain the required total number of stars: $6\times 10^{21}$.}.
-\vs p015 6:11 \pc \bibemph{The Dark Islands of Space.} These are the dead suns and other large aggregations of matter devoid of light and heat. The dark islands are sometimes enormous in mass and exert a powerful influence in universe equilibrium and energy manipulation. The density of some of these large masses is well\hyp{}nigh unbelievable. And this great concentration of mass enables these dark islands to function as powerful balance wheels, holding large neighbouring systems in effective leash. They hold the gravity balance of power in many constellations; many physical systems which would otherwise speedily dive to destruction in near\hyp{}by suns are held securely in the gravity grasp of these guardian dark islands. It is because of this function that we can locate them accurately. We have measured the gravity pull of the luminous bodies, and we can therefore calculate the exact size and location of the dark islands of space which so effectively function to hold a given system steady in its course.
+\vs p015 6:11 \pc \bibemph{The Dark Islands of Space.} These are the dead suns and other large aggregations of matter devoid of light and heat. The dark islands are sometimes enormous in mass and exert a powerful influence in universe equilibrium and energy manipulation. The density of some of these large masses is well\hyp{}nigh unbelievable. And this great concentration of mass enables these dark islands to function as powerful balance wheels, holding large neighbouring systems in effective leash. They hold the gravity balance of power in many constellations; many physical systems which would otherwise speedily dive to destruction in near-by suns are held securely in the gravity grasp of these guardian dark islands. It is because of this function that we can locate them accurately. We have measured the gravity pull of the luminous bodies, and we can therefore calculate the exact size and location of the dark islands of space which so effectively function to hold a given system steady in its course.
 \vs p015 6:12 \pc \bibemph{Minor Space Bodies.} The meteors and other small particles of matter circulating and evolving in space constitute an enormous aggregate of energy and material substance.
 \vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight\fnst{More correctly, this proves only that light has \bibemph{momentum,} but it is also true that light has \bibemph{weight} and this has been demonstrated by Sir Arthur~S. Eddington on 29\ts{th} May 1919, when he measured the deflection of light rays passing near the Sun during the eclipse. This day of the year, 29\ts{th} May, is the most favourable because on it the Sun passes through the midst of an exceptionally bright patch of the star cluster of Hyades, in constellation of Taurus. And in 1919 a solar eclipse happened to occur on this day, which provided the unique opportunity for such an experiment, successfully performed by Eddington.}. Light is a real substance, not simply waves of hypothetical ether.
-\vs p015 6:14 \pc \bibemph{The Planets.} These are the larger aggregations of matter which follow an orbit around a sun or some other space body; they range in size from planetesimals to enormous gaseous, liquid, or solid spheres. The cold worlds which have been built up by the assemblage of floating space material, when they happen to be in proper relation to a near\hyp{}by sun, are the more ideal planets to harbour intelligent inhabitants. The dead suns are not, as a rule, suited to life; they are usually too far away from a living, blazing sun, and further, they are altogether too massive; gravity is tremendous at the surface.
+\vs p015 6:14 \pc \bibemph{The Planets.} These are the larger aggregations of matter which follow an orbit around a sun or some other space body; they range in size from planetesimals to enormous gaseous, liquid, or solid spheres. The cold worlds which have been built up by the assemblage of floating space material, when they happen to be in proper relation to a near-by sun, are the more ideal planets to harbour intelligent inhabitants. The dead suns are not, as a rule, suited to life; they are usually too far away from a living, blazing sun, and further, they are altogether too massive; gravity is tremendous at the surface.
 \vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{The other two being Mars\index{Planets!Mars} and Venus,\index{Planets!Venus} according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
 \vs p015 6:16 The laws of physical\hyp{}energy behaviour are basically universal, but local influences have much to do with the physical conditions which prevail on individual planets and in local systems. An almost endless variety of creature life and other living manifestations characterizes the countless worlds of space. There are, however, certain points of similarity in a group of worlds associated in a given system, while there also is a universe pattern of intelligent life. There are physical relationships among those planetary systems which belong to the same physical circuit, and which closely follow each other in the endless swing around the circle of universes.
 \usection{The Architectural Spheres}
-\vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
+\vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near-by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
 \vs p015 7:2 \pc Time is standardized on the headquarters of the superuniverses. The standard day of the superuniverse of Orvonton is equal to almost 30 days of Urantia time, and the Orvonton year equals 100 standard days. This Uversa year is standard in the 7\ts{th} superuniverse, and it is 22 minutes short of 3,000 days of Urantia time, about 8\,\bibfrac{1}{5} of your years.
 \vs p015 7:3 \pc The headquarters worlds of the seven superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
 \vs p015 7:4 The various headquarters worlds are provided with every phase of material and spiritual creation. All kinds of material, morontial, and spiritual beings are at home on these rendezvous worlds of the universes. As mortal creatures ascend the universe, passing from the material to the spiritual realms, they never lose their appreciation for, and enjoyment of, their former levels of existence.
@@ -125,12 +125,12 @@
 \usection{Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
-\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x^5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near\hyp{}by highly heated or heavily charged bodies.
+\vs p015 8:3 \pc Evolving energy has substance; it has weight, although weight is always relative, depending on revolutionary velocity, mass, and antigravity. Mass in matter tends to retard velocity in energy\fnst{Indeed, this is clear from the geometric nature of proper mass as the momentum $p_5 = m$ conjugated to the proper time $x^5 = \tau$, cf. the note on \bibref[23:3.2]{p023 3:2}.}; and the anywhere\hyp{}present velocity of energy represents: the initial endowment of velocity, minus retardation by mass encountered in transit, plus the regulatory function of the living energy controllers of the superuniverse and the physical influence of near-by highly heated or heavily charged bodies.
 \vs p015 8:4 The universal plan for the maintenance of equilibrium between matter and energy necessitates the everlasting making and unmaking of the lesser material units. The Universe Power Directors have the ability to condense and detain, or to expand and liberate, varying quantities of energy.
 \vs p015 8:5 Given a sufficient duration of retarding influence, gravity would eventually convert all energy into matter were it not for two factors: First, because of the antigravity influences of the energy controllers, and second, because organized matter tends to disintegrate under certain conditions found in very hot stars and under certain peculiar conditions in space near highly energized cold bodies of condensed matter.
 \vs p015 8:6 When mass becomes overaggregated and threatens to unbalance energy, to deplete the physical power circuits, the physical controllers intervene unless gravity’s own further tendency to overmaterialize energy is defeated by the occurrence of a collision among the dead giants of space, thus in an instant completely dissipating the cumulative collections of gravity. In these collisional episodes enormous masses of matter are suddenly converted into the rarest form of energy, and the struggle for universal equilibrium is begun anew. Eventually the larger physical systems become stabilized, become physically settled, and are swung into the balanced and established circuits of the superuniverses. Subsequent to this event no more collisions or other devastating catastrophes will occur in such established systems.
 \vs p015 8:7 During the times of plus energy there are power disturbances and heat fluctuations accompanied by electrical manifestations. During times of minus energy there are increased tendencies for matter to aggregate, condense, and to get out of control in the more delicately balanced circuits, with resultant tidal or collisional adjustments which quickly restore the balance between circulating energy and more literally stabilized matter. To forecast and otherwise to understand such likely behaviour of the blazing suns and the dark islands of space is one of the tasks of the celestial star observers.
-\vs p015 8:8 We are able to recognize most of the laws governing universe equilibrium and to predict much pertaining to universe stability. Practically, our forecasts are reliable, but we are always confronted by certain forces which are not wholly amenable to the laws of energy control and matter behaviour known to us. The predictability of all physical phenomena becomes increasingly difficult as we proceed outward in the universes from Paradise. As we pass beyond the borders of the personal administration of the Paradise Rulers, we are confronted with increasing inability to reckon in accordance with the standards established and the experience acquired in connection with observations having exclusively to do with the physical phenomena of the near\hyp{}by astronomic systems. Even in the realms of the seven superuniverses we are living in the midst of force actions and energy reactions which pervade all our domains and extend in unified equilibrium on through all regions of outer space.
+\vs p015 8:8 We are able to recognize most of the laws governing universe equilibrium and to predict much pertaining to universe stability. Practically, our forecasts are reliable, but we are always confronted by certain forces which are not wholly amenable to the laws of energy control and matter behaviour known to us. The predictability of all physical phenomena becomes increasingly difficult as we proceed outward in the universes from Paradise. As we pass beyond the borders of the personal administration of the Paradise Rulers, we are confronted with increasing inability to reckon in accordance with the standards established and the experience acquired in connection with observations having exclusively to do with the physical phenomena of the near-by astronomic systems. Even in the realms of the seven superuniverses we are living in the midst of force actions and energy reactions which pervade all our domains and extend in unified equilibrium on through all regions of outer space.
 \vs p015 8:9 The farther out we go, the more certainly we encounter those variational and unpredictable phenomena which are so unerringly characteristic of the unfathomable presence\hyp{}performances of the Absolutes and the experiential Deities. And these phenomena must be indicative of some universal overcontrol of all things.
 \vs p015 8:10 The superuniverse of Orvonton is apparently now running down; the outer universes seem to be winding up for unparalleled future activities; the central Havona universe is eternally stabilized. Gravity and absence of heat (cold) organize and hold matter together; heat and antigravity disrupt matter and dissipate energy. The living power directors and force organizers are the secret of the special control and intelligent direction of the endless metamorphoses of universe making, unmaking, and remaking. Nebulae may disperse, suns burn out, systems vanish, and planets perish, but the universes do not run down.
 \usection{Circuits of the Superuniverses}
