--- a/tex/p030.tex
+++ b/tex/p030.tex
@@ -332,7 +332,7 @@
 \usection{The Courtesy Colonies}
 \vs p030 3:1 The seven courtesy colonies sojourn on the architectural spheres for a longer or shorter time while engaged in the furtherance of their missions and in the execution of their special assignments. Their work may be described as follows:
 \vs p030 3:2 \ublistelem{1.}\bibnobreakspace \bibemph{The Star Students,} the celestial astronomers, choose to work on spheres like Uversa because such specially constructed worlds are unusually favourable for their observations and calculations. Uversa is favourably situated for the work of this colony, not only because of its central location, but also because there are no gigantic living or dead suns near at hand to disturb the energy currents. These students are not in any manner organically connected with the affairs of the superuniverse; they are merely guests.
-\vs p030 3:3 The astronomical colony of Uversa contains individuals from many near\hyp{}by realms, from the central universe, and even from Norlatiadek. Any being on any world in any system of any universe may become a star student, may aspire to join some corps of celestial astronomers. The only requisites are: continuing life and sufficient knowledge of the worlds of space, especially their physical laws of evolution and control. Star students are not required to serve eternally in this corps, but no one admitted to this group may withdraw under one millennium of Uversa time.
+\vs p030 3:3 The astronomical colony of Uversa contains individuals from many near-by realms, from the central universe, and even from Norlatiadek. Any being on any world in any system of any universe may become a star student, may aspire to join some corps of celestial astronomers. The only requisites are: continuing life and sufficient knowledge of the worlds of space, especially their physical laws of evolution and control. Star students are not required to serve eternally in this corps, but no one admitted to this group may withdraw under one millennium of Uversa time.
 \vs p030 3:4 The star\hyp{}observer colony of Uversa now numbers over one million. These astronomers come and go, though some remain for comparatively long periods. They carry on their work with the aid of a multitude of mechanical instruments and physical appliances; they are also greatly assisted by the Solitary Messengers and other spirit explorers. These celestial astronomers make constant use of the living energy transformers and transmitters, as well as of the reflective personalities, in their work of star study and space survey. They study all forms and phases of space material and energy manifestations, and they are just as much interested in force function as in stellar phenomena; nothing in all space escapes their scrutiny.
 \vs p030 3:5 Similar astronomer colonies are to be found on the sector headquarters worlds of the superuniverse as well as on the architectural capitals of the local universes and their administrative subdivisions. Except on Paradise, knowledge is not inherent; understanding of the physical universe is largely dependent on observation and research.
 \vs p030 3:6 \ublistelem{2.}\bibnobreakspace \bibemph{The Celestial Artisans} serve throughout the seven superuniverses. Ascending mortals have their initial contact with these groups in the morontia career of the local universe in connection with which these artisans will be more fully discussed.
