--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -54,7 +54,7 @@
 \vs p035 3:19 \ublistelem{6.}\bibnobreakspace The time on sphere number six is devoted to an attempt to correlate these five epochs and thus achieve co\hyp{}ordination of experience preparatory to entering the Melchizedek primary schools of universe training.
 \vs p035 3:20 \pc The schools of universe administration and spiritual wisdom are located on the Melchizedek home world, where also are to be found those schools devoted to a single line of research, such as energy, matter, organization, communication, records, ethics, and comparative creature existence.
 \vs p035 3:21 In the Melchizedek College of Spiritual Endowment all orders --- even the Paradise orders --- of the Sons of God co\hyp{}operate with the Melchizedek and the seraphic teachers in training the hosts who go forth as evangels of destiny, proclaiming spiritual liberty and divine sonship even to the remote worlds of the universe. This particular school of the Melchizedek University is an exclusive universe institution; student visitors are not received from other realms.
-\vs p035 3:22 The highest course of training in universe administration is given by the Melchizedeks on their home world. This College of High Ethics is presided over by the original Father Melchizedek. It is to these schools that the various universes send exchange students. While the young universe of Nebadon stands low in the scale of universes as regards spiritual achievement and high ethical development, nevertheless, our administrative troubles have so turned the whole universe into a vast clinic for other near\hyp{}by creations that the Melchizedek colleges are thronged with student visitors and observers from other realms. Besides the immense group of local registrants there are always upward of 100,000 foreign students in attendance upon the Melchizedek schools, for the order of Melchizedeks in Nebadon is renowned throughout all Splandon.
+\vs p035 3:22 The highest course of training in universe administration is given by the Melchizedeks on their home world. This College of High Ethics is presided over by the original Father Melchizedek. It is to these schools that the various universes send exchange students. While the young universe of Nebadon stands low in the scale of universes as regards spiritual achievement and high ethical development, nevertheless, our administrative troubles have so turned the whole universe into a vast clinic for other near-by creations that the Melchizedek colleges are thronged with student visitors and observers from other realms. Besides the immense group of local registrants there are always upward of 100,000 foreign students in attendance upon the Melchizedek schools, for the order of Melchizedeks in Nebadon is renowned throughout all Splandon.
 \usection{Special Work of the Melchizedeks}
 \vs p035 4:1 A highly specialized branch of Melchizedek activities has to do with the supervision of the progressive morontia career of the ascending mortals. Much of this training is conducted by the patient and wise seraphic ministers, assisted by mortals who have ascended to relatively higher levels of universe attainment, but all of this educational work is under the general supervision of the Melchizedeks in association with the Trinity Teacher Sons.
 \vs p035 4:2 \pc While the Melchizedek orders are chiefly devoted to the vast educational system and experiential training regime of the local universe, they also function in unique assignments and in unusual circumstances. In an evolving universe eventually embracing approximately 10,000,000 inhabited worlds, many things out of the ordinary are destined to happen, and it is in such emergencies that the Melchizedeks act. On Edentia, your constellation headquarters, they are known as emergency Sons. They are always ready to serve in all exigencies --- physical, intellectual, or spiritual --- whether on a planet, in a system, in a constellation, or in the universe. Whenever and wherever special help is needed, there you will find one or more of the Melchizedek Sons.
