--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -67,7 +67,7 @@
 \vs p039 3:6 These angels continue their ministry on the mansion and higher morontia worlds. They are concerned with any undertaking having to do with progress on the morontia worlds and which concerns three or more persons. Two beings are regarded as operating on the mating, complemental, or partnership basis, but when three or more are grouped for service, they constitute a social problem and therefore fall within the jurisdiction of the social architects. These efficient seraphim are organized in 70 divisions on Edentia, and these divisions minister on the 70 morontia progress worlds encircling the headquarters sphere.
 \vs p039 3:7 \ublistelem{4.}\bibnobreakspace \bibemph{Ethical Sensitizers.} It is the mission of these seraphim to foster and to promote the growth of creature appreciation of the morality of interpersonal relationships, for such is the seed and secret of the continued and purposeful growth of society and government, human or superhuman. These enhancers of ethical appreciation function anywhere and everywhere they may be of service, as volunteer counsellors to the planetary rulers and as exchange teachers on the system training worlds. You will not, however, come under their full guidance until you reach the brotherhood schools on Edentia, where they will quicken your appreciation of those very truths of fraternity which you will even then be so earnestly exploring by the actual experience of living with the univitatia in the social laboratories of Edentia, the 70 satellites of the Norlatiadek capital.
 \vs p039 3:8 \ublistelem{5.}\bibnobreakspace \bibemph{The Transporters.} The fifth group of supervisor seraphim operate as personality transporters, carrying beings to and from the headquarters of the constellations. Such transport seraphim, while in flight from one sphere to another, are fully conscious of their velocity, direction, and astronomic whereabouts. They are not traversing space as would an inanimate projectile. They may pass near one another during space flight without the least danger of collision. They are fully able to vary speed of progression and to alter direction of flight, even to change destinations if their directors should so instruct them at any space junction of the universe intelligence circuits.
-\vs p039 3:9 These transit personalities are so organized that they can simultaneously utilize all three of the universally distributed lines of energy, each having a clear space velocity of 299,789\,km/s. These transporters are thus able to superimpose velocity of energy upon velocity of power until they attain an average speed on their long journeys varying anywhere from 885,139 to almost 899,623\,km/s. The velocity is affected by the mass and proximity of neighbouring matter and by the strength and direction of the near\hyp{}by main circuits of universe power. There are numerous types of beings, similar to the seraphim, who are able to traverse space, and who also are able to transport other beings who have been properly prepared.
+\vs p039 3:9 These transit personalities are so organized that they can simultaneously utilize all three of the universally distributed lines of energy, each having a clear space velocity of 299,789\,km/s. These transporters are thus able to superimpose velocity of energy upon velocity of power until they attain an average speed on their long journeys varying anywhere from 885,139 to almost 899,623\,km/s. The velocity is affected by the mass and proximity of neighbouring matter and by the strength and direction of the near-by main circuits of universe power. There are numerous types of beings, similar to the seraphim, who are able to traverse space, and who also are able to transport other beings who have been properly prepared.
 \vs p039 3:10 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} The sixth order of supervising seraphim act as the special recorders of constellation affairs. A large and efficient corps functions on Edentia, the headquarters of the constellation of Norlatiadek, to which your system and planet belong.
 \vs p039 3:11 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} General reserves of the supervisor seraphim are held on the headquarters of the constellations. Such angelic reservists are in no sense inactive; many serve as messenger aids to the constellation rulers; others are attached to the Salvington reserves of unassigned Vorondadeks; still others may be attached to Vorondadek Sons on special assignment, such as the Vorondadek observer, and sometimes Most High regent, of Urantia.
 \usection{Administrator Seraphim}
