--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -18,7 +18,7 @@
 \vs p041 1:1 The spiral and other nebulae, the mother wheels of the spheres of space, are initiated by Paradise force organizers; and following nebular evolution of gravity response, they are superseded in superuniverse function by the power centres and physical controllers, who thereupon assume full responsibility for directing the physical evolution of the ensuing generations of stellar and planetary offspring. This physical supervision of the Nebadon preuniverse was, upon the arrival of our Creator Son, immediately co\hyp{}ordinated with his plan for universe organization. Within the domain of this Paradise Son of God,\fnst{In 1995 text no comma after ``God''.} the Supreme Power Centres and the Master Physical Controllers collaborated with the later appearing Morontia Power Supervisors and others to produce that vast complex of communication lines, energy circuits, and power lanes which firmly bind the manifold space bodies of Nebadon into one integrated administrative unit.
 \vs p041 1:2 One hundred Supreme Power Centres of the fourth order are permanently assigned to our local universe. These beings receive the incoming lines of power from the third\hyp{}order centres of Uversa and relay the down\hyp{}stepped and modified circuits to the power centres of our constellations and systems. These power centres, in association, function to produce the living system of control and equalization which operates to maintain the balance and distribution of otherwise fluctuating and variable energies. Power centres are not, however, concerned with transient and local energy upheavals, such as sun spots and system electric disturbances; light and electricity are not the basic energies of space; they are secondary and subsidiary manifestations.
 \vs p041 1:3 The one hundred local universe centres are stationed on Salvington, where they function at the exact energy centre of that sphere. Architectural spheres, such as Salvington, Edentia, and Jerusem, are lighted, heated, and energized by methods which make them quite independent of the suns of space. These spheres were constructed --- made to order --- by the power centres and physical controllers and were designed to exert a powerful influence over energy distribution. Basing their activities on such focal points of energy control, the power centres, by their living presences, directionize and channelize the physical energies of space. And these energy circuits are basic to all physical\hyp{}material and morontia\hyp{}spiritual phenomena.
-\vs p041 1:4 Ten Supreme Power Centres of the fifth order are assigned to each of Nebadon’s primary subdivisions, the 100 constellations. In Norlatiadek, your constellation, they are not stationed on the headquarters sphere but are situated at the centre of the enormous stellar system which constitutes the physical core of the constellation. On Edentia there are ten associated mechanical controllers and ten frandalanks who are in perfect and constant liaison with the near\hyp{}by power centres.
+\vs p041 1:4 Ten Supreme Power Centres of the fifth order are assigned to each of Nebadon’s primary subdivisions, the 100 constellations. In Norlatiadek, your constellation, they are not stationed on the headquarters sphere but are situated at the centre of the enormous stellar system which constitutes the physical core of the constellation. On Edentia there are ten associated mechanical controllers and ten frandalanks who are in perfect and constant liaison with the near-by power centres.
 \vs p041 1:5 One Supreme Power Centre of the sixth order is stationed at the exact gravity focus of each local system. In the system of Satania the assigned power centre occupies a dark island of space located at the astronomic centre of the system. Many of these dark islands are vast dynamos which mobilize and directionize certain space\hyp{}energies, and these natural circumstances are effectively utilized by the Satania Power Centre, whose living mass functions as a liaison with the higher centres, directing the streams of more materialized power to the Master Physical Controllers on the evolutionary planets of space.
 \usection{The Satania Physical Controllers}
 \vs p041 2:1 While the Master Physical Controllers serve with the power centres throughout the grand universe, their functions in a local system, such as Satania, are more easy of comprehension. Satania is one of 100 local systems which make up the administrative organization of the constellation of Norlatiadek, having as immediate neighbours the systems of Sandmatia, Assuntia, Porogia, Sortoria, Rantulia, and Glantonia. The Norlatiadek systems differ in many respects, but all are evolutionary and progressive, very much like Satania.
@@ -44,7 +44,7 @@
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
 \vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text (``Stars and Atoms'' by A.S.\,Eddington, \cite{Eddington1}) the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
-\vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000\fnst{In 1955 text ``sixty thousand''. Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)} times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.
+\vs p041 4:4 One of your near-by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000\fnst{In 1955 text ``sixty thousand''. Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)} times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 3,000\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
@@ -80,7 +80,7 @@
 \vs p041 7:12 \pc You might try to visualize 35,000,000\,°C of heat, in association with certain gravity pressures, as the electronic boiling point\fnst{The upper bound for the electronic boiling point was calculated on the basis of the general relativistic covariant nonlocal statistical dynamics to be 740,000,000\,K at by A.A.~Vlasov in \cite{Vlasov1} and the actual value estimated by comparison with the energy distribution of cosmic rays at 657,000,000\,K. This was done without taking into account the quantum effects. The corresponding quantum calculation has not yet been done by anyone.}. Under such pressure and at such temperature all atoms are degraded and broken up into their electronic and other ancestral components; even the electrons and other associations of ultimatons may be broken up, but the suns are not able to degrade the ultimatons.
 \vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over $10^{21}$ of atoms\fnst{The mass of such a drop would be: $m = 1/3\times(2 m_H + m_O)\times 10^{21} = 0.01\,g$.}. This is the energy of more than 100 horsepower exerted continuously for two years\fnst{Assuming the value of 1\,horsepower = 745.7\,watts, we obtain for the energy $E = 100\times 745.7\times 2\times 365\times 86,400 = 4.7\times 10^{12}\,J$. Using Einstein's formula $E = mc^2$, we can calculate the mass of the drop: $m = E/c^2 = 0.05\,g$. This is five times greater than the estimate obtained in the previous note, based on the number of atoms in the drop. Therefore, either Einstein's formula is incorrect (but then how to reconcile this with the statement made in \bibref[42:4.11]{p042 4:11}?) or the masses of hydrogen and oxygen atoms are different from the present values or, perhaps, the revelators are not overly concerned with being absolutely accurate in such minor technical details. It is, however, curious that this example is taken from pp.\,102--103 of \cite{Eddington1}, where the author commits the same mistake, which is carried over here.}. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
 \vs p041 7:14 \pc Only those suns which function in the direct channels of the main streams of universe energy can shine on forever. Such solar furnaces blaze on indefinitely, being able to replenish their material losses by the intake of space\hyp{}force and analogous circulating energy. But stars far removed from these chief channels of recharging are destined to undergo energy depletion --- gradually cool off and eventually burn out.
-\vs p041 7:15 Such dead or dying suns can be rejuvenated by collisional impact or can be recharged by certain nonluminous energy islands of space or through gravity\hyp{}robbery of near\hyp{}by smaller suns or systems. The majority of dead suns will experience revivification by these or other evolutionary techniques. Those which are not thus eventually recharged are destined to undergo disruption by mass explosion when the gravity condensation attains the critical level of ultimatonic condensation of energy pressure. Such disappearing suns thus become energy of the rarest form, admirably adapted to energize other more favourably situated suns.
+\vs p041 7:15 Such dead or dying suns can be rejuvenated by collisional impact or can be recharged by certain nonluminous energy islands of space or through gravity\hyp{}robbery of near-by smaller suns or systems. The majority of dead suns will experience revivification by these or other evolutionary techniques. Those which are not thus eventually recharged are destined to undergo disruption by mass explosion when the gravity condensation attains the critical level of ultimatonic condensation of energy pressure. Such disappearing suns thus become energy of the rarest form, admirably adapted to energize other more favourably situated suns.
 \usection{Solar\hyp{}Energy Reactions}
 \vs p041 8:1 In those suns which are encircuited in the space\hyp{}energy channels, solar energy is liberated by various complex nuclear\hyp{}reaction chains, the most common of which is the hydrogen\hyp{}carbon\hyp{}helium reaction. In this metamorphosis, carbon acts as an energy catalyst since it is in no way actually changed by this process of converting hydrogen into helium. Under certain conditions of high temperature the hydrogen penetrates the carbon nuclei. Since the carbon cannot hold more than four such protons, when this saturation state is attained, it begins to emit protons as fast as new ones arrive. In this reaction the ingoing hydrogen particles come forth as a helium atom.
 \vs p041 8:2 \pc Reduction of hydrogen content increases the luminosity of a sun. In the suns destined to burn out, the height of luminosity is attained at the point of hydrogen exhaustion. Subsequent to this point, brilliance is maintained by the resultant process of gravity contraction. Eventually, such a star will become a so\hyp{}called white dwarf, a highly condensed sphere.
@@ -88,7 +88,7 @@
 \vs p041 8:4 As a rule, the vast extrusion of matter continues to exist about the residual cooling sun as extensive clouds of nebular gases. And all this explains the origin of many types of irregular nebulae, such as the Crab nebula, which had its origin about 900 years ago, and which still exhibits the mother sphere as a lone star near the centre of this irregular nebular mass.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/crab.jpg}\caption{The Crab Nebula from VLT}\end{figure}}
 \usection{Sun Stability}
 \vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 35,000,000\,°C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
-\vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near\hyp{}by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
+\vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near-by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
 \vs p041 9:3 \pc Your own solar centre radiates almost $10^{14}$\fnst{The American text of 1955 says ``one hundred billion'', but this is a quotation from p.98 of \cite{Eddington1}, where the \bibemph{English} billions (million million) are used and not the \bibemph{American} billions, i.e. thousand million. Otherwise, the figure given in the text would be thousand times smaller than the actual value well-known in the modern science. The author, Sir Arthur S.~Eddington explicitly warns the American reader in the Preface, but, apparently, Dr~Sadler did not notice this warning.} tons of actual matter annually, while the giant suns lose matter at a prodigious rate during their earlier growth, the first billion years. A sun’s life becomes stable after the maximum of internal temperature is reached, and the subatomic energies begin to be released. And it is just at this critical point that the larger suns are given to convulsive pulsations.
 \vs p041 9:4 Sun stability is wholly dependent on the equilibrium between gravity\hyp{}heat contention --- tremendous pressures counterbalanced by unimagined temperatures. The interior gas elasticity of the suns upholds the overlying layers of varied materials, and when gravity and heat are in equilibrium, the weight of the outer materials exactly equals the temperature pressure of the underlying and interior gases. In many of the younger stars continued gravity condensation produces ever\hyp{}heightening internal temperatures, and as internal heat increases, the interior X\hyp{}ray pressure of supergas winds becomes so great that, in connection with the centrifugal motion, a sun begins to throw its exterior layers off into space, thus redressing the imbalance between gravity and heat.
 \vs p041 9:5 Your own sun has long since attained relative equilibrium between its expansion and contraction cycles, those disturbances which produce the gigantic pulsations of many of the younger stars. Your sun is now passing out of its six billionth year. At the present time it is functioning through the period of greatest economy. It will shine on as of present efficiency for more than $2.5 \times 10^{10}$ years. It will probably experience a partially efficient period of decline as long as the combined periods of its youth and stabilized function.
