--- a/tex/p049.tex
+++ b/tex/p049.tex
@@ -94,7 +94,7 @@
 \vs p049 5:28 This classification of human beings will receive particular attention in a succeeding paper.
 \vs p049 5:29 \ublistelem{5.}\bibnobreakspace \bibemph{Creature\hyp{}kinship serials.} Planets are not only organized vertically into systems, constellations, and so on, but the universe administration also provides for horizontal groupings according to type, series, and other relationships. This lateral administration of the universe pertains more particularly to the co\hyp{}ordination of activities of a kindred nature which have been independently fostered on different spheres. These related classes of universe creatures are periodically inspected by certain composite corps of high personalities presided over by long\hyp{}experienced finaliters.
 \vs p049 5:30 These kinship factors are manifest on all levels, for kinship serials exist among nonhuman personalities as well as among mortal creatures --- even between human and superhuman orders. Intelligent beings are vertically related in twelve great groups of seven major divisions each. The co\hyp{}ordination of these uniquely related groups of living beings is probably effected by some not fully comprehended technique of the Supreme Being.
-\vs p049 5:31 \ublistelem{6.}\bibnobreakspace \bibemph{Adjuster\hyp{}fusion series.} The spiritual classification or grouping of all mortals during their prefusion experience is wholly determined by the relation of the personality status to the indwelling Mystery Monitor. Almost 90\% of the inhabited worlds of Nebadon are peopled with Adjuster\hyp{}fusion mortals in contrast with a near\hyp{}by universe where scarcely more than one half of the worlds harbour beings who are Adjuster\hyp{}indwelt candidates for eternal fusion.
+\vs p049 5:31 \ublistelem{6.}\bibnobreakspace \bibemph{Adjuster\hyp{}fusion series.} The spiritual classification or grouping of all mortals during their prefusion experience is wholly determined by the relation of the personality status to the indwelling Mystery Monitor. Almost 90\% of the inhabited worlds of Nebadon are peopled with Adjuster\hyp{}fusion mortals in contrast with a near-by universe where scarcely more than one half of the worlds harbour beings who are Adjuster\hyp{}indwelt candidates for eternal fusion.
 \vs p049 5:32 \ublistelem{7.}\bibnobreakspace \bibemph{Techniques of terrestrial escape.} There is fundamentally only one way in which individual human life can be initiated on the inhabited worlds, and that is through creature procreation and natural birth; but there are numerous techniques whereby man escapes his terrestrial status and gains access to the inward moving stream of Paradise ascenders.
 \usection{Terrestrial Escape}
 \vs p049 6:1 All of the differing physical types and planetary series of mortals alike enjoy the ministry of Thought Adjusters, guardian angels, and the various orders of the messenger hosts of the Infinite Spirit. All alike are liberated from the bonds of flesh by the emancipation of natural death, and all alike go thence to the morontia worlds of spiritual evolution and mind progress.
