--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -53,7 +53,7 @@
 \vs p053 6:2 At the outbreak of rebellion on Jerusem the head of the seraphic hosts joined the Lucifer cause. This no doubt explains why such a large number of the fourth order, the system administrator seraphim, went astray. The seraphic leader was spiritually blinded by the brilliant personality of Lucifer; his charming ways fascinated the lower orders of celestial beings. They simply could not comprehend that it was possible for such a dazzling personality to go wrong.
 \vs p053 6:3 \pc Not long since, in describing the experiences associated with the onset of the Lucifer rebellion, Manotia said: “But my most exhilarating moment was the thrilling adventure connected with the Lucifer rebellion when, as second seraphic commander, I refused to participate in the projected insult to Michael; and the powerful rebels sought my destruction by means of the liaison forces they had arranged. There was a tremendous upheaval on Jerusem, but not a single loyal seraphim was harmed.
 \vs p053 6:4 “Upon the default of my immediate superior it devolved upon me to assume command of the angelic hosts of Jerusem as the titular director of the confused seraphic affairs of the system. I was morally upheld by the Melchizedeks, ably assisted by a majority of the Material Sons, deserted by a tremendous group of my own order, but magnificently supported by the ascendant mortals on Jerusem.
-\vs p053 6:5 “Having been automatically thrown out of the constellation circuits by the secession of Lucifer, we were dependent on the loyalty of our intelligence corps, who forwarded calls for help to Edentia from the near\hyp{}by system of Rantulia; and we found that the kingdom of order, the intellect of loyalty, and the spirit of truth were inherently triumphant over rebellion, self\hyp{}assertion, and so\hyp{}called personal liberty; we were able to carry on until the arrival of the new System Sovereign, the worthy successor of Lucifer. And immediately thereafter I was assigned to the corps of the Melchizedek receivership of Urantia, assuming jurisdiction over the loyal seraphic orders on the world of the traitorous Caligastia, who had proclaimed his sphere a member of the newly projected system of ‘liberated worlds and emancipated personalities’ proposed in the infamous Declaration of Liberty issued by Lucifer in his call to the ‘liberty\hyp{}loving, free\hyp{}thinking, and forward\hyp{}looking intelligences of the misruled and maladministered worlds of Satania.’”
+\vs p053 6:5 “Having been automatically thrown out of the constellation circuits by the secession of Lucifer, we were dependent on the loyalty of our intelligence corps, who forwarded calls for help to Edentia from the near-by system of Rantulia; and we found that the kingdom of order, the intellect of loyalty, and the spirit of truth were inherently triumphant over rebellion, self\hyp{}assertion, and so\hyp{}called personal liberty; we were able to carry on until the arrival of the new System Sovereign, the worthy successor of Lucifer. And immediately thereafter I was assigned to the corps of the Melchizedek receivership of Urantia, assuming jurisdiction over the loyal seraphic orders on the world of the traitorous Caligastia, who had proclaimed his sphere a member of the newly projected system of ‘liberated worlds and emancipated personalities’ proposed in the infamous Declaration of Liberty issued by Lucifer in his call to the ‘liberty\hyp{}loving, free\hyp{}thinking, and forward\hyp{}looking intelligences of the misruled and maladministered worlds of Satania.’”
 \vs p053 6:6 \pc This angel is still in service on Urantia, functioning as associate chief of seraphim.
 \usection{History of the Rebellion}
 \vs p053 7:1 The Lucifer rebellion was system wide. 37 seceding Planetary Princes swung their world administrations largely to the side of the archrebel. Only on Panoptia did the Planetary Prince fail to carry his people with him. On this world, under the guidance of the Melchizedeks, the people rallied to the support of Michael. Ellanora\fnst{Possibly derived from the Greek \textit{eleos} ``mercy'' and Hebrew \textit{nur} ``shining'', combined to give the meaning ``the one shining with mercy''.}, a young woman of that mortal realm, grasped the leadership of the human races, and not a single soul on that strife\hyp{}torn world enlisted under the Lucifer banner. And ever since have these loyal Panoptians served on the seventh Jerusem transition world as the caretakers and builders on the Father’s sphere and its surrounding seven detention worlds. The Panoptians not only act as the literal custodians of these worlds, but they also execute the personal orders of Michael for the embellishment of these spheres for some future and unknown use. They do this work as they tarry en route to Edentia.
