--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -20,17 +20,17 @@
 \vs p057 1:7 At about this time the narrative shifts to the functioning of the personalities of the superuniverse. In reality the story has its proper beginning at this point --- at just about the time the Paradise force organizers are preparing to withdraw, having made the space\hyp{}energy conditions ready for the action of the power directors and physical controllers of the superuniverse of Orvonton.
 \usection{The Primary Nebular Stage}
 \vs p057 2:1 All evolutionary material creations are born of circular and gaseous nebulae, and all such primary nebulae are circular throughout the early part of their gaseous existence. As they grow older, they usually become spiral, and when their function of sun formation has run its course, they often terminate as clusters of stars or as enormous suns surrounded by a varying number of planets, satellites, and smaller groups of matter in many ways resembling your own diminutive solar system.
-\vs p057 2:2 \pc \bibemph{800,000,000,000} years ago the Andronover creation was well established as one of the magnificent primary nebulae of Orvonton. As the astronomers of near\hyp{}by universes looked out upon this phenomenon of space, they saw very little to attract their attention. Gravity estimates made in adjacent creations indicated that space materializations were taking place in the Andronover regions, but that was all.
+\vs p057 2:2 \pc \bibemph{800,000,000,000} years ago the Andronover creation was well established as one of the magnificent primary nebulae of Orvonton. As the astronomers of near-by universes looked out upon this phenomenon of space, they saw very little to attract their attention. Gravity estimates made in adjacent creations indicated that space materializations were taking place in the Andronover regions, but that was all.
 \vs p057 2:3 \pc \bibemph{700,000,000,000} years ago the Andronover system was assuming gigantic proportions, and additional physical controllers were dispatched to nine surrounding material creations to afford support and supply co\hyp{}operation to the power centres of this new material system which was so rapidly evolving. At this distant date all of the material bequeathed to the subsequent creations was held within the confines of this gigantic space wheel, which continued ever to whirl and, after reaching its maximum of diameter, to whirl faster and faster as it continued to condense and contract.
 \vs p057 2:4 \pc \bibemph{600,000,000,000} years ago the height of the Andronover energy\hyp{}mobilization period was attained; the nebula had acquired its maximum of mass. At this time it was a gigantic circular gas cloud in shape somewhat like a flattened spheroid. This was the early period of differential mass formation and varying revolutionary velocity. Gravity and other influences were about to begin their work of converting space gases into organized matter.
 \usection{The Secondary Nebular Stage}
 \vs p057 3:1 The enormous nebula now began gradually to assume the spiral form and to become clearly visible to the astronomers of even distant universes. This is the natural history of most nebulae; before they begin to throw off suns and start upon the work of universe building, these secondary space nebulae are usually observed as \bibemph{spiral phenomena.}
-\vs p057 3:2 The near\hyp{}by star students of that faraway era, as they observed this metamorphosis of the Andronover nebula, saw exactly what XX century astronomers see when they turn their telescopes spaceward and view the present\hyp{}age spiral nebulae of adjacent outer space.
+\vs p057 3:2 The near-by star students of that faraway era, as they observed this metamorphosis of the Andronover nebula, saw exactly what XX century astronomers see when they turn their telescopes spaceward and view the present\hyp{}age spiral nebulae of adjacent outer space.
 \vs p057 3:3 About the time of the attainment of the maximum of mass, the gravity control of the gaseous content commenced to weaken, and there ensued the stage of gas escapement, the gas streaming forth as two gigantic and distinct arms, which took origin on opposite sides of the mother mass. The rapid revolutions of this enormous central core soon imparted a spiral appearance to these two projecting gas streams. The cooling and subsequent condensation of portions of these protruding arms eventually produced their knotted appearance. These denser portions were vast systems and subsystems of physical matter whirling through space in the midst of the gaseous cloud of the nebula while being held securely within the gravity grasp of the mother wheel.
 \vs p057 3:4 But the nebula had begun to contract, and the increase in the rate of revolution further lessened gravity control; and ere long, the outer gaseous regions began actually to escape from the immediate embrace of the nebular nucleus, passing out into space on circuits of irregular outline, returning to the nuclear regions to complete their circuits, and so on. But this was only a temporary stage of nebular progression. The ever\hyp{}increasing rate of whirling was soon to throw enormous suns off into space on independent circuits.
 \vs p057 3:5 And this is what happened in Andronover ages upon ages ago. The energy wheel grew and grew until it attained its maximum of expansion, and then, when contraction set in, it whirled on faster and faster until, eventually, the critical centrifugal stage was reached and the great breakup began.
 \vs p057 3:6 \pc \bibemph{500,000,000,000} years ago the first Andronover sun was born. This blazing streak broke away from the mother gravity grasp and tore out into space on an independent adventure in the cosmos of creation. Its orbit was determined by its path of escape. Such young suns quickly become spherical and start out on their long and eventful careers as the stars of space. Excepting terminal nebular nucleuses, the vast majority of Orvonton suns have had an analogous birth. These escaping suns pass through varied periods of evolution and subsequent universe service.
-\vs p057 3:7 \pc \bibemph{400,000,000,000} years ago began the recaptive period of the Andronover nebula. Many of the near\hyp{}by and smaller suns were recaptured as a result of the gradual enlargement and further condensation of the mother nucleus. Very soon there was inaugurated the terminal phase of nebular condensation, the period which always precedes the final segregation of these immense space aggregations of energy and matter.
+\vs p057 3:7 \pc \bibemph{400,000,000,000} years ago began the recaptive period of the Andronover nebula. Many of the near-by and smaller suns were recaptured as a result of the gradual enlargement and further condensation of the mother nucleus. Very soon there was inaugurated the terminal phase of nebular condensation, the period which always precedes the final segregation of these immense space aggregations of energy and matter.
 \vs p057 3:8 It was scarcely a million years subsequent to this epoch that Michael of Nebadon, a Creator Son of Paradise, selected this disintegrating nebula as the site of his adventure in universe building. Almost immediately the architectural worlds of Salvington and the 100 constellation headquarters groups of planets were begun. It required almost 1,000,000 years to complete these clusters of specially created worlds. The local system headquarters planets were constructed over a period extending from that time to about 5,000,000,000 years ago.
 \vs p057 3:9 \pc \bibemph{300,000,000,000} years ago the Andronover solar circuits were well established, and the nebular system was passing through a transient period of relative physical stability. About this time the staff of Michael arrived on Salvington, and the Uversa government of Orvonton extended physical recognition to the local universe of Nebadon.
 \vs p057 3:10 \pc \bibemph{200,000,000,000} years ago witnessed the progression of contraction and condensation with enormous heat generation in the Andronover central cluster, or nuclear mass. Relative space appeared even in the regions near the central mother\hyp{}sun wheel. The outer regions were becoming more stabilized and better organized; some planets revolving around the newborn suns had cooled sufficiently to be suitable for life implantation. The oldest inhabited planets of Nebadon date from these times.
@@ -47,7 +47,7 @@
 \vs p057 4:8 \pc \bibemph{6,000,000,000} years ago marks the end of the terminal breakup and the birth of your sun, the 56\ts{th} from the last of the Andronover second solar family. This final eruption of the nebular nucleus gave birth to 136,702 suns, most of them solitary orbs. The total number of suns and sun systems having origin in the Andronover nebula was 1,013,628. The number of the solar system sun is 1,013,572.
 \vs p057 4:9 And now the great Andronover nebula is no more, but it lives on in the many suns and their planetary families which originated in this mother cloud of space. The final nuclear remnant of this magnificent nebula still burns with a reddish glow and continues to give forth moderate light and heat to its remnant planetary family of 165 worlds, which now revolve about this venerable mother of two mighty generations of the monarchs of light.
 \usection{Origin of Monmatia --- The Urantia Solar System}
-\vs p057 5:1 \bibemph{5,000,000,000} years ago your sun was a comparatively isolated blazing orb, having gathered to itself most of the near\hyp{}by circulating matter of space, remnants of the recent upheaval which attended its own birth.
+\vs p057 5:1 \bibemph{5,000,000,000} years ago your sun was a comparatively isolated blazing orb, having gathered to itself most of the near-by circulating matter of space, remnants of the recent upheaval which attended its own birth.
 \vs p057 5:2 Today, your sun has achieved relative stability, but its 11½ year sunspot cycles betray that it was a variable star in its youth. In the early days of your sun the continued contraction and consequent gradual increase of temperature initiated tremendous convulsions on its surface. These titanic heaves required 3½ days to complete a cycle of varying brightness. This variable state, this periodic pulsation, rendered your sun highly responsive to certain outside influences which were to be shortly encountered.
 \vs p057 5:3 Thus was the stage of local space set for the unique origin of \bibemph{Monmatia,} that being the name of your sun’s planetary family, the solar system to which your world belongs. Less than 1\% of the planetary systems of Orvonton have had a similar origin.
 \vs p057 5:4 \pc \bibemph{4,500,000,000} years ago\fnst{The origin of the Solar System described here closely matches the one given by James Jeans in \cite{Jeans2}.} the enormous Angona system began its approach to the neighbourhood of this solitary sun. The centre of this great system was a dark giant of space, solid, highly charged, and possessing tremendous gravity pull.
@@ -57,7 +57,7 @@
 \vs p057 5:8 Although Angona succeeded in drawing away the ancestral material of the solar system planets and the enormous volume of matter now circulating about the sun as asteroids and meteors, it did not secure for itself any of this solar matter. The visiting system did not come quite close enough to actually steal any of the sun’s substance, but it did swing sufficiently close to draw off into the intervening space all of the material comprising the present\hyp{}day solar system.
 \vs p057 5:9 The five inner and five outer planets soon formed in miniature from the cooling and condensing nucleuses in the less massive and tapering ends of the gigantic gravity bulge which Angona had succeeded in detaching from the sun, while Saturn and Jupiter\index{Planets!Jupiter|(} were formed from the more massive and bulging central portions. The powerful gravity pull of Jupiter and Saturn early captured most of the material stolen from Angona as the retrograde motion\fnst{In Astronomy, this is the motion in a direction opposite to something else. The opposite is called ``prograde'' motion. All known planets of solar system revolve in orbit around the Sun in the ``prograde'' direction, i.e. in the same direction as the rotation of the Sun. Many (but not all) comets revolve on retrograde orbits.} of certain of their satellites bears witness.
 \vs p057 5:10 Jupiter and Saturn, being derived from the very centre of the enormous column of superheated solar gases, contained so much highly heated sun material that they shone with a brilliant light and emitted enormous volumes of heat; they were in reality secondary suns for a short period after their formation as separate space bodies. These two largest of the solar system planets have remained largely gaseous to this day, not even yet having cooled off to the point of complete condensation or solidification.
-\vs p057 5:11 The gas\hyp{}contraction nucleuses of the other ten planets soon reached the stage of solidification and so began to draw to themselves increasing quantities of the meteoric matter circulating in near\hyp{}by space. The worlds of the solar system thus had a double origin: nucleuses of gas condensation later on augmented by the capture of enormous quantities of meteors. Indeed they still continue to capture meteors, but in greatly lessened numbers.
+\vs p057 5:11 The gas\hyp{}contraction nucleuses of the other ten planets soon reached the stage of solidification and so began to draw to themselves increasing quantities of the meteoric matter circulating in near-by space. The worlds of the solar system thus had a double origin: nucleuses of gas condensation later on augmented by the capture of enormous quantities of meteors. Indeed they still continue to capture meteors, but in greatly lessened numbers.
 \vs p057 5:12 The planets do not swing around the sun in the equatorial plane of their solar mother, which they would do if they had been thrown off by solar revolution. Rather, they travel in the plane of the Angona solar extrusion, which existed at a considerable angle to the plane of the sun’s equator.
 \vs p057 5:13 \pc While Angona was unable to capture any of the solar mass, your sun did add to its metamorphosing planetary family some of the circulating space material of the visiting system. Due to the intense gravity field of Angona, its tributary planetary family pursued orbits of considerable distance from the dark giant; and shortly after the extrusion of the solar system ancestral mass and while Angona was yet in the vicinity of the sun, three of the major planets of the Angona system swung so near to the massive solar system ancestor that its gravitational pull, augmented by that of the sun, was sufficient to overbalance the gravity grasp of Angona and to permanently detach these three tributaries of the celestial wanderer.
 \vs p057 5:14 All of the solar system material derived from the sun was originally endowed with a homogeneous direction of orbital swing, and had it not been for the intrusion of these three foreign space bodies, all solar system material would still maintain the same direction of orbital movement. As it was, the impact of the three Angona tributaries injected new and foreign directional forces into the emerging solar system with the resultant appearance of \bibemph{retrograde motion.} Retrograde motion in any astronomic system is always accidental and always appears as a result of the collisional impact of foreign space bodies. Such collisions may not always produce retrograde motion, but no retrograde ever appears except in a system containing masses which have diverse origins.
@@ -66,7 +66,7 @@
 \vs p057 6:2 \pc The planets nearest the sun were the first to have their revolutions slowed down by tidal friction. Such gravitational influences also contribute to the stabilization of planetary orbits while acting as a brake on the rate of planetary\hyp{}axial revolution, causing a planet to revolve ever slower until axial revolution ceases, leaving one hemisphere of the planet always turned toward the sun or larger body, as is illustrated by the planet Mercury\index{Planets!Mercury} and by the moon, which always turns the same face toward Urantia\index{Planets!Urantia}.
 \vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days\fnst{Although the primary source of this information is the book \cite{Jeans1}, the author (Sir James Jeans) himself relies on the book \cite{Jeffreys1} by Sir Harold Jeffreys, where this calculation may be found in §14.52 on page 269.}. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
-\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter\fnst{That is \bibemph{Amalthea,} as the original text (\cite{Jeans1}, p.\,245) specifically says \bibemph{Jupiter's innermost satellite is already perilously near it}. At the time when Sir James Jeans wrote this, the innermost known sattelite was Amalthea. The present ratio of Amalthea's orbital radius to the Roche limit is indeed dangerously close: 1.75. The other close candidates are \bibemph{Metis,} \bibemph{Adrastea} and \bibemph{Thebe,} but they were discovered much later and so could not have been mentioned in the Revelation or its base source text \cite{Jeans1}.} is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named \bibemph{Phaeton} by the Soviet astronomer S.V.~Orlov in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own original model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.k
+\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near-by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter\fnst{That is \bibemph{Amalthea,} as the original text (\cite{Jeans1}, p.\,245) specifically says \bibemph{Jupiter's innermost satellite is already perilously near it}. At the time when Sir James Jeans wrote this, the innermost known sattelite was Amalthea. The present ratio of Amalthea's orbital radius to the Roche limit is indeed dangerously close: 1.75. The other close candidates are \bibemph{Metis,} \bibemph{Adrastea} and \bibemph{Thebe,} but they were discovered much later and so could not have been mentioned in the Revelation or its base source text \cite{Jeans1}.} is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named \bibemph{Phaeton} by the Soviet astronomer S.V.~Orlov in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own original model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.k
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter\index{Planets!Jupiter|)} and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
 \vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other ten planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
 \vs p057 6:8 \pc \bibemph{3,000,000,000} years ago the solar system was functioning much as it does today. Its members continued to grow in size as space meteors continued to pour in upon the planets and their satellites at a prodigious rate.
