--- a/tex/p063.tex
+++ b/tex/p063.tex
@@ -20,7 +20,7 @@
 \vs p063 2:2 And it was in this new home among the treetops, one night after they had been awakened by a violent storm, and as they held each other in fearful and fond embrace, that they finally and fully made up their minds to flee from the tribal habitat and the home treetops.
 \vs p063 2:3 They had already prepared a crude treetop retreat some half\hyp{}day’s journey to the north. This was their secret and safe hiding place for the first day away from the home forests. Notwithstanding that the twins shared the Primates’ deathly fear of being on the ground at nighttime, they sallied forth shortly before nightfall on their northern trek. While it required unusual courage for them to undertake this night journey, even with a full moon, they correctly concluded that they were less likely to be missed and pursued by their tribesmen and relatives. And they safely made their previously prepared rendezvous shortly after midnight.
 \vs p063 2:4 On their northward journey they discovered an exposed flint deposit and, finding many stones suitably shaped for various uses, gathered up a supply for the future. In attempting to chip these flints so that they would be better adapted for certain purposes, Andon discovered their sparking quality and conceived the idea of building fire. But the notion did not take firm hold of him at the time as the climate was still salubrious and there was little need of fire.
-\vs p063 2:5 But the autumn sun was getting lower in the sky, and as they journeyed northward, the nights grew cooler and cooler. Already they had been forced to make use of animal skins for warmth. Before they had been away from home one moon, Andon signified to his mate that he thought he could make fire with the flint. They tried for two months to utilize the flint spark for kindling a fire but only met with failure. Each day this couple would strike the flints and endeavour to ignite the wood. Finally, one evening about the time of the setting of the sun, the secret of the technique was unravelled when it occurred to Fonta to climb a near\hyp{}by tree to secure an abandoned bird’s nest. The nest was dry and highly inflammable and consequently flared right up into a full blaze the moment the spark fell upon it. They were so surprised and startled at their success that they almost lost the fire, but they saved it by the addition of suitable fuel, and then began the first search for firewood by the parents of all mankind.
+\vs p063 2:5 But the autumn sun was getting lower in the sky, and as they journeyed northward, the nights grew cooler and cooler. Already they had been forced to make use of animal skins for warmth. Before they had been away from home one moon, Andon signified to his mate that he thought he could make fire with the flint. They tried for two months to utilize the flint spark for kindling a fire but only met with failure. Each day this couple would strike the flints and endeavour to ignite the wood. Finally, one evening about the time of the setting of the sun, the secret of the technique was unravelled when it occurred to Fonta to climb a near-by tree to secure an abandoned bird’s nest. The nest was dry and highly inflammable and consequently flared right up into a full blaze the moment the spark fell upon it. They were so surprised and startled at their success that they almost lost the fire, but they saved it by the addition of suitable fuel, and then began the first search for firewood by the parents of all mankind.
 \vs p063 2:6 This was one of the most joyous moments in their short but eventful lives. All night long they sat up watching their fire burn, vaguely realizing that they had made a discovery which would make it possible for them to defy climate and thus forever to be independent of their animal relatives of the southern lands. After three days’ rest and enjoyment of the fire, they journeyed on.
 \vs p063 2:7 The Primates ancestors of Andon had often replenished fire which had been kindled by lightning, but never before had the creatures of earth possessed a method of starting fire at will. But it was a long time before the twins learned that dry moss and other materials would kindle fire just as well as birds’ nests.
 \usection{Andon’s Family}
