--- a/tex/p064.tex
+++ b/tex/p064.tex
@@ -93,7 +93,7 @@
 \vs p064 7:3 Between the times of the Planetary Prince and Adam, India became the home of the most cosmopolitan population ever to be found on the face of the earth. But it was unfortunate that this mixture came to contain so much of the green, orange, and indigo races. These secondary Sangik peoples found existence more easy and agreeable in the southlands, and many of them subsequently migrated to Africa. The primary Sangik peoples, the superior races, avoided the tropics, the red man going north\hyp{}east to Asia, closely followed by the yellow man, while the blue race moved north\hyp{}west into Europe.
 \vs p064 7:4 The red men early began to migrate to the north\hyp{}east, on the heels of the retreating ice, passing around the highlands of India and occupying all of north\hyp{}eastern Asia. They were closely followed by the yellow tribes, who subsequently drove them out of Asia into North America.
 \vs p064 7:5 When the relatively pure\hyp{}line remnants of the red race forsook Asia, there were eleven tribes, and they numbered a little over 7,000 men, women, and children. These tribes were accompanied by three small groups of mixed ancestry, the largest of these being a combination of the orange and blue races. These three groups never fully fraternized with the red man and early journeyed southward to Mexico and Central America, where they were later joined by a small group of mixed yellows and reds. These peoples all intermarried and founded a new and amalgamated race, one which was much less warlike than the pure\hyp{}line red men. Within 5,000 years this amalgamated race broke up into three groups, establishing the civilizations respectively of Mexico, Central America, and South America. The South American offshoot did receive a faint touch of the blood of Adam.
-\vs p064 7:6 To a certain extent the early red and yellow men mingled in Asia, and the offspring of this union journeyed on to the east and along the southern seacoast and, eventually, were driven by the rapidly increasing yellow race onto the peninsulas and near\hyp{}by islands of the sea. They are the present\hyp{}day brown men.
+\vs p064 7:6 To a certain extent the early red and yellow men mingled in Asia, and the offspring of this union journeyed on to the east and along the southern seacoast and, eventually, were driven by the rapidly increasing yellow race onto the peninsulas and near-by islands of the sea. They are the present\hyp{}day brown men.
 \vs p064 7:7 The yellow race has continued to occupy the central regions of eastern Asia. Of all the six coloured races they have survived in greatest numbers. While the yellow men now and then engaged in racial war, they did not carry on such incessant and relentless wars of extermination as were waged by the red, green, and orange men. These three races virtually destroyed themselves before they were finally all but annihilated by their enemies of other races.
 \vs p064 7:8 Since the fifth glacier did not extend so far south in Europe, the way was partially open for these Sangik peoples to migrate to the north\hyp{}west; and upon the retreat of the ice the blue men, together with a few other small racial groups, migrated westward along the old trails of the Andon tribes. They invaded Europe in successive waves, occupying most of the continent.
 \vs p064 7:9 In Europe they soon encountered the Neanderthal descendants of their early and common ancestor, Andon. These older European Neanderthalers had been driven south and east by the glacier and thus were in position quickly to encounter and absorb their invading cousins of the Sangik tribes.
