--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -33,7 +33,7 @@
 \vs p066 3:4 The city was laid out in ten subdivisions with the headquarters mansions of the ten councils of the corporeal staff situated at the centres of these subdivisions. Centremost in the city was the temple of the unseen Father. The administrative headquarters of the Prince and his associates was arranged in twelve chambers immediately grouped about the temple itself.
 \vs p066 3:5 The buildings of Dalamatia were all one story except the council headquarters, which were two stories, and the central temple of the Father of all, which was small but three stories in height.
 \vs p066 3:6 The city represented the best practices of those early days in building material --- brick. Very little stone or wood was used. Home building and village architecture among the surrounding peoples were greatly improved by the Dalamatian example.
-\vs p066 3:7 \pc Near the Prince’s headquarters there dwelt all colours and strata of human beings. And it was from these near\hyp{}by tribes that the first students of the Prince’s schools were recruited. Although these early schools of Dalamatia were crude, they provided all that could be done for the men and women of that primitive age.
+\vs p066 3:7 \pc Near the Prince’s headquarters there dwelt all colours and strata of human beings. And it was from these near-by tribes that the first students of the Prince’s schools were recruited. Although these early schools of Dalamatia were crude, they provided all that could be done for the men and women of that primitive age.
 \vs p066 3:8 The Prince’s corporeal staff continuously gathered about them the superior individuals of the surrounding tribes and, after training and inspiring these students, sent them back as teachers and leaders of their respective peoples.
 \usection{Early Days of the One Hundred}
 \vs p066 4:1 The arrival of the Prince’s staff created a profound impression. While it required almost a thousand years for the news to spread abroad, those tribes near the Mesopotamian headquarters were tremendously influenced by the teachings and conduct of the 100 new sojourners on Urantia. And much of your subsequent mythology grew out of the garbled legends of these early days when these members of the Prince’s staff were repersonalized on Urantia as supermen.
