--- a/tex/p075.tex
+++ b/tex/p075.tex
@@ -29,7 +29,7 @@
 \vs p075 3:4 \pc Presently, Serapatatia became the associate chairman of the Edenic commission on tribal relations, and many plans were laid for the more vigorous prosecution of the work of winning the remote tribes to the cause of the Garden.
 \vs p075 3:5 He held many conferences with Adam and Eve --- especially with Eve --- and they talked over many plans for improving their methods. One day, during a talk with Eve, it occurred to Serapatatia that it would be very helpful if, while awaiting the recruiting of large numbers of the violet race, something could be done in the meantime immediately to advance the needy waiting tribes. Serapatatia contended that, if the Nodites, as the most progressive and co\hyp{}operative race, could have a leader born to them of part origin in the violet stock, it would constitute a powerful tie binding these peoples more closely to the Garden. And all of this was soberly and honestly considered to be for the good of the world since this child, to be reared and educated in the Garden, would exert a great influence for good over his father’s people.
 \vs p075 3:6 It should again be emphasized that Serapatatia was altogether honest and wholly sincere in all that he proposed. He never once suspected that he was playing into the hands of Caligastia and Daligastia. Serapatatia was entirely loyal to the plan of building up a strong reserve of the violet race before attempting the world\hyp{}wide upstepping of the confused peoples of Urantia. But this would require hundreds of years to consummate, and he was impatient; he wanted to see some immediate results --- something in his own lifetime. He made it clear to Eve that Adam was oftentimes discouraged by the little that had been accomplished toward uplifting the world.
-\vs p075 3:7 \pc For more than five years these plans were secretly matured. At last they had developed to the point where Eve consented to have a secret conference with Cano, the most brilliant mind and active leader of the near\hyp{}by colony of friendly Nodites. Cano was very sympathetic with the Adamic regime; in fact, he was the sincere spiritual leader of those neighbouring Nodites who favoured friendly relations with the Garden.
+\vs p075 3:7 \pc For more than five years these plans were secretly matured. At last they had developed to the point where Eve consented to have a secret conference with Cano, the most brilliant mind and active leader of the near-by colony of friendly Nodites. Cano was very sympathetic with the Adamic regime; in fact, he was the sincere spiritual leader of those neighbouring Nodites who favoured friendly relations with the Garden.
 \vs p075 3:8 The fateful meeting occurred during the twilight hours of the autumn evening, not far from the home of Adam. Eve had never before met the beautiful and enthusiastic Cano --- and he was a magnificent specimen of the survival of the superior physique and outstanding intellect of his remote progenitors of the Prince’s staff. And Cano also thoroughly believed in the righteousness of the Serapatatia project. (Outside of the Garden, multiple mating was a common practice.)
 \vs p075 3:9 Influenced by flattery, enthusiasm, and great personal persuasion, Eve then and there consented to embark upon the much\hyp{}discussed enterprise, to add her own little scheme of world saving to the larger and more far\hyp{}reaching divine plan. Before she quite realized what was transpiring, the fatal step had been taken. It was done.
 \usection{The Realization of Default}
@@ -44,7 +44,7 @@
 \usection{Repercussions of Default}
 \vs p075 5:1 Eve’s disillusionment was truly pathetic. Adam discerned the whole predicament and, while heartbroken and dejected, entertained only pity and sympathy for his erring mate.
 \vs p075 5:2 It was in the despair of the realization of failure that Adam, the day after Eve’s misstep, sought out Laotta, the brilliant Nodite woman who was head of the western schools of the Garden, and with premeditation committed the folly of Eve. But do not misunderstand; Adam was not beguiled; he knew exactly what he was about; he deliberately chose to share the fate of Eve. He loved his mate with a supermortal affection, and the thought of the possibility of a lonely vigil on Urantia without her was more than he could endure.
-\vs p075 5:3 When they learned what had happened to Eve, the infuriated inhabitants of the Garden became unmanageable; they declared war on the near\hyp{}by Nodite settlement. They swept out through the gates of Eden and down upon these unprepared people, utterly destroying them --- not a man, woman, or child was spared. And Cano, the father of Cain yet unborn, also perished.
+\vs p075 5:3 When they learned what had happened to Eve, the infuriated inhabitants of the Garden became unmanageable; they declared war on the near-by Nodite settlement. They swept out through the gates of Eden and down upon these unprepared people, utterly destroying them --- not a man, woman, or child was spared. And Cano, the father of Cain yet unborn, also perished.
 \vs p075 5:4 Upon the realization of what had happened, Serapatatia was overcome with consternation and beside himself with fear and remorse. The next day he drowned himself in the great river.
 \vs p075 5:5 The children of Adam sought to comfort their distracted mother while their father wandered in solitude for 30 days. At the end of that time judgment asserted itself, and Adam returned to his home and began to plan for their future course of action.
 \vs p075 5:6 The consequences of the follies of misguided parents are so often shared by their innocent children. The upright and noble sons and daughters of Adam and Eve were overwhelmed by the inexplicable sorrow of the unbelievable tragedy which had been so suddenly and so ruthlessly thrust upon them. Not in 50 years did the older of these children recover from the sorrow and sadness of those tragic days, especially the terror of that period of 30 days during which their father was absent from home while their distracted mother was in complete ignorance of his whereabouts or fate.
