--- a/tex/p078.tex
+++ b/tex/p078.tex
@@ -38,7 +38,7 @@
 \vs p078 3:5 \pc As the period of the early Adamic migrations ended, about 15,000\,B.C., there were already more descendants of Adam in Europe and central Asia than anywhere else in the world, even than in Mesopotamia. The European blue races had been largely infiltrated. The lands now called Russia and Turkestan were occupied throughout their southern stretches by a great reservoir of the Adamites mixed with Nodites, Andonites, and red and yellow Sangiks. Southern Europe and the Mediterranean fringe were occupied by a mixed race of Andonite and Sangik peoples --- orange, green, and indigo --- with a sprinkling of the Adamite stock. Asia Minor and the central\hyp{}eastern European lands were held by tribes that were predominantly Andonite.
 \vs p078 3:6 A blended coloured race, about this time greatly reinforced by arrivals from Mesopotamia, held forth in Egypt and prepared to take over the disappearing culture of the Euphrates valley. The black peoples were moving farther south in Africa and, like the red race, were virtually isolated.
 \vs p078 3:7 The Saharan civilization had been disrupted by drought and that of the Mediterranean basin by flood. The blue races had, as yet, failed to develop an advanced culture. The Andonites were still scattered over the Arctic and central Asian regions. The green and orange races had been exterminated as such. The indigo race was moving south in Africa, there to begin its slow but long\hyp{}continued racial deterioration.
-\vs p078 3:8 The peoples of India lay stagnant, with a civilization that was unprogressing; the yellow man was consolidating his holdings in central Asia; the brown man had not yet begun his civilization on the near\hyp{}by islands of the Pacific.
+\vs p078 3:8 The peoples of India lay stagnant, with a civilization that was unprogressing; the yellow man was consolidating his holdings in central Asia; the brown man had not yet begun his civilization on the near-by islands of the Pacific.
 \vs p078 3:9 \pc These racial distributions, associated with extensive climatic changes, set the world stage for the inauguration of the Andite era of Urantia civilization. These early migrations extended over a period of 10,000 years, from 25,000 to 15,000\,B.C. The later or Andite migrations extended from about 15,000 to 6000\,B.C.
 \vs p078 3:10 It took so long for the earlier waves of Adamites to pass over Eurasia that their culture was largely lost in transit. Only the later Andites moved with sufficient speed to retain the Edenic culture at any great distance from Mesopotamia.
 \usection{The Andites}
