--- a/tex/p091.tex
+++ b/tex/p091.tex
@@ -37,7 +37,7 @@
 \vs p091 3:4 The simple prayer of faith evidences a mighty evolution in human experience where\-by the ancient conversations with the fictitious symbol of the alter ego of primitive religion have become exalted to the level of communion with the spirit of the Infinite and to that of a bona fide consciousness of the reality of the eternal God and Paradise Father of all intelligent creation.
 \vs p091 3:5 Aside from all that is superself in the experience of praying, it should be remembered that ethical prayer is a splendid way to elevate one’s ego and reinforce the self for better living and higher attainment. Prayer induces the human ego to look both ways for help: for material aid to the subconscious reservoir of mortal experience, for inspiration and guidance to the superconscious borders of the contact of the material with the spiritual, with the Mystery Monitor.
 \vs p091 3:6 Prayer ever has been and ever will be a twofold human experience: a psychologic procedure interassociated with a spiritual technique. And these two functions of prayer can never be fully separated.
-\vs p091 3:7 Enlightened prayer must recognize not only an external and personal God but also an internal and impersonal Divinity, the indwelling Adjuster. It is altogether fitting that man, when he prays, should strive to grasp the concept of the Universal Father on Paradise; but the more effective technique for most practical purposes will be to revert to the concept of a near\hyp{}by alter ego, just as the primitive mind was wont to do, and then to recognize that the idea of this alter ego has evolved from a mere fiction to the truth of God’s indwelling mortal man in the factual presence of the Adjuster so that man can talk face to face, as it were, with a real and genuine and divine alter ego that indwells him and is the very presence and essence of the living God, the Universal Father.
+\vs p091 3:7 Enlightened prayer must recognize not only an external and personal God but also an internal and impersonal Divinity, the indwelling Adjuster. It is altogether fitting that man, when he prays, should strive to grasp the concept of the Universal Father on Paradise; but the more effective technique for most practical purposes will be to revert to the concept of a near-by alter ego, just as the primitive mind was wont to do, and then to recognize that the idea of this alter ego has evolved from a mere fiction to the truth of God’s indwelling mortal man in the factual presence of the Adjuster so that man can talk face to face, as it were, with a real and genuine and divine alter ego that indwells him and is the very presence and essence of the living God, the Universal Father.
 \usection{Ethical Praying}
 \vs p091 4:1 No prayer can be ethical when the petitioner seeks for selfish advantage over his fellows. Selfish and materialistic praying is incompatible with the ethical religions which are predicated on unselfish and divine love. All such unethical praying reverts to the primitive levels of pseudo magic and is unworthy of advancing civilizations and enlightened religions. Selfish praying transgresses the spirit of all ethics founded on loving justice.
 \vs p091 4:2 Prayer must never be so prostituted as to become a substitute for action. All ethical prayer is a stimulus to action and a guide to the progressive striving for idealistic goals of superself\hyp{}attainment.
