--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -45,11 +45,11 @@
 \vs p122 5:6 Had Joseph lived, he undoubtedly would have become a firm believer in the divine mission of his eldest son. Mary alternated between believing and doubting, being greatly influenced by the position taken by her other children and by her friends and relatives, but always was she steadied in her final attitude by the memory of Gabriel’s appearance to her immediately after\fnst{Note that Gabriel's appearance had taken place \bibemph{after} the conception, to allow for freedom of will of both parents, but it happened \bibemph{immediately} after the conception in order to prevent any danger to this child of destiny.} the child was conceived.
 \vs p122 5:7 Mary was an expert weaver and more than averagely skilled in most of the household arts of that day; she was a good housekeeper and a superior homemaker. Both Joseph and Mary were good teachers, and they saw to it that their children were well versed in the learning of that day.
 \vs p122 5:8 \pc When Joseph was a young man, he was employed by Mary’s father in the work of building an addition to his house, and it was when Mary brought Joseph a cup of water, during a noontime meal, that the courtship of the pair who were destined to become the parents of Jesus really began.
-\vs p122 5:9 Joseph and Mary were married, in accordance with Jewish custom, at Mary’s home in the environs of Nazareth when Joseph was 21 years old. This marriage concluded a normal courtship of almost two years’ duration. Shortly thereafter they moved into their new home in Nazareth, which had been built by Joseph with the assistance of two of his brothers. The house was located near the foot of the near\hyp{}by elevated land which so charmingly overlooked the surrounding countryside. In this home, especially prepared, these young and expectant parents had thought to welcome the child of promise, little realizing that this momentous event of a universe was to transpire while they would be absent from home in Bethlehem of Judea.
+\vs p122 5:9 Joseph and Mary were married, in accordance with Jewish custom, at Mary’s home in the environs of Nazareth when Joseph was 21 years old. This marriage concluded a normal courtship of almost two years’ duration. Shortly thereafter they moved into their new home in Nazareth, which had been built by Joseph with the assistance of two of his brothers. The house was located near the foot of the near-by elevated land which so charmingly overlooked the surrounding countryside. In this home, especially prepared, these young and expectant parents had thought to welcome the child of promise, little realizing that this momentous event of a universe was to transpire while they would be absent from home in Bethlehem of Judea.
 \vs p122 5:10 \pc The larger part of Joseph’s family became believers in the teachings of Jesus, but very few of Mary’s people ever believed in him until after he departed from this world. Joseph leaned more toward the spiritual concept of the expected Messiah, but Mary and her family, especially her father, held to the idea of the Messiah as a temporal deliverer and political ruler. Mary’s ancestors had been prominently identified with the Maccabean activities of the then but recent times.
 \vs p122 5:11 Joseph held vigorously to the Eastern, or Babylonian, views of the Jewish religion; Mary leaned strongly toward the more liberal and broader Western, or Hellenistic, interpretation of the law and the prophets.
 \usection{The Home at Nazareth}
-\vs p122 6:1 The home of Jesus was not far from the high hill in the northerly part of Nazareth, some distance from the village spring, which was in the eastern section of the town. Jesus’ family dwelt in the outskirts of the city, and this made it all the easier for him subsequently to enjoy frequent strolls in the country and to make trips up to the top of this near\hyp{}by highland, the highest of all the hills of southern Galilee save the Mount Tabor range to the east and the hill of Nain, which was about the same height. Their home was located a little to the south and east of the southern promontory of this hill and about midway between the base of this elevation and the road leading out of Nazareth toward Cana. Aside from climbing the hill, Jesus’ favourite stroll was to follow a narrow trail winding about the base of the hill in a north\hyp{}easterly direction to a point where it joined the road to Sepphoris.
+\vs p122 6:1 The home of Jesus was not far from the high hill in the northerly part of Nazareth, some distance from the village spring, which was in the eastern section of the town. Jesus’ family dwelt in the outskirts of the city, and this made it all the easier for him subsequently to enjoy frequent strolls in the country and to make trips up to the top of this near-by highland, the highest of all the hills of southern Galilee save the Mount Tabor range to the east and the hill of Nain, which was about the same height. Their home was located a little to the south and east of the southern promontory of this hill and about midway between the base of this elevation and the road leading out of Nazareth toward Cana. Aside from climbing the hill, Jesus’ favourite stroll was to follow a narrow trail winding about the base of the hill in a north\hyp{}easterly direction to a point where it joined the road to Sepphoris.
 \vs p122 6:2 The home of Joseph and Mary was a one\hyp{}room stone structure with a flat roof and an adjoining building for housing the animals. The furniture consisted of a low stone table, earthenware and stone dishes and pots, a loom, a lampstand, several small stools, and mats for sleeping on the stone floor. In the back yard, near the animal annex, was the shelter which covered the oven and the mill for grinding grain. It required two persons to operate this type of mill, one to grind and another to feed the grain. As a small boy Jesus often fed grain to this mill while his mother turned the grinder.
 \vs p122 6:3 In later years, as the family grew in size, they would all squat about the enlarged stone table to enjoy their meals, helping themselves from a common dish, or pot, of food. During the winter, at the evening meal the table would be lighted by a small, flat clay lamp, which was filled with olive oil. After the birth of Martha, Joseph built an addition to this house, a large room, which was used as a carpenter shop during the day and as a sleeping room at night.
 \usection{The Trip to Bethlehem}
@@ -62,7 +62,7 @@
 \vs p122 7:7 The inn was overcrowded, and Joseph accordingly sought lodgings with distant relatives, but every room in Bethlehem was filled to overflowing. On returning to the courtyard of the inn, he was informed that the caravan stables, hewn out of the side of the rock and situated just below the inn, had been cleared of animals and cleaned up for the reception of lodgers. Leaving the donkey in the courtyard, Joseph shouldered their bags of clothing and provisions and with Mary descended the stone steps to their lodgings below. They found themselves located in what had been a grain storage room to the front of the stalls and mangers. Tent curtains had been hung, and they counted themselves fortunate to have such comfortable quarters.
 \vs p122 7:8 Joseph had thought to go out at once and enrol, but Mary was weary; she was considerably distressed and besought him to remain by her side, which he did.
 \usection{The Birth of Jesus}
-\vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near\hyp{}by manger.
+\vs p122 8:1 All that night Mary was restless so that neither of them slept much. By the break of day the pangs of childbirth were well in evidence, and at noon, August 21, 7\,B.C., with the help and kind ministrations of women fellow travellers, Mary was delivered of a male child. Jesus of Nazareth was born into the world, was wrapped in the clothes which Mary had brought along for such a possible contingency, and laid in a near-by manger.
 \vs p122 8:2 In just the same manner as all babies before that day and since have come into the world, the promised child was born; and on the eighth day, according to the Jewish practice, he was circumcised and formally named Joshua (Jesus).
 \vs p122 8:3 The next day after the birth of Jesus, Joseph made his enrolment. Meeting a man they had talked with two nights previously at Jericho, Joseph was taken by him to a well\hyp{}to\hyp{}do friend who had a room at the inn, and who said he would gladly exchange quarters with the Nazareth couple. That afternoon they moved up to the inn, where they lived for almost three weeks until they found lodgings in the home of a distant relative of Joseph.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=0.85\columnwidth]{images/Son-of-Man-Son-of-God.jpg}\caption{Son of Man, Son of God by Jeremy Winborg}\end{figure}}
 \vs p122 8:4 The second day after the birth of Jesus, Mary sent word to Elizabeth that her child had come and received word in return inviting Joseph up to Jerusalem to talk over all their affairs with Zacharias. The following week Joseph went to Jerusalem to confer with Zacharias. Both Zacharias and Elizabeth had become possessed with the sincere conviction that Jesus was indeed to become the Jewish deliverer, the Messiah, and that their son John was to be his chief of aides, his right\hyp{}hand man of destiny. And since Mary held these same ideas, it was not difficult to prevail upon Joseph to remain in Bethlehem, the City of David, so that Jesus might grow up to become the successor of David on the throne of all Israel. Accordingly, they remained in Bethlehem more than a year, Joseph meantime working some at his carpenter’s trade.
