--- a/tex/p133.tex
+++ b/tex/p133.tex
@@ -75,7 +75,7 @@
 \vs p133 6:7 \textcolour{ubdarkred}{“The human soul, when matured, ennobled, and spiritualized, approaches the heavenly status in that it comes near to being an entity intervening between the material and the spiritual, the material self and the divine spirit. The evolving soul of a human being is difficult of description and more difficult of demonstration because it is not discoverable by the methods of either material investigation or spiritual proving. Material science cannot demonstrate the existence of a soul, neither can pure spirit\hyp{}testing. Notwithstanding the failure of both material science and spiritual standards to discover the existence of the human soul, every morally conscious mortal \bibemph{knows} of the existence of \bibemph{his} soul as a \bibemph{real} and actual personal experience.”}
 \usection{The Sojourn at Cyprus --- Discourse on Mind}
 \vs p133 7:1 Shortly the travellers set sail for Cyprus, stopping at Rhodes. They enjoyed the long water voyage and arrived at their island destination much rested in body and refreshed in spirit.
-\vs p133 7:2 It was their plan to enjoy a period of real rest and play on this visit to Cyprus as their tour of the Mediterranean was drawing to a close. They landed at Paphos and at once began the assembly of supplies for their sojourn of several weeks in the near\hyp{}by mountains. On the third day after their arrival they started for the hills with their well\hyp{}loaded pack animals.
+\vs p133 7:2 It was their plan to enjoy a period of real rest and play on this visit to Cyprus as their tour of the Mediterranean was drawing to a close. They landed at Paphos and at once began the assembly of supplies for their sojourn of several weeks in the near-by mountains. On the third day after their arrival they started for the hills with their well\hyp{}loaded pack animals.
 \vs p133 7:3 For two weeks the trio greatly enjoyed themselves, and then, without warning, young Ganid was suddenly taken grievously ill. For two weeks he suffered from a raging fever, oftentimes becoming delirious; both Jesus and Gonod were kept busy attending the sick boy. Jesus skillfully and tenderly cared for the lad, and the father was amazed by both the gentleness and adeptness manifested in all his ministry to the afflicted youth. They were far from human habitations, and the boy was too ill to be moved; so they prepared as best they could to nurse him back to health right there in the mountains.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Tender-Loving-Care.jpg}\caption{Tender Loving Care by Slawa Radziszewska}\end{figure}}
 \vs p133 7:4 During Ganid’s convalescence of three weeks Jesus told him many interesting things about nature and her various moods. And what fun they had as they wandered over the mountains, the boy asking questions, Jesus answering them, and the father marvelling at the whole performance.
 \vs p133 7:5 The last week of their sojourn in the mountains Jesus and Ganid had a long talk on the functions of the human mind. After several hours of discussion the lad asked this question: “But, Teacher, what do you mean when you say that man experiences a higher form of self\hyp{}consciousness than do the higher animals?” And as restated in modern phraseology, Jesus answered:
