--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -102,7 +102,7 @@
 \vs p134 8:10 At the end of this sojourn on the mountain, as Jesus was making his descent, he met Tiglath coming up to the rendezvous with food. Turning him back, he said only: \textcolour{ubdarkred}{“The period of rest is over; I must return to my Father’s business.”} He was a silent and much changed man as they journeyed back to Dan, where he took leave of the lad, giving him the donkey. He then proceeded south by the same way he had come, to Capernaum.
 \usection{The Time of Waiting}
 \vs p134 9:1 It was now near the end of the summer, about the time of the day of atonement and the feast of tabernacles. Jesus had a family meeting in Capernaum over the Sabbath and the next day started for Jerusalem with John the son of Zebedee, going to the east of the lake and by Gerasa and on down the Jordan valley. While he visited some with his companion on the way, John noted a great change in Jesus.
-\vs p134 9:2 Jesus and John stopped overnight at Bethany with Lazarus and his sisters, going early the next morning to Jerusalem. They spent almost three weeks in and around the city, at least John did. Many days John went into Jerusalem alone while Jesus walked about over the near\hyp{}by hills and engaged in many seasons of spiritual communion with his Father in heaven.
+\vs p134 9:2 Jesus and John stopped overnight at Bethany with Lazarus and his sisters, going early the next morning to Jerusalem. They spent almost three weeks in and around the city, at least John did. Many days John went into Jerusalem alone while Jesus walked about over the near-by hills and engaged in many seasons of spiritual communion with his Father in heaven.
 \vs p134 9:3 Both of them were present at the solemn services of the day of atonement. John was much impressed by the ceremonies of this day of all days in the Jewish religious ritual, but Jesus remained a thoughtful and silent spectator. To the Son of Man this performance was pitiful and pathetic. He viewed it all as misrepresentative of the character and attributes of his Father in heaven. He looked upon the doings of this day as a travesty upon the facts of divine justice and the truths of infinite mercy. He burned to give vent to the declaration of the real truth about his Father’s loving character and merciful conduct in the universe, but his faithful Monitor admonished him that his hour had not yet come. But that night, at Bethany, Jesus did drop numerous remarks which greatly disturbed John; and John never fully understood the real significance of what Jesus said in their hearing that evening.
 \vs p134 9:4 Jesus planned to remain throughout the week of the feast of tabernacles with John. This feast was the annual holiday of all Palestine; it was the Jewish vacation time. Although Jesus did not participate in the merriment of the occasion, it was evident that he derived pleasure and experienced satisfaction as he beheld the light\hyp{}hearted and joyous abandon of the young and the old.
 \vs p134 9:5 In the midst of the week of celebration and ere the festivities were finished, Jesus took leave of John, saying that he desired to retire to the hills where he might the better commune with his Paradise Father. John would have gone with him, but Jesus insisted that he stay through the festivities, saying: \textcolour{ubdarkred}{“It is not required of you to bear the burden of the Son of Man; only the watchman must keep vigil while the city sleeps in peace.”} Jesus did not return to Jerusalem. After almost a week alone in the hills near Bethany, he departed for Capernaum. On the way home he spent a day and a night alone on the slopes of Gilboa, near where King Saul had taken his life; and when he arrived at Capernaum, he seemed more cheerful than when he had left John in Jerusalem.
