--- a/tex/p136.tex
+++ b/tex/p136.tex
@@ -23,7 +23,7 @@
 \vs p136 2:1 Jesus was baptized at the very height of John’s preaching when Palestine was aflame with the expectancy of his message --- “the kingdom of God is at hand” --- when all Jewry was engaged in serious and solemn self\hyp{}examination. The Jewish sense of racial solidarity was very profound. The Jews not only believed that the sins of the father might afflict his children, but they firmly believed that the sin of one individual might curse the nation. Accordingly, not all who submitted to John’s baptism regarded themselves as being guilty of the specific sins which John denounced. Many devout souls were baptized by John for the good of Israel. They feared lest some sin of ignorance on their part might delay the coming of the Messiah. They felt themselves to belong to a guilty and sin\hyp{}cursed nation, and they presented themselves for baptism that they might by so doing manifest fruits of race penitence. It is therefore evident that Jesus in no sense received John’s baptism as a rite of repentance or for the remission of sins. In accepting baptism at the hands of John, Jesus was only following the example of many pious Israelites.
 \vs p136 2:2 \pc When Jesus of Nazareth went down into the Jordan to be baptized, he was a mortal of the realm who had attained the pinnacle of human evolutionary ascension in all matters related to the conquest of mind and to self\hyp{}identification with the spirit. He stood in the Jordan that day a perfected mortal of the evolutionary worlds of time and space. Perfect synchrony and full communication had become established between the mortal mind of Jesus and the indwelling spirit Adjuster, the divine gift of his Father in Paradise. And just such an Adjuster indwells all normal beings living on Urantia since the ascension of Michael to the headship of his universe, except that Jesus’ Adjuster had been previously prepared for this special mission by similarly indwelling another superhuman incarnated in the likeness of mortal flesh, Machiventa Melchizedek.
 \vs p136 2:3 Ordinarily, when a mortal of the realm attains such high levels of personality perfection, there occur those preliminary phenomena of spiritual elevation which terminate in eventual fusion of the matured soul of the mortal with its associated divine Adjuster. And such a change was apparently due to take place in the personality experience of Jesus of Nazareth on that very day when he went down into the Jordan with his two brothers to be baptized by John. This ceremony was the final act of his purely human life on Urantia, and many superhuman observers expected to witness the fusion of the Adjuster with its indwelt mind, but they were all destined to suffer disappointment. Something new and even greater occurred. As John laid his hands upon Jesus to baptize him, the indwelling Adjuster took final leave of the perfected human soul of Joshua ben Joseph. And in a few moments this divine entity returned from Divinington as a Personalized Adjuster and chief of his kind throughout the entire local universe of Nebadon. Thus did Jesus observe his own former divine spirit descending on its return to him in personalized form. And he heard this same spirit of Paradise origin now speak, saying, “This is my beloved Son in whom I am well pleased.” And John, with Jesus’ two brothers, also heard these words. John’s disciples, standing by the water’s edge, did not hear these words, neither did they see the apparition of the Personalized Adjuster. Only the eyes of Jesus beheld the Personalized Adjuster.
-\vs p136 2:4 \pc When the returned and now exalted Personalized Adjuster had thus spoken, all was silence. And while the four of them tarried in the water, Jesus, looking up to the near\hyp{}by Adjuster, prayed: \textcolour{ubdarkred}{“My Father who reigns in heaven, hallowed be your name. Your kingdom come! Your will be done on earth, even as it is in heaven.”} When he had prayed, the “heavens were opened,” and the Son of Man saw the vision, presented by the now Personalized Adjuster, of himself as a Son of God as he was before he came to earth in the likeness of mortal flesh, and as he would be when the incarnated life should be finished. This heavenly vision was seen only by Jesus.
+\vs p136 2:4 \pc When the returned and now exalted Personalized Adjuster had thus spoken, all was silence. And while the four of them tarried in the water, Jesus, looking up to the near-by Adjuster, prayed: \textcolour{ubdarkred}{“My Father who reigns in heaven, hallowed be your name. Your kingdom come! Your will be done on earth, even as it is in heaven.”} When he had prayed, the “heavens were opened,” and the Son of Man saw the vision, presented by the now Personalized Adjuster, of himself as a Son of God as he was before he came to earth in the likeness of mortal flesh, and as he would be when the incarnated life should be finished. This heavenly vision was seen only by Jesus.
 \vs p136 2:5 It was the voice of the Personalized Adjuster that John and Jesus heard, speaking in behalf of the Universal Father, for the Adjuster is of, and as, the Paradise Father. Throughout the remainder of Jesus’ earth life this Personalized Adjuster was associated with him in all his labours; Jesus was in constant communion with this exalted Adjuster.
 \vs p136 2:6 \pc When Jesus was baptized, he repented of no misdeeds; he made no confession of sin. His was the baptism of consecration to the performance of the will of the heavenly Father. At his baptism he heard the unmistakable call of his Father, the final summons to be about his Father’s business, and he went away into private seclusion for 40 days to think over these manifold problems. In thus retiring for a season from active personality contact with his earthly associates, Jesus, as he was and on Urantia, was following the very procedure that obtains on the morontia worlds whenever an ascending mortal fuses with the inner presence of the Universal Father.
 \vs p136 2:7 This day of baptism ended the purely human life of Jesus. The divine Son has found his Father, the Universal Father has found his incarnated Son, and they speak the one to the other.
