--- a/tex/p138.tex
+++ b/tex/p138.tex
@@ -44,7 +44,7 @@
 \vs p138 4:3 \pc That night at a simple supper at the Alpheus home, the twin brothers were received into the apostolic family. Later in the evening Jesus gave his apostles their first lesson dealing with the origin, nature, and destiny of unclean spirits, but they could not comprehend the import of what he told them. They found it very easy to love and admire Jesus but very difficult to understand many of his teachings.
 \vs p138 4:4 After a night of rest the entire party, now numbering 11, went by boat over to Tarichea.
 \usection{The Call of Thomas and Judas}
-\vs p138 5:1 Thomas the fisherman and Judas the wanderer met Jesus and the apostles at the fisher\hyp{}boat landing at Tarichea, and Thomas led the party to his near\hyp{}by home. Philip now presented Thomas as his nominee for apostleship and Nathaniel presented Judas Iscariot, the Judean, for similar honours. Jesus looked upon Thomas and said: \textcolour{ubdarkred}{“Thomas, you lack faith; nevertheless, I receive you. Follow me.”} To Judas Iscariot the Master said: \textcolour{ubdarkred}{“Judas, we are all of one flesh, and as I receive you into our midst, I pray that you will always be loyal to your Galilean brethren. Follow me.”}
+\vs p138 5:1 Thomas the fisherman and Judas the wanderer met Jesus and the apostles at the fisher\hyp{}boat landing at Tarichea, and Thomas led the party to his near-by home. Philip now presented Thomas as his nominee for apostleship and Nathaniel presented Judas Iscariot, the Judean, for similar honours. Jesus looked upon Thomas and said: \textcolour{ubdarkred}{“Thomas, you lack faith; nevertheless, I receive you. Follow me.”} To Judas Iscariot the Master said: \textcolour{ubdarkred}{“Judas, we are all of one flesh, and as I receive you into our midst, I pray that you will always be loyal to your Galilean brethren. Follow me.”}
 \vs p138 5:2 \pc When they had refreshed themselves, Jesus took the twelve apart for a season to pray with them and to instruct them in the nature and work of the Holy Spirit, but again did they largely fail to comprehend the meaning of those wonderful truths which he endeavoured to teach them. One would grasp one point and one would comprehend another, but none of them could encompass the whole of his teaching. Always would they make the mistake of trying to fit Jesus’ new gospel into their old forms of religious belief. They could not grasp the idea that Jesus had come to proclaim a new gospel of salvation and to establish a new way of finding God; they did not perceive that he \bibemph{was} a new revelation of the Father in heaven.
 \vs p138 5:3 The next day Jesus left his twelve apostles quite alone; he wanted them to become acquainted and desired that they be alone to talk over what he had taught them. The Master returned for the evening meal, and during the after\hyp{}supper hours he talked to them about the ministry of seraphim, and some of the apostles comprehended his teaching. They rested for a night and the next day departed by boat for Capernaum.
 \vs p138 5:4 Zebedee and Salome had gone to live with their son David so that their large home could be turned over to Jesus and his twelve apostles. Here Jesus spent a quiet Sabbath with his chosen messengers; he carefully outlined the plans for proclaiming the kingdom and fully explained the importance of avoiding any clash with the civil authorities, saying: \textcolour{ubdarkred}{“If the civil rulers are to be rebuked, leave that task to me. See that you make no denunciations of Caesar or his servants.”} It was this same evening that Judas Iscariot took Jesus aside to inquire why nothing was done to get John out of prison. And Judas was not wholly satisfied with Jesus’ attitude.
