--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -180,7 +180,7 @@
 \vspace*{1ex}
 \vs p144 5:108 Though the apostles were not at liberty to present these prayer lessons in their public teachings, they profited much from all of these revelations in their personal religious experiences. Jesus utilized these and other prayer models as illustrations in connection with the intimate instruction of the twelve, and specific permission has been granted for transcribing these seven specimen prayers into this record.
 \usection{Conference with John’s Apostles}
-\vs p144 6:1 Around the first of October, Philip and some of his fellow apostles were in a near\hyp{}by village buying food when they met some of the apostles of John the Baptist. As a result of this chance meeting in the market place there came about a three weeks’ conference at the Gilboa camp between the apostles of Jesus and the apostles of John, for John had recently appointed twelve of his leaders to be apostles, following the precedent of Jesus. John had done this in response to the urging of Abner, the chief of his loyal supporters. Jesus was present at the Gilboa camp throughout the first week of this joint conference but absented himself the last two weeks.
+\vs p144 6:1 Around the first of October, Philip and some of his fellow apostles were in a near-by village buying food when they met some of the apostles of John the Baptist. As a result of this chance meeting in the market place there came about a three weeks’ conference at the Gilboa camp between the apostles of Jesus and the apostles of John, for John had recently appointed twelve of his leaders to be apostles, following the precedent of Jesus. John had done this in response to the urging of Abner, the chief of his loyal supporters. Jesus was present at the Gilboa camp throughout the first week of this joint conference but absented himself the last two weeks.
 \vs p144 6:2 By the beginning of the second week of this month, Abner had assembled all of his associates at the Gilboa camp and was prepared to go into council with the apostles of Jesus. For three weeks these 24 men were in session three times a day and for six days each week. The first week Jesus mingled with them between their forenoon, afternoon, and evening sessions. They wanted the Master to meet with them and preside over their joint deliberations, but he steadfastly refused to participate in their discussions, though he did consent to speak to them on three occasions. These talks by Jesus to the 24 were on sympathy, co\hyp{}operation, and tolerance.
 \vs p144 6:3 Andrew and Abner alternated in presiding over these joint meetings of the two apostolic groups. These men had many difficulties to discuss and numerous problems to solve. Again and again would they take their troubles to Jesus, only to hear him say: \textcolour{ubdarkred}{“I am concerned only with your personal and purely religious problems. I am the representative of the Father to the \bibemph{individual,} not to the group. If you are in personal difficulty in your relations with God, come to me, and I will hear you and counsel you in the solution of your problem. But when you enter upon the co\hyp{}ordination of divergent human interpretations of religious questions and upon the socialization of religion, you are destined to solve all such problems by your own decisions. Albeit, I am ever sympathetic and always interested, and when you arrive at your conclusions touching these matters of nonspiritual import, provided you are all agreed, then I pledge in advance my full approval and hearty co\hyp{}operation. And now, in order to leave you unhampered in your deliberations, I am leaving you for two weeks. Be not anxious about me, for I will return to you. I will be about my Father’s business, for we have other realms besides this one.”}
 \vs p144 6:4 After thus speaking, Jesus went down the mountainside, and they saw him no more for two full weeks. And they never knew where he went or what he did during these days. It was some time before the 24 could settle down to the serious consideration of their problems, they were so disconcerted by the absence of the Master. However, within a week they were again in the heart of their discussions, and they could not go to Jesus for help.
