--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -9,7 +9,7 @@
 \vs p145 0:2 Wednesday, Thursday, and Friday Jesus spent at the Zebedee house instructing his apostles preparatory to their first extensive public preaching tour. He also received and taught many earnest inquirers, both singly and in groups. Through Andrew, he arranged to speak in the synagogue on the coming Sabbath day.
 \vs p145 0:3 Late on Friday evening Jesus’ baby sister, Ruth, secretly paid him a visit. They spent almost an hour together in a boat anchored a short distance from the shore. No human being, save John Zebedee, ever knew of this visit, and he was admonished to tell no man. Ruth was the only member of Jesus’ family who consistently and unwaveringly believed in the divinity of his earth mission from the times of her earliest spiritual consciousness right on down through his eventful ministry, death, resurrection, and ascension; and she finally passed on to the worlds beyond never having doubted the supernatural character of her father\hyp{}brother’s mission in the flesh. Baby Ruth was the chief comfort of Jesus, as regards his earth family, throughout the trying ordeal of his trial, rejection, and crucifixion.
 \usection{The Draught of Fishes}
-\vs p145 1:1 On Friday morning of this same week, when Jesus was teaching by the seaside, the people crowded him so near the water’s edge that he signalled to some fishermen occupying a near\hyp{}by boat to come to his rescue. Entering the boat, he continued to teach the assembled multitude for more than two hours. This boat was named “Simon”; it was the former fishing vessel of Simon Peter and had been built by Jesus’ own hands. On this particular morning the boat was being used by David Zebedee and two associates, who had just come in near shore from a fruitless night of fishing on the lake. They were cleaning and mending their nets when Jesus requested them to come to his assistance.
+\vs p145 1:1 On Friday morning of this same week, when Jesus was teaching by the seaside, the people crowded him so near the water’s edge that he signalled to some fishermen occupying a near-by boat to come to his rescue. Entering the boat, he continued to teach the assembled multitude for more than two hours. This boat was named “Simon”; it was the former fishing vessel of Simon Peter and had been built by Jesus’ own hands. On this particular morning the boat was being used by David Zebedee and two associates, who had just come in near shore from a fruitless night of fishing on the lake. They were cleaning and mending their nets when Jesus requested them to come to his assistance.
 \vs p145 1:2 After Jesus had finished teaching the people, he said to David: \textcolour{ubdarkred}{“As you were delayed by coming to my help, now let me work with you. Let us go fishing; put out into yonder deep and let down your nets for a draught.”} But Simon, one of David’s assistants, answered: “Master, it is useless. We toiled all night and took nothing; however, at your bidding we will put out and let down the nets.” And Simon consented to follow Jesus’ directions because of a gesture made by his master, David. When they had proceeded to the place designated by Jesus, they let down their nets and enclosed such a multitude of fish that they feared the nets would break, so much so that they signalled to their associates on the shore to come to their assistance. When they had filled all three boats with fish, almost to sinking, this Simon fell down at Jesus’ knees, saying, “Depart from me, Master, for I am a sinful man.” Simon and all who were concerned in this episode were amazed at the draught of fishes. From that day David Zebedee, this Simon, and their associates forsook their nets and followed Jesus.
 \vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Fishes.jpg}\caption{The Draught of Fishes by William Hole}\end{figure}}
 \usection{Afternoon at the Synagogue}
