--- a/tex/p146.tex
+++ b/tex/p146.tex
@@ -58,7 +58,7 @@
 \vs p146 5:3 Again was Jesus compelled to hasten away from Cana because of the undue attention attracted by the second episode of this sort to attend his ministry in this village. The townspeople remembered the water and the wine, and now that he was supposed to have healed the nobleman’s son at so great a distance, they came to him, not only bringing the sick and afflicted but also sending messengers requesting that he heal sufferers at a distance. And when Jesus saw that the whole countryside was aroused, he said, \textcolour{ubdarkred}{“Let us go to Nain.”}
 \usection{Nain and the Widow’s Son}
 \vs p146 6:1 These people believed in signs; they were a wonder\hyp{}seeking generation. By this time the people of central and southern Galilee had become miracle minded regarding Jesus and his personal ministry. Scores, hundreds, of honest persons suffering from purely nervous disorders and afflicted with emotional disturbances came into Jesus’ presence and then returned home to their friends announcing that Jesus had healed them. And such cases of mental healing these ignorant and simple\hyp{}minded people regarded as physical healing, miraculous cures.
-\vs p146 6:2 \pc When Jesus sought to leave Cana and go to Nain, a great multitude of believers and many curious people followed after him. They were bent on beholding miracles and wonders, and they were not to be disappointed. As Jesus and his apostles drew near the gate of the city, they met a funeral procession on its way to the near\hyp{}by cemetery, carrying the only son of a widowed mother of Nain. This woman was much respected, and half of the village followed the bearers of the bier of this supposedly dead boy. When the funeral procession had come up to Jesus and his followers, the widow and her friends recognized the Master and besought him to bring the son back to life. Their miracle expectancy was aroused to such a high pitch they thought Jesus could cure any human disease, and why could not such a healer even raise the dead? Jesus, while being thus importuned, stepped forward and, raising the covering of the bier, examined the boy. Discovering that the young man was not really dead, he perceived the tragedy which his presence could avert; so, turning to the mother, he said: \textcolour{ubdarkred}{“Weep not. Your son is not dead; he sleeps. He will be restored to you.”} And then, taking the young man by the hand, he said, \textcolour{ubdarkred}{“Awake and arise.”} And the youth who was supposed to be dead presently sat up and began to speak, and Jesus sent them back to their homes.
+\vs p146 6:2 \pc When Jesus sought to leave Cana and go to Nain, a great multitude of believers and many curious people followed after him. They were bent on beholding miracles and wonders, and they were not to be disappointed. As Jesus and his apostles drew near the gate of the city, they met a funeral procession on its way to the near-by cemetery, carrying the only son of a widowed mother of Nain. This woman was much respected, and half of the village followed the bearers of the bier of this supposedly dead boy. When the funeral procession had come up to Jesus and his followers, the widow and her friends recognized the Master and besought him to bring the son back to life. Their miracle expectancy was aroused to such a high pitch they thought Jesus could cure any human disease, and why could not such a healer even raise the dead? Jesus, while being thus importuned, stepped forward and, raising the covering of the bier, examined the boy. Discovering that the young man was not really dead, he perceived the tragedy which his presence could avert; so, turning to the mother, he said: \textcolour{ubdarkred}{“Weep not. Your son is not dead; he sleeps. He will be restored to you.”} And then, taking the young man by the hand, he said, \textcolour{ubdarkred}{“Awake and arise.”} And the youth who was supposed to be dead presently sat up and began to speak, and Jesus sent them back to their homes.
 \vs p146 6:3 Jesus endeavoured to calm the multitude and vainly tried to explain that the lad was not really dead, that he had not brought him back from the grave, but it was useless. The multitude which followed him, and the whole village of Nain, were aroused to the highest pitch of emotional frenzy. Fear seized many, panic others, while still others fell to praying and wailing over their sins. And it was not until long after nightfall that the clamouring multitude could be dispersed. And, of course, notwithstanding Jesus’ statement that the boy was not dead, everyone insisted that a miracle had been wrought, even the dead raised. Although Jesus told them the boy was merely in a deep sleep, they explained that that was the manner of his speaking and called attention to the fact that he always in great modesty tried to hide his miracles.
 \vs p146 6:4 So the word went abroad throughout Galilee and into Judea that Jesus had raised the widow’s son from the dead, and many who heard this report believed it. Never was Jesus able to make even all his apostles fully understand that the widow’s son was not really dead when he bade him awake and arise. But he did impress them sufficiently to keep it out of all subsequent records except that of Luke, who recorded it as the episode had been related to him. And again was Jesus so besieged as a physician that he departed early the next day for Endor.
 \usection{At Endor}
