--- a/tex/p150.tex
+++ b/tex/p150.tex
@@ -51,7 +51,7 @@
 \vs p150 6:3 Before their separation it had been arranged that the twelve apostles, together with the evangelists and the women’s corps, should assemble at Nazareth to meet the Master on Friday, March 4. Accordingly, about this time, from all parts of central and southern Galilee these various groups of apostles and evangelists began moving toward Nazareth. By midafternoon, Andrew and Peter, the last to arrive, had reached the encampment prepared by the early arrivals and situated on the highlands to the north of the city. And this was the first time Jesus had visited Nazareth since the beginning of his public ministry.
 \usection{The Sojourn at Nazareth}
 \vs p150 7:1 This Friday afternoon Jesus walked about Nazareth quite unobserved and wholly unrecognized. He passed by the home of his childhood and the carpenter shop and spent a half hour on the hill which he so much enjoyed when a lad. Not since the day of his baptism by John in the Jordan had the Son of Man had such a flood of human emotion stirred up within his soul. While coming down from the mount, he heard the familiar sounds of the trumpet blast announcing the going down of the sun, just as he had so many, many times heard it when a boy growing up in Nazareth. Before returning to the encampment, he walked down by the synagogue where he had gone to school and indulged his mind in many reminiscences of his childhood days. Earlier in the day Jesus had sent Thomas to arrange with the ruler of the synagogue for his preaching at the Sabbath morning service.
-\vs p150 7:2 The people of Nazareth were never reputed for piety and righteous living. As the years passed, this village became increasingly contaminated by the low moral standards of near\hyp{}by Sepphoris. Throughout Jesus’ youth and young manhood there had been a division of opinion in Nazareth regarding him; there was much resentment when he moved to Capernaum. While the inhabitants of Nazareth had heard much about the doings of their former carpenter, they were offended that he had never included his native village in any of his earlier preaching tours. They had indeed heard of Jesus’ fame, but the majority of the citizens were angry because he had done none of his great works in the city of his youth. For months the people of Nazareth had discussed Jesus much, but their opinions were, on the whole, unfavourable to him.
+\vs p150 7:2 The people of Nazareth were never reputed for piety and righteous living. As the years passed, this village became increasingly contaminated by the low moral standards of near-by Sepphoris. Throughout Jesus’ youth and young manhood there had been a division of opinion in Nazareth regarding him; there was much resentment when he moved to Capernaum. While the inhabitants of Nazareth had heard much about the doings of their former carpenter, they were offended that he had never included his native village in any of his earlier preaching tours. They had indeed heard of Jesus’ fame, but the majority of the citizens were angry because he had done none of his great works in the city of his youth. For months the people of Nazareth had discussed Jesus much, but their opinions were, on the whole, unfavourable to him.
 \vs p150 7:3 Thus did the Master find himself in the midst of, not a welcome homecoming, but a decidedly hostile and hypercritical atmosphere. But this was not all. His enemies, knowing that he was to spend this Sabbath day in Nazareth and supposing that he would speak in the synagogue, had hired numerous rough and uncouth men to harass him and in every way possible make trouble.
 \vs p150 7:4 Most of the older of Jesus’ friends, including the doting chazan teacher of his youth, were dead or had left Nazareth, and the younger generation was prone to resent his fame with strong jealousy. They failed to remember his early devotion to his father’s family, and they were bitter in their criticism of his neglect to visit his brother and his married sisters living in Nazareth. The attitude of Jesus’ family toward him had also tended to increase this unkind feeling of the citizenry. The orthodox among the Jews even presumed to criticize Jesus because he walked too fast on the way to the synagogue this Sabbath morning.
 \usection{The Sabbath Service}
@@ -69,7 +69,7 @@
 \usection{The Nazareth Rejection}
 \vs p150 9:1 Jesus found himself surrounded in the synagogue by a great throng of his enemies and a sprinkling of his own followers, and in reply to their rude questions and sinister banterings he half humorously remarked: \textcolour{ubdarkred}{“Yes, I am Joseph’s son; I am the carpenter, and I am not surprised that you remind me of the proverb, ‘Physician heal yourself,’ and that you challenge me to do in Nazareth what you have heard I did at Capernaum; but I call you to witness that even the Scriptures declare that ‘a prophet is not without honour save in his own country and among his own people.’”}
 \vs p150 9:2 But they jostled him and, pointing accusing fingers at him, said: “You think you are better than the people of Nazareth; you moved away from us, but your brother is a common workman, and your sisters still live among us. We know your mother, Mary. Where are they today? We hear big things about you, but we notice that you do no wonders when you come back.” Jesus answered them: \textcolour{ubdarkred}{“I love the people who dwell in the city where I grew up, and I would rejoice to see you all enter the kingdom of heaven, but the doing of the works of God is not for me to determine. The transformations of grace are wrought in response to the living faith of those who are the beneficiaries.”}
-\vs p150 9:3 Jesus would have good\hyp{}naturedly managed the crowd and effectively disarmed even his violent enemies had it not been for the tactical blunder of one of his own apostles, Simon Zelotes, who, with the help of Nahor, one of the younger evangelists, had meanwhile gathered together a group of Jesus’ friends from among the crowd and, assuming a belligerent attitude, had served notice on the enemies of the Master to go hence. Jesus had long taught the apostles that a soft answer turns away wrath, but his followers were not accustomed to seeing their beloved teacher, whom they so willingly called Master, treated with such discourtesy and disdain. It was too much for them, and they found themselves giving expression to passionate and vehement resentment, all of which only tended to arouse the mob spirit in this ungodly and uncouth assembly. And so, under the leadership of hirelings, these ruffians laid hold upon Jesus and rushed him out of the synagogue to the brow of a near\hyp{}by precipitous hill, where they were minded to shove him over the edge to his death below. But just as they were about to push him over the edge of the cliff, Jesus turned suddenly upon his captors and, facing them, quietly folded his arms. He said nothing, but his friends were more than astonished when, as he started to walk forward, the mob parted and permitted him to pass on unmolested.
+\vs p150 9:3 Jesus would have good\hyp{}naturedly managed the crowd and effectively disarmed even his violent enemies had it not been for the tactical blunder of one of his own apostles, Simon Zelotes, who, with the help of Nahor, one of the younger evangelists, had meanwhile gathered together a group of Jesus’ friends from among the crowd and, assuming a belligerent attitude, had served notice on the enemies of the Master to go hence. Jesus had long taught the apostles that a soft answer turns away wrath, but his followers were not accustomed to seeing their beloved teacher, whom they so willingly called Master, treated with such discourtesy and disdain. It was too much for them, and they found themselves giving expression to passionate and vehement resentment, all of which only tended to arouse the mob spirit in this ungodly and uncouth assembly. And so, under the leadership of hirelings, these ruffians laid hold upon Jesus and rushed him out of the synagogue to the brow of a near-by precipitous hill, where they were minded to shove him over the edge to his death below. But just as they were about to push him over the edge of the cliff, Jesus turned suddenly upon his captors and, facing them, quietly folded his arms. He said nothing, but his friends were more than astonished when, as he started to walk forward, the mob parted and permitted him to pass on unmolested.
 \vs p150 9:4 Jesus, followed by his disciples, proceeded to their encampment, where all this was recounted. And they made ready that evening to go back to Capernaum early the next day, as Jesus had directed. This turbulent ending of the third public preaching tour had a sobering effect upon all of Jesus’ followers. They were beginning to realize the meaning of some of the Master’s teachings; they were awaking to the fact that the kingdom would come only through much sorrow and bitter disappointment.
 \vs p150 9:5 They left Nazareth this Sunday morning, and travelling by different routes, they all finally assembled at Bethsaida by noon on Thursday, March 10. They came together as a sober and serious group of disillusioned preachers of the gospel of truth and not as an enthusiastic and all\hyp{}conquering band of triumphant crusaders.
 \quizlink
