--- a/tex/p152.tex
+++ b/tex/p152.tex
@@ -8,7 +8,7 @@
 \uminitoc{At Jerusalem}
 \author{Midwayer Commission}
 \vs p152 0:1 The story of the cure of Amos, the Kheresa lunatic, had already reached Bethsaida and Capernaum, so that a great crowd was waiting for Jesus when his boat landed that Tuesday forenoon. Among this throng were the new observers from the Jerusalem Sanhedrin who had come down to Capernaum to find cause for the Master’s apprehension and conviction. As Jesus spoke with those who had assembled to greet him, Jairus, one of the rulers of the synagogue, made his way through the crowd and, falling down at his feet, took him by the hand and besought that he would hasten away with him, saying: “Master, my little daughter, an only child, lies in my home at the point of death. I pray that you will come and heal her.” When Jesus heard the request of this father, he said: \textcolour{ubdarkred}{“I will go with you.”}
-\vs p152 0:2 As Jesus went along with Jairus, the large crowd which had heard the father’s request followed on to see what would happen. Shortly before they reached the ruler’s house, as they hastened through a narrow street and as the throng jostled him, Jesus suddenly stopped, exclaiming, \textcolour{ubdarkred}{“Someone touched me.”} And when those who were near him denied that they had touched him, Peter spoke up: “Master, you can see that this crowd presses you, threatening to crush us, and yet you say ‘someone has touched me.’ What do you mean?” Then Jesus said: \textcolour{ubdarkred}{“I asked who touched me, for I perceived that living energy had gone forth from me.”} As Jesus looked about him, his eyes fell upon a near\hyp{}by woman, who, coming forward, knelt at his feet and said: “For years I have been afflicted with a scourging haemorrhage. I have suffered many things from many physicians; I have spent all my substance, but none could cure me. Then I heard of you, and I thought if I may but touch the hem of his garment, I shall certainly be made whole. And so I pressed forward with the crowd as it moved along until, standing near you, Master, I touched the border of your garment, and I was made whole; I know that I have been healed of my affliction.”
+\vs p152 0:2 As Jesus went along with Jairus, the large crowd which had heard the father’s request followed on to see what would happen. Shortly before they reached the ruler’s house, as they hastened through a narrow street and as the throng jostled him, Jesus suddenly stopped, exclaiming, \textcolour{ubdarkred}{“Someone touched me.”} And when those who were near him denied that they had touched him, Peter spoke up: “Master, you can see that this crowd presses you, threatening to crush us, and yet you say ‘someone has touched me.’ What do you mean?” Then Jesus said: \textcolour{ubdarkred}{“I asked who touched me, for I perceived that living energy had gone forth from me.”} As Jesus looked about him, his eyes fell upon a near-by woman, who, coming forward, knelt at his feet and said: “For years I have been afflicted with a scourging haemorrhage. I have suffered many things from many physicians; I have spent all my substance, but none could cure me. Then I heard of you, and I thought if I may but touch the hem of his garment, I shall certainly be made whole. And so I pressed forward with the crowd as it moved along until, standing near you, Master, I touched the border of your garment, and I was made whole; I know that I have been healed of my affliction.”
 \vs p152 0:3 When Jesus heard this, he took the woman by the hand and, lifting her up, said: \textcolour{ubdarkred}{“Daughter, your faith has made you whole; go in peace.”} It was her \bibemph{faith} and not her \bibemph{touch} that made her whole. And this case is a good illustration of many apparently miraculous cures which attended upon Jesus’ earth career, but which he in no sense consciously willed. The passing of time demonstrated that this woman was really cured of her malady. Her faith was of the sort that laid direct hold upon the creative power resident in the Master’s person. With the faith she had, it was only necessary to approach the Master’s person. It was not at all necessary to touch his garment; that was merely the superstitious part of her belief. Jesus called this woman, Veronica of Caesarea\hyp{}Philippi, into his presence to correct two errors which might have lingered in her mind, or which might have persisted in the minds of those who witnessed this healing: He did not want Veronica to go away thinking that her fear in attempting to steal her cure had been honoured, or that her superstition in associating the touch of his garment with her healing had been effective. He desired all to know that it was her pure and living \bibemph{faith} that had wrought the cure.
 \usection{At Jairus’s House}
 \vs p152 1:1 Jairus was, of course, terribly impatient of this delay in reaching his home; so they now hastened on at quickened pace. Even before they entered the ruler’s yard, one of his servants came out, saying: “Trouble not the Master; your daughter is dead.” But Jesus seemed not to heed the servant’s words, for, taking with him Peter, James, and John, he turned and said to the grief\hyp{}stricken father: \textcolour{ubdarkred}{“Fear not; only believe.”} When he entered the house, he found the flute\hyp{}players already there with the mourners, who were making an unseemly tumult; already were the relatives engaged in weeping and wailing. And when he had put all the mourners out of the room, he went in with the father and mother and his three apostles. He had told the mourners that the damsel was not dead, but they laughed him to scorn. Jesus now turned to the mother, saying: \textcolour{ubdarkred}{“Your daughter is not dead; she is only asleep.”} And when the house had quieted down, Jesus, going up to where the child lay, took her by the hand and said, \textcolour{ubdarkred}{“Daughter, I say to you, awake and arise!”} And when the girl heard these words, she immediately rose up and walked across the room. And presently, after she had recovered from her daze, Jesus directed that they should give her something to eat, for she had been a long time without food.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.9}\columnwidth]{images/Jairus.jpg}\caption{Jairus' Daughter by Jeremy Winborg}\end{figure}}
@@ -29,7 +29,7 @@
 \vs p152 2:10 \pc And this is the first and only nature miracle which Jesus performed as a result of his conscious preplanning. It is true that his disciples were disposed to call many things miracles which were not, but this was a genuine supernatural ministration. In this case, so we were taught, Michael multiplied food elements as he always does except for the elimination of the time factor and the visible life channel.
 \usection{The King\hyp{}Making Episode}
 \vs p152 3:1 The feeding of the 5,000 by supernatural energy was another of those cases where human pity plus creative power equalled that which happened. Now that the multitude had been fed to the full, and since Jesus’ fame was then and there augmented by this stupendous wonder, the project to seize the Master and proclaim him king required no further personal direction. The idea seemed to spread through the crowd like a contagion. The reaction of the multitude to this sudden and spectacular supplying of their physical needs was profound and overwhelming. For a long time the Jews had been taught that the Messiah, the son of David, when he should come, would cause the land again to flow with milk and honey, and that the bread of life would be bestowed upon them as manna from heaven was supposed to have fallen upon their forefathers in the wilderness. And was not all of this expectation now fulfilled right before their eyes? When this hungry, undernourished multitude had finished gorging itself with the wonder\hyp{}food, there was but one unanimous reaction: “Here is our king.” The wonder\hyp{}working deliverer of Israel had come. In the eyes of these simple\hyp{}minded people the power to feed carried with it the right to rule. No wonder, then, that the multitude, when it had finished feasting, rose as one man and shouted, “Make him king!”
-\vs p152 3:2 This mighty shout enthused Peter and those of the apostles who still retained the hope of seeing Jesus assert his right to rule. But these false hopes were not to live for long. This mighty shout of the multitude had hardly ceased to reverberate from the near\hyp{}by rocks when Jesus stepped upon a huge stone and, lifting up his right hand to command their attention, said: “My children, you mean well, but you are short\hyp{}sighted and material\hyp{}minded.” There was a brief pause; this stalwart Galilean was there majestically posed in the enchanting glow of that eastern twilight. Every inch he looked a king as he continued to speak to this breathless multitude: \textcolour{ubdarkred}{“You would make me king, not because your souls have been lighted with a great truth, but because your stomachs have been filled with bread. How many times have I told you that my kingdom is not of this world? This kingdom of heaven which we proclaim is a spiritual brotherhood, and no man rules over it seated upon a material throne. My Father in heaven is the all\hyp{}wise and the all\hyp{}powerful Ruler over this spiritual brotherhood of the sons of God on earth. Have I so failed in revealing to you the Father of spirits that you would make a king of his Son in the flesh! Now all of you go hence to your own homes. If you must have a king, let the Father of lights be enthroned in the heart of each of you as the spirit Ruler of all things.”}
+\vs p152 3:2 This mighty shout enthused Peter and those of the apostles who still retained the hope of seeing Jesus assert his right to rule. But these false hopes were not to live for long. This mighty shout of the multitude had hardly ceased to reverberate from the near-by rocks when Jesus stepped upon a huge stone and, lifting up his right hand to command their attention, said: “My children, you mean well, but you are short\hyp{}sighted and material\hyp{}minded.” There was a brief pause; this stalwart Galilean was there majestically posed in the enchanting glow of that eastern twilight. Every inch he looked a king as he continued to speak to this breathless multitude: \textcolour{ubdarkred}{“You would make me king, not because your souls have been lighted with a great truth, but because your stomachs have been filled with bread. How many times have I told you that my kingdom is not of this world? This kingdom of heaven which we proclaim is a spiritual brotherhood, and no man rules over it seated upon a material throne. My Father in heaven is the all\hyp{}wise and the all\hyp{}powerful Ruler over this spiritual brotherhood of the sons of God on earth. Have I so failed in revealing to you the Father of spirits that you would make a king of his Son in the flesh! Now all of you go hence to your own homes. If you must have a king, let the Father of lights be enthroned in the heart of each of you as the spirit Ruler of all things.”}
 \vs p152 3:3 \pc These words of Jesus sent the multitude away stunned and disheartened. Many who had believed in him turned back and followed him no more from that day. The apostles were speechless; they stood in silence gathered about the twelve baskets of the fragments of food; only the chore boy, the Mark lad, spoke, “And he refused to be our king.” Jesus, before going off to be alone in the hills, turned to Andrew and said: \textcolour{ubdarkred}{“Take your brethren back to Zebedee’s house and pray with them, especially for your brother, Simon Peter.”}
 \usection{Simon Peter’s Night Vision}
 \vs p152 4:1 The apostles, without their Master --- sent off by themselves --- entered the boat and in silence began to row toward Bethsaida on the western shore of the lake. None of the twelve was so crushed and downcast as Simon Peter. Hardly a word was spoken; they were all thinking of the Master alone in the hills. Had he forsaken them? He had never before sent them all away and refused to go with them. What could all this mean?
