--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -18,7 +18,7 @@
 \vs p158 1:5 The faith of the apostles was at a high point at the time of the feeding of the 5,000, and then it rapidly fell almost to zero. Now, as a result of the Master’s admission of his divinity, the lagging faith of the twelve arose in the next few weeks to its highest pitch, only to undergo a progressive decline. The third revival of their faith did not occur until after the Master’s resurrection.
 \vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the three apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
 \vs p158 1:7 As they partook of their meagre evening meal, Peter asked the Master, “How long do we remain on this mountain away from our brethren?” And Jesus answered: \textcolour{ubdarkred}{“Until you shall see the glory of the Son of Man and know that whatsoever I have declared to you is true.”} And they talked over the affairs of the Lucifer rebellion while seated about the glowing embers of their fire until darkness drew on and the apostles’ eyes grew heavy, for they had begun their journey very early that morning.
-\vs p158 1:8 When the three had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These three conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
+\vs p158 1:8 When the three had been fast asleep for about half an hour, they were suddenly awakened by a near-by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These three conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
 \vs p158 1:9 The three apostles were so badly frightened that they were slow in collecting their wits, but Peter, who was first to recover himself, said, as the dazzling vision faded from before them and they observed Jesus standing alone: “Jesus, Master, it is good to have been here. We rejoice to see this glory. We are loath to go back down to the inglorious world. If you are willing, let us abide here, and we will erect three tents, one for you, one for Moses, and one for Elijah.” And Peter said this because of his confusion, and because nothing else came into his mind at just that moment.
 \vs p158 1:10 While Peter was yet speaking, a silvery cloud drew near and overshadowed the four of them. The apostles now became greatly frightened, and as they fell down on their faces to worship, they heard a voice, the same that had spoken on the occasion of Jesus’ baptism, say: “This is my beloved Son; give heed to him.” And when the cloud vanished, again was Jesus alone with the three, and he reached down and touched them, saying: \textcolour{ubdarkred}{“Arise and be not afraid; you shall see greater things than this.”} But the apostles were truly afraid; they were a silent and thoughtful trio as they made ready to descend the mountain shortly before midnight.
 \usection{Coming down the Mountain}
@@ -45,7 +45,7 @@
 \vs p158 4:8 And so, while Jesus was descending the mountain with the exuberant and ecstatic Peter, James, and John, their 9 brethren likewise were sleepless in their confusion and downcast humiliation. They were a dejected and chastened group. But James of Safed would not give up. Although they could give him no idea as to when Jesus might return, he decided to stay on until the Master came back.
 \usection{Jesus Heals the Boy}
 \vs p158 5:1 As Jesus drew near, the 9 apostles were more than relieved to welcome him, and they were greatly encouraged to behold the good cheer and unusual enthusiasm which marked the countenances of Peter, James, and John. They all rushed forward to greet Jesus and their three brethren. As they exchanged greetings, the crowd came up, and Jesus asked, \textcolour{ubdarkred}{“What were you disputing about as we drew near?”} But before the disconcerted and humiliated apostles could reply to the Master’s question, the anxious father of the afflicted lad stepped forward and, kneeling at Jesus’ feet, said: “Master, I have a son, an only child, who is possessed by an evil spirit. Not only does he cry out in terror, foam at the mouth, and fall like a dead person at the time of seizure, but oftentimes this evil spirit which possesses him rends him in convulsions and sometimes has cast him into the water and even into the fire. With much grinding of teeth and as a result of many bruises, my child wastes away. His life is worse than death; his mother and I are of a sad heart and a broken spirit. About noon yesterday, seeking for you, I caught up with your disciples, and while we were waiting, your apostles sought to cast out this demon, but they could not do it. And now, Master, will you do this for us, will you heal my son?”
-\vs p158 5:2 When Jesus had listened to this recital, he touched the kneeling father and bade him rise while he gave the near\hyp{}by apostles a searching survey. Then said Jesus to all those who stood before him: \textcolour{ubdarkred}{“O faithless and perverse generation, how long shall I bear with you? How long shall I be with you? How long ere you learn that the works of faith come not forth at the bidding of doubting unbelief?”} And then, pointing to the bewildered father, Jesus said, \textcolour{ubdarkred}{“Bring hither your son.”} And when James had brought the lad before Jesus, he asked, \textcolour{ubdarkred}{“How long has the boy been afflicted in this way?”} The father answered, “Since he was a very young child.” And as they talked, the youth was seized with a violent attack and fell in their midst, gnashing his teeth and foaming at the mouth. After a succession of violent convulsions he lay there before them as one dead. Now did the father again kneel at Jesus’ feet while he implored the Master, saying: “If you can cure him, I beseech you to have compassion on us and deliver us from this affliction.” And when Jesus heard these words, he looked down into the father’s anxious face, saying: \textcolour{ubdarkred}{“Question not my Father’s power of love, only the sincerity and reach of your faith. All things are possible to him who really believes.”} And then James of Safed spoke those long\hyp{}to\hyp{}be\hyp{}remembered words of commingled faith and doubt, “Lord, I believe. I pray you help my unbelief.”
+\vs p158 5:2 When Jesus had listened to this recital, he touched the kneeling father and bade him rise while he gave the near-by apostles a searching survey. Then said Jesus to all those who stood before him: \textcolour{ubdarkred}{“O faithless and perverse generation, how long shall I bear with you? How long shall I be with you? How long ere you learn that the works of faith come not forth at the bidding of doubting unbelief?”} And then, pointing to the bewildered father, Jesus said, \textcolour{ubdarkred}{“Bring hither your son.”} And when James had brought the lad before Jesus, he asked, \textcolour{ubdarkred}{“How long has the boy been afflicted in this way?”} The father answered, “Since he was a very young child.” And as they talked, the youth was seized with a violent attack and fell in their midst, gnashing his teeth and foaming at the mouth. After a succession of violent convulsions he lay there before them as one dead. Now did the father again kneel at Jesus’ feet while he implored the Master, saying: “If you can cure him, I beseech you to have compassion on us and deliver us from this affliction.” And when Jesus heard these words, he looked down into the father’s anxious face, saying: \textcolour{ubdarkred}{“Question not my Father’s power of love, only the sincerity and reach of your faith. All things are possible to him who really believes.”} And then James of Safed spoke those long\hyp{}to\hyp{}be\hyp{}remembered words of commingled faith and doubt, “Lord, I believe. I pray you help my unbelief.”
 \vs p158 5:3 When Jesus heard these words, he stepped forward and, taking the lad by the hand, said: \textcolour{ubdarkred}{“I will do this in accordance with my Father’s will and in honour of living faith. My son, arise! Come out of him, disobedient spirit, and go not back into him.”} And placing the hand of the lad in the hand of the father, Jesus said: \textcolour{ubdarkred}{“Go your way. The Father has granted the desire of your soul.”} And all who were present, even the enemies of Jesus, were astonished at what they saw.
 \vs p158 5:4 It was indeed a disillusionment for the three apostles who had so recently enjoyed the spiritual ecstasy of the scenes and experiences of the transfiguration, so soon to return to this scene of the defeat and discomfiture of their fellow apostles. But it was ever so with these twelve ambassadors of the kingdom. They never failed to alternate between exaltation and humiliation in their life experiences.
 \vs p158 5:5 This was a true healing of a double affliction, a physical ailment and a spirit malady. And the lad was permanently cured from that hour. When James had departed with his restored son, Jesus said: \textcolour{ubdarkred}{“We go now to Caesarea\hyp{}Philippi; make ready at once.”} And they were a quiet group as they journeyed southward while the crowd followed on behind.
