--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -59,7 +59,7 @@
 \vs p163 5:2 After the breaking up of the Magadan Camp, David Zebedee returned to Bethsaida and began immediately to curtail the messenger service. The kingdom was taking on a new phase. Daily, pilgrims arrived from all parts of Palestine and even from remote regions of the Roman Empire. Believers occasionally came from Mesopotamia and from the lands east of the Tigris. Accordingly, on Sunday, December 18, David, with the help of his messenger corps, loaded on to the pack animals the camp equipage, then stored in his father’s house, with which he had formerly conducted the camp of Bethsaida by the lake. Bidding farewell to Bethsaida for the time being, he proceeded down the lake shore and along the Jordan to a point about 2.4\,km north of the apostolic camp; and in less than a week he was prepared to offer hospitality to almost 1500 pilgrim visitors. The apostolic camp could accommodate about 500. This was the rainy season in Palestine, and these accommodations were required to take care of the ever\hyp{}increasing number of inquirers, mostly earnest, who came into Perea to see Jesus and to hear his teaching.
 \vs p163 5:3 David did all this on his own initiative, though he had taken counsel with Philip and Matthew at Magadan. He employed the larger part of his former messenger corps as his helpers in conducting this camp; he now used less than 20 men on regular messenger duty. Near the end of December and before the return of the seventy, almost 800 visitors were gathered about the Master, and they found lodging in David’s camp.
 \usection{The Return of the Seventy}
-\vs p163 6:1 On Friday, December 30, while Jesus was away in the near\hyp{}by hills with Peter, James, and John, the seventy messengers were arriving by couples, accompanied by numerous believers, at the Pella headquarters. All seventy were assembled at the teaching site about 17:00 when Jesus returned to the camp. The evening meal was delayed for more than an hour while these enthusiasts for the gospel of the kingdom related their experiences. David’s messengers had brought much of this news to the apostles during previous weeks, but it was truly inspiring to hear these newly ordained teachers of the gospel personally tell how their message had been received by hungry Jews and gentiles. At last Jesus was able to see men going out to spread the good news without his personal presence. The Master now knew that he could leave this world without seriously hindering the progress of the kingdom.
+\vs p163 6:1 On Friday, December 30, while Jesus was away in the near-by hills with Peter, James, and John, the seventy messengers were arriving by couples, accompanied by numerous believers, at the Pella headquarters. All seventy were assembled at the teaching site about 17:00 when Jesus returned to the camp. The evening meal was delayed for more than an hour while these enthusiasts for the gospel of the kingdom related their experiences. David’s messengers had brought much of this news to the apostles during previous weeks, but it was truly inspiring to hear these newly ordained teachers of the gospel personally tell how their message had been received by hungry Jews and gentiles. At last Jesus was able to see men going out to spread the good news without his personal presence. The Master now knew that he could leave this world without seriously hindering the progress of the kingdom.
 \vs p163 6:2 When the seventy related how “even the devils were subject” to them, they referred to the wonderful cures they had wrought in the cases of victims of nervous disorders. Nevertheless, there had been a few cases of real spirit possession relieved by these ministers, and referring to these, Jesus said: \textcolour{ubdarkred}{“It is not strange that these disobedient minor spirits should be subject to you, seeing that I beheld Satan falling as lightning from heaven. But rejoice not so much over this, for I declare to you that, as soon as I return to my Father, we will send forth our spirits into the very minds of men so that no more can these few lost spirits enter the minds of unfortunate mortals. I rejoice with you that you have power with men, but be not lifted up because of this experience but the rather rejoice that your names are written on the rolls of heaven, and that you are thus to go forward in an endless career of spiritual conquest.”}
 \vs p163 6:3 And it was at this time, just before partaking of the evening meal, that Jesus experienced one of those rare moments of emotional ecstasy which his followers had occasionally witnessed. He said: \textcolour{ubdarkred}{“I thank you, my Father, Lord of heaven and earth, that, while this wonderful gospel was hidden from the wise and self\hyp{}righteous, the spirit has revealed these spiritual glories to these children of the kingdom. Yes, my Father, it must have been pleasing in your sight to do this, and I rejoice to know that the good news will spread to all the world even after I shall have returned to you and the work which you have given me to perform. I am mightily moved as I realize you are about to deliver all authority into my hands, that only you really know who I am, and that only I really know you, and those to whom I have revealed you. And when I have finished this revelation to my brethren in the flesh, I will continue the revelation to your creatures on high.”}
 \vs p163 6:4 When Jesus had thus spoken to the Father, he turned aside to speak to his apostles and ministers: \textcolour{ubdarkred}{“Blessed are the eyes which see and the ears which hear these things. Let me say to you that many prophets and many of the great men of the past ages have desired to behold what you now see, but it was not granted them. And many generations of the children of light yet to come will, when they hear of these things, envy you who have heard and seen them.”}
