--- a/tex/p168.tex
+++ b/tex/p168.tex
@@ -8,7 +8,7 @@
 \vs p168 0:1 It was shortly after noon when Martha started out to meet Jesus as he came over the brow of the hill near Bethany. Her brother, Lazarus, had been dead four days and had been laid away in their private tomb at the far end of the garden late on Sunday afternoon. The stone at the entrance of the tomb had been rolled in place on the morning of this day, Thursday.
 \vs p168 0:2 When Martha and Mary sent word to Jesus concerning Lazarus’s illness, they were confident the Master would do something about it. They knew that their brother was desperately sick, and though they hardly dared hope that Jesus would leave his work of teaching and preaching to come to their assistance, they had such confidence in his power to heal disease that they thought he would just speak the curative words, and Lazarus would immediately be made whole. And when Lazarus died a few hours after the messenger left Bethany for Philadelphia, they reasoned that it was because the Master did not learn of their brother’s illness until it was too late, until he had already been dead for several hours.
 \vs p168 0:3 But they, with all of their believing friends, were greatly puzzled by the message which the runner brought back Tuesday forenoon when he reached Bethany. The messenger insisted that he heard Jesus say, \textcolour{ubdarkred}{“\ldots this sickness is really not to the death.”} Neither could they understand why he sent no word to them nor otherwise proffered assistance.
-\vs p168 0:4 Many friends from near\hyp{}by hamlets and others from Jerusalem came over to comfort the sorrow\hyp{}stricken sisters. Lazarus and his sisters were the children of a well\hyp{}to\hyp{}do and honourable Jew, one who had been the leading resident of the little village of Bethany. And notwithstanding that all three had long been ardent followers of Jesus, they were highly respected by all who knew them. They had inherited extensive vineyards and olive orchards in this vicinity, and that they were wealthy was further attested by the fact that they could afford a private burial tomb on their own premises. Both of their parents had already been laid away in this tomb.
+\vs p168 0:4 Many friends from near-by hamlets and others from Jerusalem came over to comfort the sorrow\hyp{}stricken sisters. Lazarus and his sisters were the children of a well\hyp{}to\hyp{}do and honourable Jew, one who had been the leading resident of the little village of Bethany. And notwithstanding that all three had long been ardent followers of Jesus, they were highly respected by all who knew them. They had inherited extensive vineyards and olive orchards in this vicinity, and that they were wealthy was further attested by the fact that they could afford a private burial tomb on their own premises. Both of their parents had already been laid away in this tomb.
 \vs p168 0:5 Mary had given up the thought of Jesus’ coming and was abandoned to her grief, but Martha clung to the hope that Jesus would come, even up to the time on that very morning when they rolled the stone in front of the tomb and sealed the entrance. Even then she instructed a neighbour lad to keep watch down the Jericho road from the brow of the hill to the east of Bethany; and it was this lad who brought tidings to Martha that Jesus and his friends were approaching.
 \vs p168 0:6 When Martha met Jesus, she fell at his feet, exclaiming, “Master, if you had been here, my brother would not have died!” Many fears were passing through Martha’s mind, but she gave expression to no doubt, nor did she venture to criticize or question the Master’s conduct as related to Lazarus’s death. When she had spoken, Jesus reached down and, lifting her upon her feet, said, \textcolour{ubdarkred}{“Only have faith, Martha, and your brother shall rise again.”} Then answered Martha: “I know that he will rise again in the resurrection of the last day; and even now I believe that whatever you shall ask of God, our Father will give you.”
 \vs p168 0:7 Then said Jesus, looking straight into the eyes of Martha: \textcolour{ubdarkred}{“I am the resurrection and the life; he who believes in me, though he dies, yet shall he live. In truth, whosoever lives and believes in me shall never really die. Martha, do you believe this?”} And Martha answered the Master: “Yes, I have long believed that you are the Deliverer, the Son of the living God, even he who should come to this world.”
