--- a/tex/p172.tex
+++ b/tex/p172.tex
@@ -33,7 +33,7 @@
 \vs p172 3:6 \pc Jesus had long tried by direct teaching to impress upon his apostles and his disciples that his kingdom was not of this world, that it was a purely spiritual matter; but he had not succeeded in this effort. Now, what he had failed to do by plain and personal teaching, he would attempt to accomplish by a symbolic appeal. Accordingly, right after the noon lunch, Jesus called Peter and John, and after directing them to go over to Bethpage, a neighbouring village a little off the main road and a short distance north\hyp{}west of Bethany, he further said: “Go to Bethpage, and when you come to the junction of the roads, you will find the colt of an ass tied there. Loose the colt and bring it back with you. If anyone asks you why you do this, merely say, ‘The Master has need of him.’” And when the two apostles had gone into Bethpage as the Master had directed, they found the colt tied near his mother in the open street and close to a house on the corner. As Peter began to untie the colt, the owner came over and asked why they did this, and when Peter answered him as Jesus had directed, the man said: “If your Master is Jesus from Galilee, let him have the colt.” And so they returned bringing the colt with them.
 \vs p172 3:7 By this time several hundred pilgrims had gathered around Jesus and his apostles. Since midforenoon the visitors passing by on their way to the Passover had tarried. Meanwhile, David Zebedee and some of his former messenger associates took it upon themselves to hasten on down to Jerusalem, where they effectively spread the report among the throngs of visiting pilgrims about the temple that Jesus of Nazareth was making a triumphal entry into the city. Accordingly, several thousand of these visitors flocked forth to greet this much\hyp{}talked\hyp{}of prophet and wonder\hyp{}worker, whom some believed to be the Messiah. This multitude, coming out from Jerusalem, met Jesus and the crowd going into the city just after they had passed over the brow of Olivet and had begun the descent into the city.
 \vs p172 3:8 As the procession started out from Bethany, there was great enthusiasm among the festive crowd of disciples, believers, and visiting pilgrims, many hailing from Galilee and Perea. Just before they started, the twelve women of the original women’s corps, accompanied by some of their associates, arrived on the scene and joined this unique procession as it moved on joyously toward the city.
-\vs p172 3:9 Before they started, the Alpheus twins put their cloaks on the donkey and held him while the Master got on. As the procession moved toward the summit of Olivet, the festive crowd threw their garments on the ground and brought branches from the near\hyp{}by trees in order to make a carpet of honour for the donkey bearing the royal Son, the promised Messiah. As the merry crowd moved on toward Jerusalem, they began to sing, or rather to shout in unison, the Psalm, “Hosanna to the son of David; blessed is he who comes in the name of the Lord. Hosanna in the highest. Blessed be the kingdom that comes down from heaven.”
+\vs p172 3:9 Before they started, the Alpheus twins put their cloaks on the donkey and held him while the Master got on. As the procession moved toward the summit of Olivet, the festive crowd threw their garments on the ground and brought branches from the near-by trees in order to make a carpet of honour for the donkey bearing the royal Son, the promised Messiah. As the merry crowd moved on toward Jerusalem, they began to sing, or rather to shout in unison, the Psalm, “Hosanna to the son of David; blessed is he who comes in the name of the Lord. Hosanna in the highest. Blessed be the kingdom that comes down from heaven.”
 \vs p172 3:10 Jesus was light\hyp{}hearted and cheerful as they moved along until he came to the brow of Olivet, where the city and the temple towers came into full view; there the Master stopped the procession, and a great silence came upon all as they beheld him weeping. Looking down upon the vast multitude coming forth from the city to greet him, the Master, with much emotion and with tearful voice, said: \textcolour{ubdarkred}{“O Jerusalem, if you had only known, even you, at least in this your day, the things which belong to your peace, and which you could so freely have had! But now are these glories about to be hid from your eyes. You are about to reject the Son of Peace and turn your backs upon the gospel of salvation. The days will soon come upon you wherein your enemies will cast a trench around about you and lay siege to you on every side; they shall utterly destroy you, insomuch that not one stone shall be left upon another. And all this shall befall you because you knew not the time of your divine visitation. You are about to reject the gift of God, and all men will reject you.”}
 \vs p172 3:11 When he had finished speaking, they began the descent of Olivet and presently were joined by the multitude of visitors who had come from Jerusalem waving palm branches, shouting hosannas, and otherwise expressing gleefulness and good fellowship. The Master had not planned that these crowds should come out from Jerusalem to meet them; that was the work of others. He never premeditated anything which was dramatic.
 \vs p172 3:12 Along with the multitude which poured out to welcome the Master, there came also many of the Pharisees and his other enemies. They were so much perturbed by this sudden and unexpected outburst of popular acclaim that they feared to arrest him lest such action precipitate an open revolt of the populace. They greatly feared the attitude of the large numbers of visitors, who had heard much of Jesus, and who, many of them, believed in him.
