--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -12,7 +12,7 @@
 \vs p182 1:4 \textcolour{ubdarkred}{“I have manifested you to the men whom you chose from the world and gave to me. They are yours --- as all life is in your hands --- you gave them to me, and I have lived among them, teaching them the way of life, and they have believed. These men are learning that all I have comes from you, and that the life I live in the flesh is to make known my Father to the worlds. The truth which you have given to me I have revealed to them. These, my friends and ambassadors, have sincerely willed to receive your word. I have told them that I came forth from you, that you sent me into this world, and that I am about to return to you. Father, I do pray for these chosen men. And I pray for them not as I would pray for the world, but as for those whom I have chosen out of the world to represent me to the world after I have returned to your work, even as I have represented you in this world during my sojourn in the flesh. These men are mine; you gave them to me; but all things which are mine are ever yours, and all that which was yours you have now caused to be mine. You have been exalted in me, and I now pray that I may be honoured in these men. I can no longer be in this world; I am about to return to the work you have given me to do. I must leave these men behind to represent us and our kingdom among men. Father, keep these men faithful as I prepare to yield up my life in the flesh. Help these, my friends, to be one in spirit, even as we are one. As long as I could be with them, I could watch over them and guide them, but now am I about to go away. Be near them, Father, until we can send the new teacher to comfort and strengthen them.}
 \vs p182 1:5 \textcolour{ubdarkred}{“You gave me twelve men, and I have kept them all save one, the son of revenge, who would not have further fellowship with us. These men are weak and frail, but I know we can trust them; I have proved them; they love me, even as they reverence you. While they must suffer much for my sake, I desire that they should also be filled with the joy of the assurance of sonship in the heavenly kingdom. I have given these men your word and have taught them the truth. The world may hate them, even as it has hated me, but I do not ask that you take them out of the world, only that you keep them from the evil in the world. Sanctify them in the truth; your word is truth. And as you sent me into this world, even so am I about to send these men into the world. For their sakes I have lived among men and have consecrated my life to your service that I might inspire them to be purified through the truth I have taught them and the love I have revealed to them. I well know, my Father, that there is no need for me to ask you to watch over these brethren after I have gone; I know you love them even as I, but I do this that they may the better realize the Father loves mortal men even as does the Son.}
 \vs p182 1:6 \textcolour{ubdarkred}{“And now, my Father, I would pray not only for these eleven men but also for all others who now believe, or who may hereafter believe the gospel of the kingdom through the word of their future ministry. I want them all to be one, even as you and I are one. You are in me and I am in you, and I desire that these believers likewise be in us; that both of our spirits indwell them. If my children are one as we are one, and if they love one another as I have loved them, all men will then believe that I came forth from you and be willing to receive the revelation of truth and glory which I have made. The glory which you gave me I have revealed to these believers. As you have lived with me in spirit, so have I lived with them in the flesh. As you have been one with me, so have I been one with them, and so will the new teacher ever be one with them and in them. And all this have I done that my brethren in the flesh may know that the Father loves them even as does the Son, and that you love them even as you love me. Father, work with me to save these believers that they may presently come to be with me in glory and then go on to join you in the Paradise embrace. Those who serve with me in humiliation, I would have with me in glory so that they may see all you have given into my hands as the eternal harvest of the seed sowing of time in the likeness of mortal flesh. I long to show my earthly brethren the glory I had with you before the founding of this world. This world knows very little of you, righteous Father, but I know you, and I have made you known to these believers, and they will make known your name to other generations. And now I promise them that you will be with them in the world even as you have been with me --- even so.”}
-\vs p182 1:7 The eleven remained kneeling in this circle about Jesus for several minutes before they arose and in silence made their way back to the near\hyp{}by camp.
+\vs p182 1:7 The eleven remained kneeling in this circle about Jesus for several minutes before they arose and in silence made their way back to the near-by camp.
 \vs p182 1:8 \pc Jesus prayed for \bibemph{unity} among his followers, but he did not desire uniformity. Sin creates a dead level of evil inertia, but righteousness nourishes the creative spirit of individual experience in the living realities of eternal truth and in the progressive communion of the divine spirits of the Father and the Son. In the spiritual fellowship of the believer\hyp{}son with the divine Father there can never be doctrinal finality and sectarian superiority of group consciousness.
 \vs p182 1:9 The Master, during the course of this final prayer with his apostles, alluded to the fact that he had manifested the Father’s \bibemph{name} to the world. And that is truly what he did by the revelation of God through his perfected life in the flesh. The Father in heaven had sought to reveal himself to Moses, but he could proceed no further than to cause it to be said, “I AM.” And when pressed for further revelation of himself, it was only disclosed, “I AM that I AM.” But when Jesus had finished his earth life, this name of the Father had been so revealed that the Master, who was the Father incarnate, could truly say:
 \vs p182 1:10 \textcolour{ubdarkred}{I am the bread of life.}
@@ -44,10 +44,10 @@
 \vs p182 2:9 None of the apostles expected anything out of the ordinary to happen that night since it was already so late. They sought sleep that they might rise up early in the morning and be prepared for the worst. They thought that the chief priests would seek to apprehend their Master early in the morning as no secular work was ever done after noon on the preparation day for the Passover. Only David Zebedee and John Mark understood that the enemies of Jesus were coming with Judas that very night.
 \vs p182 2:10 \pc David had arranged to stand guard that night on the upper trail which led to the Bethany\hyp{}Jerusalem road, while John Mark was to watch along the road coming up by the Kidron to Gethsemane. Before David went to his self\hyp{}imposed task of outpost duty, he bade farewell to Jesus, saying: “Master, I have had great joy in my service with you. My brothers are your apostles, but I have delighted to do the lesser things as they should be done, and I shall miss you with all my heart when you are gone.” And then said Jesus to David: \textcolour{ubdarkred}{“David, my son, others have done that which they were directed to do, but this service have you done of your own heart, and I have not been unmindful of your devotion. You, too, shall some day serve with me in the eternal kingdom.”}
 \vs p182 2:11 And then, as he prepared to go on watch by the upper trail, David said to Jesus: “You know, Master, I sent for your family, and I have word by a messenger that they are tonight in Jericho. They will be here early tomorrow forenoon since it would be dangerous for them to come up the bloody way by night.” And Jesus, looking down upon David, only said: \textcolour{ubdarkred}{“Let it be so, David.”}
-\vs p182 2:12 \pc When David had gone up Olivet, John Mark took up his vigil near the road which ran by the brook down to Jerusalem. And John would have remained at this post but for his great desire to be near Jesus and to know what was going on. Shortly after David left him, and when John Mark observed Jesus withdraw, with Peter, James, and John, into a near\hyp{}by ravine, he was so overcome with combined devotion and curiosity that he forsook his sentinel post and followed after them, hiding himself in the bushes, from which place he saw and overheard all that transpired during those last moments in the garden and just before Judas and the armed guards appeared to arrest Jesus.
+\vs p182 2:12 \pc When David had gone up Olivet, John Mark took up his vigil near the road which ran by the brook down to Jerusalem. And John would have remained at this post but for his great desire to be near Jesus and to know what was going on. Shortly after David left him, and when John Mark observed Jesus withdraw, with Peter, James, and John, into a near-by ravine, he was so overcome with combined devotion and curiosity that he forsook his sentinel post and followed after them, hiding himself in the bushes, from which place he saw and overheard all that transpired during those last moments in the garden and just before Judas and the armed guards appeared to arrest Jesus.
 \vs p182 2:13 \pc While all this was in progress at the Master’s camp, Judas Iscariot was in conference with the captain of the temple guards, who had assembled his men preparatory to setting out, under the leadership of the betrayer, to arrest Jesus.
 \usection{Alone in Gethsemane}
-\vs p182 3:1 After all was still and quiet about the camp, Jesus, taking Peter, James, and John, went a short way up a near\hyp{}by ravine where he had often before gone to pray and commune. The three apostles could not help recognizing that he was grievously oppressed; never before had they observed their Master to be so heavy\hyp{}laden and sorrowful. When they arrived at the place of his devotions, he bade the three sit down and watch with him while he went off about a stone’s throw to pray. And when he had fallen down on his face, he prayed: \textcolour{ubdarkred}{“My Father, I came into this world to do your will, and so have I. I know that the hour has come to lay down this life in the flesh, and I do not shrink therefrom, but I would know that it is your will that I drink this cup. Send me the assurance that I will please you in my death even as I have in my life.”}
+\vs p182 3:1 After all was still and quiet about the camp, Jesus, taking Peter, James, and John, went a short way up a near-by ravine where he had often before gone to pray and commune. The three apostles could not help recognizing that he was grievously oppressed; never before had they observed their Master to be so heavy\hyp{}laden and sorrowful. When they arrived at the place of his devotions, he bade the three sit down and watch with him while he went off about a stone’s throw to pray. And when he had fallen down on his face, he prayed: \textcolour{ubdarkred}{“My Father, I came into this world to do your will, and so have I. I know that the hour has come to lay down this life in the flesh, and I do not shrink therefrom, but I would know that it is your will that I drink this cup. Send me the assurance that I will please you in my death even as I have in my life.”}
 \vs p182 3:2 The Master remained in a prayerful attitude for a few moments, and then, going over to the three apostles, he found them sound asleep, for their eyes were heavy and they could not remain awake. As Jesus awoke them, he said: \textcolour{ubdarkred}{“What! can you not watch with me even for one hour? Cannot you see that my soul is exceedingly sorrowful, even to death, and that I crave your companionship?”} After the three had aroused from their slumber, the Master again went apart by himself and, falling down on the ground, again prayed: \textcolour{ubdarkred}{“Father, I know it is possible to avoid this cup --- all things are possible with you --- but I have come to do your will, and while this is a bitter cup, I would drink it if it is your will.”} And when he had thus prayed, a mighty angel came down by his side and, speaking to him, touched him and strengthened him.
 \vs p182 3:3 When Jesus returned to speak with the three apostles, he again found them fast asleep. He awakened them, saying: \textcolour{ubdarkred}{“In such an hour I need that you should watch and pray with me --- all the more do you need to pray that you enter not into temptation --- wherefore do you fall asleep when I leave you?”}
 \vs p182 3:4 And then, for a third time, the Master withdrew and prayed: \textcolour{ubdarkred}{“Father, you see my sleeping apostles; have mercy upon them. The spirit is indeed willing, but the flesh is weak. And now, O Father, if this cup may not pass, then would I drink it. Not my will, but yours, be done.”} And when he had finished praying, he lay for a moment prostrate on the ground. When he arose and went back to his apostles, once more he found them asleep. He surveyed them and, with a pitying gesture, tenderly said: \textcolour{ubdarkred}{“Sleep on now and take your rest; the time of decision is past. The hour is now upon us wherein the Son of Man will be betrayed into the hands of his enemies.”} As he reached down to shake them that he might awaken them, he said: \textcolour{ubdarkred}{“Arise, let us be going back to the camp, for, behold, he who betrays me is at hand, and the hour has come when my flock shall be scattered. But I have already told you about these things.”}
