--- a/tex/p190.tex
+++ b/tex/p190.tex
@@ -12,7 +12,7 @@
 \vs p190 0:5 \pc In viewing the prominent part which Mary Magdalene took in proclaiming the Master’s resurrection, it should be recorded that Mary was the chief spokesman for the women’s corps, as was Peter for the apostles. Mary was not chief of the women workers, but she was their chief teacher and public spokesman. Mary had become a woman of great circumspection, so that her boldness in speaking to a man whom she considered to be the caretaker of Joseph’s garden only indicates how horrified she was to find the tomb empty. It was the depth and agony of her love, the fullness of her devotion, that caused her to forget, for a moment, the conventional restraints of a Jewish woman’s approach to a strange man.
 \usection{Heralds of the Resurrection}
 \vs p190 1:1 The apostles did not want Jesus to leave them; therefore had they slighted all his statements about dying, along with his promises to rise again. They were not expecting the resurrection as it came, and they refused to believe until they were confronted with the compulsion of unimpeachable evidence and the absolute proof of their own experiences.
-\vs p190 1:2 When the apostles refused to believe the report of the five women who represented that they had seen Jesus and talked with him, Mary Magdalene returned to the tomb, and the others went back to Joseph’s house, where they related their experiences to his daughter and the other women. And the women believed their report. Shortly after 6:00 the daughter of Joseph of Arimathea and the 4 women who had seen Jesus went over to the home of Nicodemus, where they related all these happenings to Joseph, Nicodemus, David Zebedee, and the other men there assembled. Nicodemus and the others doubted their story, doubted that Jesus had risen from the dead; they conjectured that the Jews had removed the body. Joseph and David were disposed to believe the report, so much so that they hurried out to inspect the tomb, and they found everything just as the women had described. And they were the last to so view the sepulchre, for the high priest sent the captain of the temple guards to the tomb at 7:30 to remove the grave cloths. The captain wrapped them all up in the linen sheet and threw them over a near\hyp{}by cliff.
+\vs p190 1:2 When the apostles refused to believe the report of the five women who represented that they had seen Jesus and talked with him, Mary Magdalene returned to the tomb, and the others went back to Joseph’s house, where they related their experiences to his daughter and the other women. And the women believed their report. Shortly after 6:00 the daughter of Joseph of Arimathea and the 4 women who had seen Jesus went over to the home of Nicodemus, where they related all these happenings to Joseph, Nicodemus, David Zebedee, and the other men there assembled. Nicodemus and the others doubted their story, doubted that Jesus had risen from the dead; they conjectured that the Jews had removed the body. Joseph and David were disposed to believe the report, so much so that they hurried out to inspect the tomb, and they found everything just as the women had described. And they were the last to so view the sepulchre, for the high priest sent the captain of the temple guards to the tomb at 7:30 to remove the grave cloths. The captain wrapped them all up in the linen sheet and threw them over a near-by cliff.
 \vs p190 1:3 From the tomb David and Joseph went immediately to the home of Elijah Mark, where they held a conference with the ten apostles in the upper chamber. Only John Zebedee was disposed to believe, even faintly, that Jesus had risen from the dead. Peter had believed at first but, when he failed to find the Master, fell into grave doubting. They were all disposed to believe that the Jews had removed the body. David would not argue with them, but when he left, he said: “You are the apostles, and you ought to understand these things. I will not contend with you; nevertheless, I now go back to the home of Nicodemus, where I have appointed with the messengers to assemble this morning, and when they have gathered together, I will send them forth on their last mission, as heralds of the Master’s resurrection. I heard the Master say that, after he should die, he would rise on the third day, and I believe him.” And thus speaking to the dejected and forlorn ambassadors of the kingdom, this self\hyp{}appointed chief of communication and intelligence took leave of the apostles. On his way from the upper chamber he dropped the bag of Judas, containing all the apostolic funds, in the lap of Matthew Levi.
 \vs p190 1:4 It was about 9:30 when the last of David’s 26 messengers arrived at the home of Nicodemus. David promptly assembled them in the spacious courtyard and addressed them:
 \vs p190 1:5 \pc “Men and brethren, all this time you have served me in accordance with your oath to me and to one another, and I call you to witness that I have never yet sent out false information at your hands. I am about to send you on your last mission as volunteer messengers of the kingdom, and in so doing I release you from your oaths and thereby disband the messenger corps. Men, I declare to you that we have finished our work. No more does the Master have need of mortal messengers; he has risen from the dead. He told us before they arrested him that he would die and rise again on the third day. I have seen the tomb --- it is empty. I have talked with Mary Magdalene and four other women, who have talked with Jesus. I now disband you, bid you farewell, and send you on your respective assignments, and the message which you shall bear to the believers is: ‘Jesus has risen from the dead; the tomb is empty.’”
@@ -24,7 +24,7 @@
 \usection{Jesus’ Appearance at Bethany}
 \vs p190 2:1 From the time of the morontia resurrection until the hour of his spirit ascension on high, Jesus made 19 separate appearances in visible form to his believers on earth. He did not appear to his enemies nor to those who could not make spiritual use of his manifestation in visible form. His 1\ts{st} appearance was to the 5 women at the tomb; his 2\ts{nd}, to Mary Magdalene, also at the tomb.
 \vs p190 2:2 The 3\ts{rd} appearance occurred about noon of this Sunday at Bethany. Shortly after noontide, Jesus’ oldest brother, James, was standing in the garden of Lazarus before the empty tomb of the resurrected brother of Martha and Mary, turning over in his mind the news brought to them about one hour previously by the messenger of David. James had always inclined to believe in his eldest brother’s mission on earth, but he had long since lost contact with Jesus’ work and had drifted into grave doubting regarding the later claims of the apostles that Jesus was the Messiah. The whole family was startled and well\hyp{}nigh confounded by the news brought by the messenger. Even as James stood before Lazarus’s empty tomb, Mary Magdalene arrived on the scene and was excitedly relating to the family her experiences of the early morning hours at the tomb of Joseph. Before she had finished, David Zebedee and his mother arrived. Ruth, of course, believed the report, and so did Jude after he had talked with David and Salome.
-\vs p190 2:3 In the meantime, as they looked for James and before they found him, while he stood there in the garden near the tomb, he became aware of a near\hyp{}by presence, as if someone had touched him on the shoulder; and when he turned to look, he beheld the gradual appearance of a strange form by his side. He was too much amazed to speak and too frightened to flee. And then the strange form spoke, saying: \textcolour{ubdarkred}{“James, I come to call you to the service of the kingdom. Join earnest hands with your brethren and follow after me.”} When James heard his name spoken, he knew that it was his eldest brother, Jesus, who had addressed him. They all had more or less difficulty in recognizing the morontia form of the Master, but few of them had any trouble recognizing his voice or otherwise identifying his charming personality when he once began to communicate with them.
+\vs p190 2:3 In the meantime, as they looked for James and before they found him, while he stood there in the garden near the tomb, he became aware of a near-by presence, as if someone had touched him on the shoulder; and when he turned to look, he beheld the gradual appearance of a strange form by his side. He was too much amazed to speak and too frightened to flee. And then the strange form spoke, saying: \textcolour{ubdarkred}{“James, I come to call you to the service of the kingdom. Join earnest hands with your brethren and follow after me.”} When James heard his name spoken, he knew that it was his eldest brother, Jesus, who had addressed him. They all had more or less difficulty in recognizing the morontia form of the Master, but few of them had any trouble recognizing his voice or otherwise identifying his charming personality when he once began to communicate with them.
 \vs p190 2:4 When James perceived that Jesus was addressing him, he started to fall to his knees, exclaiming, “My father and my brother,” but Jesus bade him stand while he spoke with him. And they walked through the garden and talked for almost three minutes; talked over experiences of former days and forecast the events of the near future. As they neared the house, Jesus said, \textcolour{ubdarkred}{“Farewell, James, until I greet you all together.”}
 \vs p190 2:5 James rushed into the house, even while they looked for him at Bethpage, exclaiming: “I have just seen Jesus and talked with him, visited with him. He is not dead; he has risen! He vanished before me, saying, ‘Farewell until I greet you all together.’” He had scarcely finished speaking when Jude returned, and he retold the experience of meeting Jesus in the garden for the benefit of Jude. And they all began to believe in the resurrection of Jesus. James now announced that he would not return to Galilee, and David exclaimed: “He is seen not only by excited women; even stronghearted men have begun to see him. I expect to see him myself.”
 \vs p190 2:6 \pc And David did not long wait, for the 4\ts{th} appearance of Jesus to mortal recognition occurred shortly before 14:00 in this very home of Martha and Mary, when he appeared visibly before his earthly family and their friends, 20 in all. The Master appeared in the open back door, saying: \textcolour{ubdarkred}{“Peace be upon you. Greetings to those once near me in the flesh and fellowship for my brothers and sisters in the kingdom of heaven. How could you doubt? Why have you lingered so long before choosing to follow the light of truth with a whole heart? Come, therefore, all of you into the fellowship of the Spirit of Truth in the Father’s kingdom.”} As they began to recover from the first shock of their amazement and to move toward him as if to embrace him, he vanished from their sight.
