--- a/tex/p193.tex
+++ b/tex/p193.tex
@@ -15,7 +15,7 @@
 \usection{The Appearance at Sychar}
 \vs p193 1:1 About 16:00 on Sabbath afternoon, May 13, the Master appeared to Nalda and about 75 Samaritan believers near Jacob’s well, at Sychar. The believers were in the habit of meeting at this place, near where Jesus had spoken to Nalda concerning the water of life. On this day, just as they had finished their discussions of the reported resurrection, Jesus suddenly appeared before them, saying:
 \vs p193 1:2 \pc \textcolour{ubdarkred}{“Peace be upon you. You rejoice to know that I am the resurrection and the life, but this will avail you nothing unless you are first born of the eternal spirit, thereby coming to possess, by faith, the gift of eternal life. If you are the faith sons of my Father, you shall never die; you shall not perish. The gospel of the kingdom has taught you that all men are the sons of God. And this good news concerning the love of the heavenly Father for his children on earth must be carried to all the world. The time has come when you worship God neither on Gerizim nor at Jerusalem, but where you are, as you are, in spirit and in truth. It is your faith that saves your souls. Salvation is the gift of God to all who believe they are his sons. But be not deceived; while salvation is the free gift of God and is bestowed upon all who accept it by faith, there follows the experience of bearing the fruits of this spirit life as it is lived in the flesh. The acceptance of the doctrine of the fatherhood of God implies that you also freely accept the associated truth of the brotherhood of man. And if man is your brother, he is even more than your neighbour, whom the Father requires you to love as yourself. Your brother, being of your own family, you will not only love with a family affection, but you will also serve as you would serve yourself. And you will thus love and serve your brother because you, being my brethren, have been thus loved and served by me. Go, then, into all the world telling this good news to all creatures of every race, tribe, and nation. My spirit shall go before you, and I will be with you always.”}
-\vs p193 1:3 \pc These Samaritans were greatly astonished at this appearance of the Master, and they hastened off to the near\hyp{}by towns and villages, where they published abroad the news that they had seen Jesus, and that he had talked to them. And this was the 17\ts{th} morontia appearance of the Master.
+\vs p193 1:3 \pc These Samaritans were greatly astonished at this appearance of the Master, and they hastened off to the near-by towns and villages, where they published abroad the news that they had seen Jesus, and that he had talked to them. And this was the 17\ts{th} morontia appearance of the Master.
 \usection{The Phoenician Appearance}
 \vs p193 2:1 The Master’s 18\ts{th} morontia appearance was at Tyre, on Tuesday, May 16, at a little before 21:00. Again he appeared at the close of a meeting of believers, as they were about to disperse, saying:
 \vs p193 2:2 \pc \textcolour{ubdarkred}{“Peace be upon you. You rejoice to know that the Son of Man has risen from the dead because you thereby know that you and your brethren shall also survive mortal death. But such survival is dependent on your having been previously born of the spirit of truth\hyp{}seeking and God\hyp{}finding. The bread of life and the water thereof are given only to those who hunger for truth and thirst for righteousness --- for God. The fact that the dead rise is not the gospel of the kingdom. These great truths and these universe facts are all related to this gospel in that they are a part of the result of believing the good news and are embraced in the subsequent experience of those who, by faith, become, in deed and in truth, the everlasting sons of the eternal God. My Father sent me into the world to proclaim this salvation of sonship to all men. And so send I you abroad to preach this salvation of sonship. Salvation is the free gift of God, but those who are born of the spirit will immediately begin to show forth the fruits of the spirit in loving service to their fellow creatures. And the fruits of the divine spirit which are yielded in the lives of spirit\hyp{}born and God\hyp{}knowing mortals are: loving service, unselfish devotion, courageous loyalty, sincere fairness, enlightened honesty, undying hope, confiding trust, merciful ministry, unfailing goodness, forgiving tolerance, and enduring peace. If professed believers bear not these fruits of the divine spirit in their lives, they are dead; the Spirit of Truth is not in them; they are useless branches on the living vine, and they soon will be taken away. My Father requires of the children of faith that they bear much spirit fruit. If, therefore, you are not fruitful, he will dig about your roots and cut away your unfruitful branches. Increasingly, must you yield the fruits of the spirit as you progress heavenward in the kingdom of God. You may enter the kingdom as a child, but the Father requires that you grow up, by grace, to the full stature of spiritual adulthood. And when you go abroad to tell all nations the good news of this gospel, I will go before you, and my Spirit of Truth shall abide in your hearts. My peace I leave with you.”}
