--- a/tex/p001.tex
+++ b/tex/p001.tex
@@ -17,7 +17,7 @@
 \vs p001 1:1 Of all the names by which God the Father is known throughout the universes, those which designate him as the First Source and the Universe Centre are most often encountered. The First Father is known by various names in different universes and in different sectors of the same universe. The names which the creature assigns to the Creator are much dependent on the creature’s concept of the Creator. The First Source and Universe Centre has never revealed himself by name, only by nature. If we believe that we are the children of this Creator, it is only natural that we should eventually call him Father. But this is the name of our own choosing, and it grows out of the recognition of our personal relationship with the First Source and Centre.
 \vs p001 1:2 The Universal Father never imposes any form of arbitrary recognition, formal worship, or slavish service upon the intelligent will creatures of the universes. The evolutionary inhabitants of the worlds of time and space must of themselves --- in their own hearts --- recognize, love, and voluntarily worship him. The Creator refuses to coerce or compel the submission of the spiritual free wills of his material creatures. The affectionate dedication of the human will to the doing of the Father’s will is man’s choicest gift to God; in fact, such a consecration of creature will constitutes man’s only possible gift of true value to the Paradise Father. In God, man lives, moves, and has his being; there is nothing which man can give to God except this choosing to abide by the Father’s will, and such decisions, effected by the intelligent will creatures of the universes, constitute the reality of that true worship which is so satisfying to the love\hyp{}dominated nature of the Creator Father.
 \vs p001 1:3 When you have once become truly God\hyp{}conscious, after you really discover the majestic Creator and begin to experience the realization of the indwelling presence of the divine controller, then, in accordance with your enlightenment and in accordance with the manner and method by which the divine Sons reveal God, you will find a name for the Universal Father which will be adequately expressive of your concept of the First Great Source and Centre. And so, on different worlds and in various universes, the Creator becomes known by numerous appellations, in spirit of relationship all meaning the same but, in words and symbols, each name standing for the degree, the depth, of his enthronement in the hearts of his creatures of any given realm.
-\vs p001 1:4 \pc Near the centre of the universe of universes, the Universal Father is generally known by names which may be regarded as meaning the First Source. Farther out in the universes of space, the terms employed to designate the Universal Father more often mean the Universal Centre. Still farther out in the starry creation, he is known, as on the headquarters world of your local universe, as the First Creative Source and Divine Centre. In one near\hyp{}by constellation God is called the Father of Universes. In another, the Infinite Upholder, and to the east, the Divine Controller. He has also been designated the Father of Lights, the Gift of Life, and the All\hyp{}powerful One.
+\vs p001 1:4 \pc Near the centre of the universe of universes, the Universal Father is generally known by names which may be regarded as meaning the First Source. Farther out in the universes of space, the terms employed to designate the Universal Father more often mean the Universal Centre. Still farther out in the starry creation, he is known, as on the headquarters world of your local universe, as the First Creative Source and Divine Centre. In one near-by constellation God is called the Father of Universes. In another, the Infinite Upholder, and to the east, the Divine Controller. He has also been designated the Father of Lights, the Gift of Life, and the All\hyp{}powerful One.
 \vs p001 1:5 On those worlds where a Paradise Son has lived a bestowal life, God is generally known by some name indicative of personal relationship, tender affection, and fatherly devotion. On your constellation headquarters God is referred to as the Universal Father, and on different planets in your local system of inhabited worlds he is variously known as the Father of Fathers, the Paradise Father, the Havona Father, and the Spirit Father. Those who know God through the revelations of the bestowals of the Paradise Sons, eventually yield to the sentimental appeal of the touching relationship of the creature\hyp{}Creator association and refer to God as “our Father.”
 \vs p001 1:6 On a planet of sex creatures, in a world where the impulses of parental emotion are inherent in the hearts of its intelligent beings, the term Father becomes a very expressive and appropriate name for the eternal God. He is best known, most universally acknowledged, on your planet, Urantia, by the name \bibemph{God.} The name he is given is of little importance; the significant thing is that you should know him and aspire to be like him. Your prophets of old truly called him “the everlasting God”\fnst{Isaiah~40:28: \textheb{עוֹלָם אֱלֹהֵי} $=$ ``God of eternity''.} and referred to him as the one who “inhabits eternity.”\fnst{Isaiah~57:15: \textheb{עַד שֹׁכֵן} $=$ ``dwelling eternally'' or ``inhabiting eternity''.}
 \usection{The Reality of God}
