--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -20,7 +20,7 @@
 \vs p074 2:1 Adam and Eve fell asleep on Jerusem, and when they awakened in the Father’s temple on Urantia in the presence of the mighty throng assembled to welcome them, they were face to face with two beings of whom they had heard much, Van and his faithful associate Amadon. These two heroes of the Caligastia secession were the first to welcome them in their new garden home.
 \vs p074 2:2 The tongue of Eden was an Andonic dialect as spoken by Amadon. Van and Amadon had markedly improved this language by creating a new alphabet of 24 letters, and they had hoped to see it become the tongue of Urantia as the Edenic culture would spread throughout the world. Adam and Eve had fully mastered this human dialect before they departed from Jerusem so that this son of Andon heard the exalted ruler of his world address him in his own tongue.
 \vs p074 2:3 And on that day there was great excitement and joy throughout Eden as the runners went in great haste to the rendezvous of the carrier pigeons assembled from near and far, shouting: “Let loose the birds; let them carry the word that the promised Son has come.” Hundreds of believer settlements had faithfully, year after year, kept up the supply of these home\hyp{}reared pigeons for just such an occasion.
-\vs p074 2:4 \pc As the news of Adam’s arrival spread abroad, thousands of the near\hyp{}by tribesmen accepted the teachings of Van and Amadon, while for months and months pilgrims continued to pour into Eden to welcome Adam and Eve and to do homage to their unseen Father.
+\vs p074 2:4 \pc As the news of Adam’s arrival spread abroad, thousands of the near-by tribesmen accepted the teachings of Van and Amadon, while for months and months pilgrims continued to pour into Eden to welcome Adam and Eve and to do homage to their unseen Father.
 \vs p074 2:5 \pc Soon after their awakening, Adam and Eve were escorted to the formal reception on the great mound to the north of the temple. This natural hill had been enlarged and made ready for the installation of the world’s new rulers. Here, at noon, the Urantia reception committee welcomed this Son and Daughter of the system of Satania. Amadon was chairman of this committee, which consisted of twelve members embracing a representative of each of the six Sangik races; the acting chief of the midwayers; Annan, a loyal daughter and spokesman for the Nodites; Noah, the son of the architect and builder of the Garden and executive of his deceased father’s plans; and the two resident Life Carriers.
 \vs p074 2:6 The next act was the delivery of the charge of planetary custody to Adam and Eve by the senior Melchizedek, chief of the council of receivership on Urantia. The Material Son and Daughter took the oath of allegiance to the Most Highs of Norlatiadek and to Michael of Nebadon and were proclaimed rulers of Urantia by Van, who thereby relinquished the titular authority which for over 150,000 years he had held by virtue of the action of the Melchizedek receivers.
 \vs p074 2:7 And Adam and Eve were invested with kingly robes on this occasion, the time of their formal induction into world rulership. Not all of the arts of Dalamatia had been lost to the world; weaving was still practised in the days of Eden.
@@ -46,7 +46,7 @@
 \usection{Adam’s Administration}
 \vs p074 5:1 For almost seven years after Adam’s arrival the Melchizedek receivers remained on duty, but the time finally came when they turned the administration of world affairs over to Adam and returned to Jerusem.
 \vs p074 5:2 The farewell of the receivers occupied the whole of a day, and during the evening the individual Melchizedeks gave Adam and Eve their parting advice and best wishes. Adam had several times requested his advisers to remain on earth with him, but always were these petitions denied. The time had come when the Material Sons must assume full responsibility for the conduct of world affairs. And so, at midnight, the seraphic transports of Satania left the planet with 14 beings for Jerusem, the translation of Van and Amadon occurring simultaneously with the departure of the twelve Melchizedeks.
-\vs p074 5:3 \pc All went fairly well for a time on Urantia, and it appeared that Adam would, eventually, be able to develop some plan for promoting the gradual extension of the Edenic civilization. Pursuant to the advice of the Melchizedeks, he began to foster the arts of manufacture with the idea of developing trade relations with the outside world. When Eden was disrupted, there were over 100 primitive manufacturing plants in operation, and extensive trade relations with the near\hyp{}by tribes had been established.
+\vs p074 5:3 \pc All went fairly well for a time on Urantia, and it appeared that Adam would, eventually, be able to develop some plan for promoting the gradual extension of the Edenic civilization. Pursuant to the advice of the Melchizedeks, he began to foster the arts of manufacture with the idea of developing trade relations with the outside world. When Eden was disrupted, there were over 100 primitive manufacturing plants in operation, and extensive trade relations with the near-by tribes had been established.
 \vs p074 5:4 For ages Adam and Eve had been instructed in the technique of improving a world in readiness for their specialized contributions to the advancement of evolutionary civilization; but now they were face to face with pressing problems, such as the establishment of law and order in a world of savages, barbarians, and semicivilized human beings. Aside from the cream of the earth’s population, assembled in the Garden, only a few groups, here and there, were at all ready for the reception of the Adamic culture.
 \vs p074 5:5 Adam made a heroic and determined effort to establish a world government, but he met with stubborn resistance at every turn. Adam had already put in operation a system of group control throughout Eden and had federated all of these companies into the Edenic league. But trouble, serious trouble, ensued when he went outside the Garden and sought to apply these ideas to the outlying tribes. The moment Adam’s associates began to work outside the Garden, they met the direct and well\hyp{}planned resistance of Caligastia and Daligastia. The fallen Prince had been deposed as world ruler, but he had not been removed from the planet. He was still present on earth and able, at least to some extent, to resist all of Adam’s plans for the rehabilitation of human society. Adam tried to warn the races against Caligastia, but the task was made very difficult because his archenemy was invisible to the eyes of mortals.
 \vs p074 5:6 Even among the Edenites there were those confused minds that leaned toward the Caligastia teaching of unbridled personal liberty; and they caused Adam no end of trouble; always were they upsetting the best\hyp{}laid plans for orderly progression and substantial development. He was finally compelled to withdraw his program for immediate socialization; he fell back on Van’s method of organization, dividing the Edenites into companies of 100 with captains over each and with lieutenants in charge of groups of 10.
