--- a/tex/p077.tex
+++ b/tex/p077.tex
@@ -47,7 +47,7 @@
 \vs p077 4:2 Three out of the four great Nodite centres were established immediately following the Bablot conflict:
 \vs p077 4:3 \ublistelem{1.}\bibnobreakspace \bibemph{The western or Syrian Nodites.} The remnants of the nationalistic or racial memorialists journeyed northward, uniting with the Andonites to found the later Nodite centres to the north\hyp{}west of Mesopotamia. This was the largest group of the dispersing Nodites, and they contributed much to the later appearing Assyrian stock.
 \vs p077 4:4 \ublistelem{2.}\bibnobreakspace \bibemph{The eastern or Elamite Nodites.} The culture and commerce advocates migrated in large numbers eastward into Elam and there united with the mixed Sangik tribes. The Elamites of 30,000--40,000 years ago had become largely Sangik in nature, although they continued to maintain a civilization superior to that of the surrounding barbarians.
-\vs p077 4:5 After the establishment of the second garden it was customary to allude to this near\hyp{}by Nodite settlement as “the land of Nod”; and during the long period of relative peace between this Nodite group and the Adamites, the two races were greatly blended, for it became more and more the custom for the Sons of God (the Adamites) to intermarry with the daughters of men (the Nodites).
+\vs p077 4:5 After the establishment of the second garden it was customary to allude to this near-by Nodite settlement as “the land of Nod”; and during the long period of relative peace between this Nodite group and the Adamites, the two races were greatly blended, for it became more and more the custom for the Sons of God (the Adamites) to intermarry with the daughters of men (the Nodites).
 \vs p077 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{The central or pre\hyp{}Sumerian Nodites.} A small group at the mouth of the Tigris and Euphrates rivers maintained more of their racial integrity. They persisted for thousands of years and eventually furnished the Nodite ancestry which blended with the Adamites to found the Sumerian peoples of historic times.
 \vs p077 4:7 And all this explains how the Sumerians appeared so suddenly and mysteriously on the stage of action in Mesopotamia. Investigators will never be able to trace out and follow these tribes back to the beginning of the Sumerians, who had their origin 200,000 years ago after the submergence of Dalamatia. Without a trace of origin elsewhere in the world, these ancient tribes suddenly loom upon the horizon of civilization with a full\hyp{}grown and superior culture, embracing temples, metalwork, agriculture, animals, pottery, weaving, commercial law, civil codes, religious ceremonial, and an old system of writing. At the beginning of the historical era they had long since lost the alphabet of Dalamatia, having adopted the peculiar writing system originating in Dilmun. The Sumerian language, though virtually lost to the world, was not Semitic; it had much in common with the so\hyp{}called Aryan tongues.
 \vs p077 4:8 The elaborate records left by the Sumerians describe the site of a remarkable settlement which was located on the Persian Gulf near the earlier city of Dilmun. The Egyptians called this city of ancient glory Dilmat, while the later Adamized Sumerians confused both the first and second Nodite cities with Dalamatia and called all three Dilmun. And already have archaeologists found these ancient Sumerian clay tablets which tell of this earthly paradise “where the Gods first blessed mankind with the example of civilized and cultured life.” And these tablets, descriptive of Dilmun, the paradise of men and God, are now silently resting on the dusty shelves of many museums.
