--- a/tex/p093.tex
+++ b/tex/p093.tex
@@ -61,7 +61,7 @@
 \vs p093 5:7 \pc Not long after they had established themselves near Salem, Abraham and Lot journeyed to the valley of the Nile to obtain food supplies as there was then a drought in Palestine. During his brief sojourn in Egypt Abraham found a distant relative on the Egyptian throne, and he served as the commander of two very successful military expeditions for this king. During the latter part of his sojourn on the Nile he and his wife, Sarah, lived at court, and when leaving Egypt, he was given a share of the spoils of his military campaigns.
 \vs p093 5:8 It required great determination for Abraham to forgo the honours of the Egyptian court and return to the more spiritual work sponsored by Machiventa. But Melchizedek was revered even in Egypt, and when the full story was laid before Pharaoh, he strongly urged Abraham to return to the execution of his vows to the cause of Salem.
 \vs p093 5:9 \pc Abraham had kingly ambitions, and on the way back from Egypt he laid before Lot his plan to subdue all Canaan and bring its people under the rule of Salem. Lot was more bent on business; so, after a later disagreement, he went to Sodom to engage in trade and animal husbandry. Lot liked neither a military nor a herder’s life.
-\vs p093 5:10 Upon returning with his family to Salem, Abraham began to mature his military projects. He was soon recognized as the civil ruler of the Salem territory and had confederated under his leadership seven near\hyp{}by tribes. Indeed, it was with great difficulty that Melchizedek restrained Abraham, who was fired with a zeal to go forth and round up the neighbouring tribes with the sword that they might thus more quickly be brought to a knowledge of the Salem truths.
+\vs p093 5:10 Upon returning with his family to Salem, Abraham began to mature his military projects. He was soon recognized as the civil ruler of the Salem territory and had confederated under his leadership seven near-by tribes. Indeed, it was with great difficulty that Melchizedek restrained Abraham, who was fired with a zeal to go forth and round up the neighbouring tribes with the sword that they might thus more quickly be brought to a knowledge of the Salem truths.
 \vs p093 5:11 Melchizedek maintained peaceful relations with all the surrounding tribes; he was not militaristic and was never attacked by any of the armies as they moved back and forth. He was entirely willing that Abraham should formulate a defensive policy for Salem such as was subsequently put into effect, but he would not approve of his pupil’s ambitious schemes for conquest; so there occurred a friendly severance of relationship, Abraham going over to Hebron to establish his military capital.
 \vs p093 5:12 Abraham, because of his close connection with the illustrious Melchizedek, possessed great advantage over the surrounding petty kings; they all revered Melchizedek and unduly feared Abraham. Abraham knew of this fear and only awaited an opportune occasion to attack his neighbours, and this excuse came when some of these rulers presumed to raid the property of his nephew Lot, who dwelt in Sodom. Upon hearing of this, Abraham, at the head of his seven confederated tribes, moved on the enemy. His own bodyguard of 318 officered the army, numbering more than 4,000, which struck at this time.
 \vs p093 5:13 When Melchizedek heard of Abraham’s declaration of war, he went forth to dissuade him but only caught up with his former disciple as he returned victorious from the battle. Abraham insisted that the God of Salem had given him victory over his enemies and persisted in giving a tenth of his spoils to the Salem treasury. The other 90\% he removed to his capital at Hebron.
