--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -19,7 +19,7 @@
 \vs p124 1:9 The climate of Nazareth was not severe. January was the coldest month, the temperature averaging around 10\,°C. During July and August, the hottest months, the temperature would vary from 24\,°C to 32\,°C. From the mountains to the Jordan and the Dead Sea valley the climate of Palestine ranged from the frigid to the torrid. And so, in a way, the Jews were prepared to live in about any and all of the world’s varying climates.
 \vs p124 1:10 Even during the warmest summer months a cool sea breeze usually blew from the west from 10:00 until about 22:00. But every now and then terrific hot winds from the eastern desert would blow across all Palestine. These hot blasts usually came in February and March, near the end of the rainy season. In those days the rain fell in refreshing showers from November to April, but it did not rain steadily. There were only two seasons in Palestine, summer and winter, the dry and rainy seasons. In January the flowers began to bloom, and by the end of April the whole land was one vast flower garden.
 \vs p124 1:11 \pc In May of this year, on his uncle’s farm, Jesus for the first time helped with the harvest of the grain. Before he was 13, he had managed to find out something about practically everything that men and women worked at around Nazareth except metal working, and he spent several months in a smith’s shop when older, after the death of his father.
-\vs p124 1:12 When work and caravan travel were slack, Jesus made many trips with his father on pleasure or business to near\hyp{}by Cana, Endor, and Nain. Even as a lad he frequently visited Sepphoris, only a little over 4.9\,km from Nazareth to the north\hyp{}west, and from 4\,B.C. to about A.D.\,25 the capital of Galilee and one of the residences of Herod Antipas.
+\vs p124 1:12 When work and caravan travel were slack, Jesus made many trips with his father on pleasure or business to near-by Cana, Endor, and Nain. Even as a lad he frequently visited Sepphoris, only a little over 4.9\,km from Nazareth to the north\hyp{}west, and from 4\,B.C. to about A.D.\,25 the capital of Galilee and one of the residences of Herod Antipas.
 \vs p124 1:13 Jesus continued to grow physically, intellectually, socially, and spiritually. His trips away from home did much to give him a better and more generous understanding of his own family, and by this time even his parents were beginning to learn from him as well as to teach him. Jesus was an original thinker and a skillful teacher, even in his youth. He was in constant collision with the so\hyp{}called “oral law,” but he always sought to adapt himself to the practices of his family. He got along fairly well with the children of his age, but he often grew discouraged with their slow\hyp{}acting minds. Before he was ten years old, he had become the leader of a group of seven lads who formed themselves into a society for promoting the acquirements of manhood --- physical, intellectual, and religious. Among these boys Jesus succeeded in introducing many new games and various improved methods of physical recreation.
 \usection{The Tenth Year (A.D.\,4)}
 \vs p124 2:1 It was the fifth of July, the first Sabbath of the month, when Jesus, while strolling through the countryside with his father, first gave expression to feelings and ideas which indicated that he was becoming self\hyp{}conscious of the unusual nature of his life mission. Joseph listened attentively to the momentous words of his son but made few comments; he volunteered no information. The next day Jesus had a similar but longer talk with his mother. Mary likewise listened to the pronouncements of the lad, but neither did she volunteer any information. It was almost two years before Jesus again spoke to his parents concerning this increasing revelation within his own consciousness regarding the nature of his personality and the character of his mission on earth.
