--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -8,7 +8,7 @@
 \uminitoc{Four Months of Training}
 \uminitoc{Sermon on the Kingdom}
 \author{Midwayer Commission}
-\vs p137 0:1 Early on Saturday morning, February 23, A.D.\,26, Jesus came down from the hills to rejoin John’s company encamped at Pella. All that day Jesus mingled with the multitude. He ministered to a lad who had injured himself in a fall and journeyed to the near\hyp{}by village of Pella to deliver the boy safely into the hands of his parents.
+\vs p137 0:1 Early on Saturday morning, February 23, A.D.\,26, Jesus came down from the hills to rejoin John’s company encamped at Pella. All that day Jesus mingled with the multitude. He ministered to a lad who had injured himself in a fall and journeyed to the near-by village of Pella to deliver the boy safely into the hands of his parents.
 \usection{Choosing the First Four Apostles}
 \vs p137 1:1 During this Sabbath two of John’s leading disciples spent much time with Jesus. Of all John’s followers one named Andrew was the most profoundly impressed with Jesus; he accompanied him on the trip to Pella with the injured boy. On the way back to John’s rendezvous he asked Jesus many questions, and just before reaching their destination, the two paused for a short talk, during which Andrew said: “I have observed you ever since you came to Capernaum, and I believe you are the new Teacher, and though I do not understand all your teaching, I have fully made up my mind to follow you; I would sit at your feet and learn the whole truth about the new kingdom.” And Jesus, with hearty assurance, welcomed Andrew as the first of his apostles, that group of twelve who were to labour with him in the work of establishing the new kingdom of God in the hearts of men.
 \vs p137 1:2 \pc Andrew was a silent observer of, and sincere believer in, John’s work, and he had a very able and enthusiastic brother, named Simon, who was one of John’s foremost disciples. It would not be amiss to say that Simon was one of John’s chief supporters.
