--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -9,7 +9,7 @@
 \vs p151 0:1 By March 10 all of the preaching and teaching groups had forgathered at Bethsaida. Thursday night and Friday many of them went out to fish, while on the Sabbath day they attended the synagogue to hear an aged Jew of Damascus discourse on the glory of father Abraham. Jesus spent most of this Sabbath day alone in the hills. That Saturday night the Master talked for more than an hour to the assembled groups on “The mission of adversity and the spiritual value of disappointment.” This was a memorable occasion, and his hearers never forgot the lesson he imparted.
 \vs p151 0:2 Jesus had not fully recovered from the sorrow of his recent rejection at Nazareth; the apostles were aware of a peculiar sadness mingled with his usual cheerful demeanour. James and John were with him much of the time, Peter being more than occupied with the many responsibilities having to do with the welfare and direction of the new corps of evangelists. This time of waiting before starting for the Passover at Jerusalem, the women spent in visiting from house to house, teaching the gospel, and ministering to the sick in Capernaum and the surrounding cities and villages.
 \usection{The Parable of the Sower}
-\vs p151 1:1 About this time Jesus first began to employ the parable method of teaching the multitudes that so frequently gathered about him. Since Jesus had talked with the apostles and others long into the night, on this Sunday morning very few of the group were up for breakfast; so he went out by the seaside and sat alone in the boat, the old fishing boat of Andrew and Peter, which was always kept at his disposal, and meditated on the next move to be made in the work of extending the kingdom. But the Master was not to be alone for long. Very soon the people from Capernaum and near\hyp{}by villages began to arrive, and by 10:00 that morning almost one thousand were assembled on shore near Jesus’ boat and were clamouring for attention. Peter was now up and, making his way to the boat, said to Jesus, “Master, shall I talk to them?” But Jesus answered, “No, Peter, I will tell them a story.” And then Jesus began the recital of the parable of the sower, one of the first of a long series of such parables which he taught the throngs that followed after him. This boat had an elevated seat on which he sat (for it was the custom to sit when teaching) while he talked to the crowd assembled along the shore. After Peter had spoken a few words, Jesus said:
+\vs p151 1:1 About this time Jesus first began to employ the parable method of teaching the multitudes that so frequently gathered about him. Since Jesus had talked with the apostles and others long into the night, on this Sunday morning very few of the group were up for breakfast; so he went out by the seaside and sat alone in the boat, the old fishing boat of Andrew and Peter, which was always kept at his disposal, and meditated on the next move to be made in the work of extending the kingdom. But the Master was not to be alone for long. Very soon the people from Capernaum and near-by villages began to arrive, and by 10:00 that morning almost one thousand were assembled on shore near Jesus’ boat and were clamouring for attention. Peter was now up and, making his way to the boat, said to Jesus, “Master, shall I talk to them?” But Jesus answered, “No, Peter, I will tell them a story.” And then Jesus began the recital of the parable of the sower, one of the first of a long series of such parables which he taught the throngs that followed after him. This boat had an elevated seat on which he sat (for it was the custom to sit when teaching) while he talked to the crowd assembled along the shore. After Peter had spoken a few words, Jesus said:
 \vs p151 1:2 \pc \textcolour{ubdarkred}{“A sower went forth to sow, and it came to pass as he sowed that some seed fell by the wayside to be trodden underfoot and devoured by the birds of heaven. Other seed fell upon the rocky places where there was little earth, and immediately it sprang up because there was no depth to the soil, but as soon as the sun shone, it withered because it had no root whereby to secure moisture. Other seed fell among the thorns, and as the thorns grew up, it was choked so that it yielded no grain. Still other seed fell upon good ground and, growing, yielded, some thirtyfold, some sixtyfold, and some a hundredfold.” And when he had finished speaking this parable, he said to the multitude, “He who has ears to hear, let him hear.”}
 \vs p151 1:3 \pc The apostles and those who were with them, when they heard Jesus teach the people in this manner, were greatly perplexed; and after much talking among themselves, that evening in the Zebedee garden Matthew said to Jesus: “Master, what is the meaning of the dark sayings which you present to the multitude? Why do you speak in parables to those who seek the truth?” And Jesus answered:
 \vs p151 1:4 \textcolour{ubdarkred}{“In patience have I instructed you all this time. To you it is given to know the mysteries of the kingdom of heaven, but to the undiscerning multitudes and to those who seek our destruction, from now on, the mysteries of the kingdom shall be presented in parables. And this we will do so that those who really desire to enter the kingdom may discern the meaning of the teaching and thus find salvation, while those who listen only to ensnare us may be the more confounded in that they will see without seeing and will hear without hearing. My children, do you not perceive the law of the spirit which decrees that to him who has shall be given so that he shall have an abundance; but from him who has not shall be taken away even that which he has. Therefore will I henceforth speak to the people much in parables to the end that our friends and those who desire to know the truth may find that which they seek, while our enemies and those who love not the truth may hear without understanding. Many of these people follow not in the way of the truth. The prophet did, indeed, describe all such undiscerning souls when he said: ‘For this people’s heart has waxed gross, and their ears are dull of hearing, and their eyes they have closed lest they should discern the truth and understand it in their hearts.’”}
@@ -57,11 +57,11 @@
 \vs p151 5:6 Jesus plainly explained to the twelve that he had spoken to their troubled spirits and had addressed himself to their fear\hyp{}tossed minds, that he had not commanded the elements to obey his word, but it was of no avail. The Master’s followers always persisted in placing their own interpretation on all such coincidental occurrences. From this day on they insisted on regarding the Master as having absolute power over the natural elements. Peter never grew weary of reciting how “even the winds and the waves obey him.”
 \vs p151 5:7 It was late in the evening when Jesus and his associates reached the shore, and since it was a calm and beautiful night, they all rested in the boats, not going ashore until shortly after sunrise the next morning. When they were gathered together, about 40 in all, Jesus said: \textcolour{ubdarkred}{“Let us go up into yonder hills and tarry for a few days while we ponder over the problems of the Father’s kingdom.”}
 \usection{The Kheresa Lunatic}
-\vs p151 6:1 Although most of the near\hyp{}by eastern shore of the lake sloped up gently to the highlands beyond, at this particular spot there was a steep hillside, the shore in some places dropping sheer down into the lake. Pointing up to the side of the near\hyp{}by hill, Jesus said: \textcolour{ubdarkred}{“Let us go up on this hillside for our breakfast and under some of the shelters rest and talk.”}
+\vs p151 6:1 Although most of the near-by eastern shore of the lake sloped up gently to the highlands beyond, at this particular spot there was a steep hillside, the shore in some places dropping sheer down into the lake. Pointing up to the side of the near-by hill, Jesus said: \textcolour{ubdarkred}{“Let us go up on this hillside for our breakfast and under some of the shelters rest and talk.”}
 \vs p151 6:2 This entire hillside was covered with caverns which had been hewn out of the rock. Many of these niches were ancient sepulchres. About halfway up the hillside on a small, relatively level spot was the cemetery of the little village of Kheresa. As Jesus and his associates passed near this burial ground, a lunatic who lived in these hillside caverns rushed up to them. This demented man was well known about these parts, having onetime been bound with fetters and chains and confined in one of the grottos. Long since he had broken his shackles and now roamed at will among the tombs and abandoned sepulchres.
 \vs p151 6:3 This man, whose name was Amos, was afflicted with a periodic form of insanity. There were considerable spells when he would find some clothing and deport himself fairly well among his fellows. During one of these lucid intervals he had gone over to Bethsaida, where he heard the preaching of Jesus and the apostles, and at that time had become a half\hyp{}hearted believer in the gospel of the kingdom. But soon a stormy phase of his trouble appeared, and he fled to the tombs, where he moaned, cried out aloud, and so conducted himself as to terrorize all who chanced to meet him.
 \vs p151 6:4 When Amos recognized Jesus, he fell down at his feet and exclaimed: “I know you, Jesus, but I am possessed of many devils, and I beseech that you will not torment me.” This man truly believed that his periodic mental affliction was due to the fact that, at such times, evil or unclean spirits entered into him and dominated his mind and body. His troubles were mostly emotional --- his brain was not grossly diseased.
-\vs p151 6:5 Jesus, looking down upon the man crouching like an animal at his feet, reached down and, taking him by the hand, stood him up and said to him: \textcolour{ubdarkred}{“Amos, you are not possessed of a devil; you have already heard the good news that you are a son of God. I command you to come out of this spell.”} And when Amos heard Jesus speak these words, there occurred such a transformation in his intellect that he was immediately restored to his right mind and the normal control of his emotions. By this time a considerable crowd had assembled from the near\hyp{}by village, and these people, augmented by the swine herders from the highland above them, were astonished to see the lunatic sitting with Jesus and his followers, in possession of his right mind and freely conversing with them.
+\vs p151 6:5 Jesus, looking down upon the man crouching like an animal at his feet, reached down and, taking him by the hand, stood him up and said to him: \textcolour{ubdarkred}{“Amos, you are not possessed of a devil; you have already heard the good news that you are a son of God. I command you to come out of this spell.”} And when Amos heard Jesus speak these words, there occurred such a transformation in his intellect that he was immediately restored to his right mind and the normal control of his emotions. By this time a considerable crowd had assembled from the near-by village, and these people, augmented by the swine herders from the highland above them, were astonished to see the lunatic sitting with Jesus and his followers, in possession of his right mind and freely conversing with them.
 \vs p151 6:6 As the swine herders rushed into the village to spread the news of the taming of the lunatic, the dogs charged upon a small and untended herd of about 30 swine and drove most of them over a precipice into the sea. And it was this incidental occurrence, in connection with the presence of Jesus and the supposed miraculous curing of the lunatic, that gave origin to the legend that Jesus had cured Amos by casting a legion of devils out of him, and that these devils had entered into the herd of swine, causing them forthwith to rush headlong to their destruction in the sea below. Before the day was over, this episode was published abroad by the swine tenders, and the whole village believed it. Amos most certainly believed this story; he saw the swine tumbling over the brow of the hill shortly after his troubled mind had quieted down, and he always believed that they carried with them the very evil spirits which had so long tormented and afflicted him. And this had a good deal to do with the permanency of his cure. It is equally true that all of Jesus’ apostles (save Thomas) believed that the episode of the swine was directly connected with the cure of Amos.
 \vs p151 6:7 \pc Jesus did not obtain the rest he was looking for. Most of that day he was thronged by those who came in response to the word that Amos had been cured, and who were attracted by the story that the demons had gone out of the lunatic into the herd of swine. And so, after only one night of rest, early Tuesday morning Jesus and his friends were awakened by a delegation of these swine\hyp{}raising gentiles who had come to urge that he depart from their midst. Said their spokesman to Peter and Andrew: “Fishermen of Galilee, depart from us and take your prophet with you. We know he is a holy man, but the gods of our country do not know him, and we stand in danger of losing many swine. The fear of you has descended upon us, so that we pray you to go hence.” And when Jesus heard them, he said to Andrew, \textcolour{ubdarkred}{“Let us return to our place.”}
 \vs p151 6:8 As they were about to depart, Amos besought Jesus to permit him to go back with them, but the Master would not consent. Said Jesus to Amos: \textcolour{ubdarkred}{“Forget not that you are a son of God. Return to your own people and show them what great things God has done for you.”} And Amos went about publishing that Jesus had cast a legion of devils out of his troubled soul, and that these evil spirits had entered into a herd of swine, driving them to quick destruction. And he did not stop until he had gone into all the cities of the Decapolis, declaring what great things Jesus had done for him.
