--- a/tex/p174.tex
+++ b/tex/p174.tex
@@ -35,7 +35,7 @@
 \vs p174 4:6 When no more questions were forthcoming, and as the noon hour was near, Jesus did not resume his teaching but was content merely to ask the Pharisees and their associates a question. Said Jesus: \textcolour{ubdarkred}{“Since you ask no more questions, I would like to ask you one. What do you think of the Deliverer? That is, whose son is he?”} After a brief pause one of the scribes answered, “The Messiah is the son of David.” And since Jesus knew that there had been much debate, even among his own disciples, as to whether or not he was the son of David, he asked this further question: \textcolour{ubdarkred}{“If the Deliverer is indeed the son of David, how is it that, in the Psalm which you accredit to David, he himself, speaking in the spirit, says, ‘The Lord said to my lord, sit on my right hand until I make your enemies the footstool of your feet.’ If David calls him Lord, how then can he be his son?”} Although the rulers, the scribes, and the chief priests made no reply to this question, they likewise refrained from asking him any more questions in an effort to entangle him. They never answered this question which Jesus put to them, but after the Master’s death they attempted to escape the difficulty by changing the interpretation of this Psalm so as to make it refer to Abraham instead of the Messiah. Others sought to escape the dilemma by disallowing that David was the author of this so\hyp{}called Messianic Psalm.
 \vs p174 4:7 A short time back the Pharisees had enjoyed the manner in which the Sadducees had been silenced by the Master; now the Sadducees were delighted by the failure of the Pharisees; but such rivalry was only momentary; they speedily forgot their time\hyp{}honoured differences in the united effort to stop Jesus’ teachings and doings. But throughout all of these experiences the common people heard him gladly.
 \usection{The Inquiring Greeks}
-\vs p174 5:1 About noontime, as Philip was purchasing supplies for the new camp which was that day being established near Gethsemane, he was accosted by a delegation of strangers, a group of believing Greeks from Alexandria, Athens, and Rome, whose spokesman said to the apostle: “You have been pointed out to us by those who know you; so we come to you, Sir, with the request to see Jesus, your Master.” Philip was taken by surprise thus to meet these prominent and inquiring Greek gentiles in the market place, and, since Jesus had so explicitly charged all of the twelve not to engage in any public teaching during the Passover week, he was a bit perplexed as to the right way to handle this matter. He was also disconcerted because these men were foreign gentiles. If they had been Jews or near\hyp{}by and familiar gentiles, he would not have hesitated so markedly. What he did was this: He asked these Greeks to remain right where they were. As he hastened away, they supposed that he went in search of Jesus, but in reality he hurried off to the home of Joseph, where he knew Andrew and the other apostles were at lunch; and calling Andrew out, he explained the purpose of his coming, and then, accompanied by Andrew, he returned to the waiting Greeks.
+\vs p174 5:1 About noontime, as Philip was purchasing supplies for the new camp which was that day being established near Gethsemane, he was accosted by a delegation of strangers, a group of believing Greeks from Alexandria, Athens, and Rome, whose spokesman said to the apostle: “You have been pointed out to us by those who know you; so we come to you, Sir, with the request to see Jesus, your Master.” Philip was taken by surprise thus to meet these prominent and inquiring Greek gentiles in the market place, and, since Jesus had so explicitly charged all of the twelve not to engage in any public teaching during the Passover week, he was a bit perplexed as to the right way to handle this matter. He was also disconcerted because these men were foreign gentiles. If they had been Jews or near-by and familiar gentiles, he would not have hesitated so markedly. What he did was this: He asked these Greeks to remain right where they were. As he hastened away, they supposed that he went in search of Jesus, but in reality he hurried off to the home of Joseph, where he knew Andrew and the other apostles were at lunch; and calling Andrew out, he explained the purpose of his coming, and then, accompanied by Andrew, he returned to the waiting Greeks.
 \vs p174 5:2 Since Philip had about finished the purchasing of supplies, he and Andrew returned with the Greeks to the home of Joseph, where Jesus received them; and they sat near while he spoke to his apostles and a number of leading disciples assembled at this luncheon. Said Jesus:
 \vs p174 5:3 \pc \textcolour{ubdarkred}{“My Father sent me to this world to reveal his loving\hyp{}kindness to the children of men, but those to whom I first came have refused to receive me. True, indeed, many of you have believed my gospel for yourselves, but the children of Abraham and their leaders are about to reject me, and in so doing they will reject Him who sent me. I have freely proclaimed the gospel of salvation to this people; I have told them of sonship with joy, liberty, and life more abundant in the spirit. My Father has done many wonderful works among these fear\hyp{}ridden sons of men. But truly did the Prophet Isaiah refer to this people when he wrote: ‘Lord, who has believed our teachings? And to whom has the Lord been revealed?’ Truly have the leaders of my people deliberately blinded their eyes that they see not, and hardened their hearts lest they believe and be saved. All these years have I sought to heal them of their unbelief that they might be recipients of the Father’s eternal salvation. I know that not all have failed me; some of you have indeed believed my message. In this room now are a full score of men who were once members of the Sanhedrin, or who were high in the councils of the nation, albeit even some of you still shrink from open confession of the truth lest they cast you out of the synagogue. Some of you are tempted to love the glory of men more than the glory of God. But I am constrained to show forbearance since I fear for the safety and loyalty of even some of those who have been so long near me, and who have lived so close by my side.}
 \vs p174 5:4 \textcolour{ubdarkred}{“In this banquet chamber I perceive there are assembled Jews and gentiles in about equal numbers, and I would address you as the first and last of such a group that I may instruct in the affairs of the kingdom before I go to my Father.”}
