--- a/tex/p183.tex
+++ b/tex/p183.tex
@@ -27,7 +27,7 @@
 \vs p183 3:6 The apostles and disciples were literally stunned by what they saw. For a moment no one moved. Then Jesus, disengaging himself from the traitorous embrace of Judas, stepped up to the guards and soldiers and again asked, \textcolour{ubdarkred}{“Whom do you seek?”} And again the captain said, “Jesus of Nazareth.” And again answered Jesus: \textcolour{ubdarkred}{“I have told you that I am he. If, therefore, you seek me, let these others go their way. I am ready to go with you.”}
 \vs p183 3:7 Jesus was ready to go back to Jerusalem with the guards, and the captain of the soldiers was altogether willing to allow the three apostles and their associates to go their way in peace. But before they were able to get started, as Jesus stood there awaiting the captain’s orders, one Malchus, the Syrian bodyguard of the high priest, stepped up to Jesus and made ready to bind his hands behind his back, although the Roman captain had not directed that Jesus should be thus bound. When Peter and his associates saw their Master being subjected to this indignity, they were no longer able to restrain themselves. Peter drew his sword and with the others rushed forward to smite Malchus. But before the soldiers could come to the defence of the high priest’s servant, Jesus raised a forbidding hand to Peter and, speaking sternly, said: \textcolour{ubdarkred}{“Peter, put up your sword. They who take the sword shall perish by the sword. Do you not understand that it is the Father’s will that I drink this cup? And do you not further know that I could even now command more than twelve legions of angels and their associates, who would deliver me from the hands of these few men?”}
 \vs p183 3:8 While Jesus thus effectively put a stop to this show of physical resistance by his followers, it was enough to arouse the fear of the captain of the guards, who now, with the help of his soldiers, laid heavy hands on Jesus and quickly bound him. And as they tied his hands with heavy cords, Jesus said to them: \textcolour{ubdarkred}{“Why do you come out against me with swords and with staves as if to seize a robber? I was daily with you in the temple, publicly teaching the people, and you made no effort to take me.”}
-\vs p183 3:9 When Jesus had been bound, the captain, fearing that the followers of the Master might attempt to rescue him, gave orders that they be seized; but the soldiers were not quick enough since, having overheard the captain’s orders to arrest them, Jesus’ followers fled in haste back into the ravine. All this time John Mark had remained secluded in the near\hyp{}by shed. When the guards started back to Jerusalem with Jesus, John Mark attempted to steal out of the shed in order to catch up with the fleeing apostles and disciples; but just as he emerged, one of the last of the returning soldiers who had pursued the fleeing disciples was passing near and, seeing this young man in his linen coat, gave chase, almost overtaking him. In fact, the soldier got near enough to John to lay hold upon his coat, but the young man freed himself from the garment, escaping naked while the soldier held the empty coat. John Mark made his way in all haste to David Zebedee on the upper trail. When he had told David what had happened, they both hastened back to the tents of the sleeping apostles and informed all eight of the Master’s betrayal and arrest.
+\vs p183 3:9 When Jesus had been bound, the captain, fearing that the followers of the Master might attempt to rescue him, gave orders that they be seized; but the soldiers were not quick enough since, having overheard the captain’s orders to arrest them, Jesus’ followers fled in haste back into the ravine. All this time John Mark had remained secluded in the near-by shed. When the guards started back to Jerusalem with Jesus, John Mark attempted to steal out of the shed in order to catch up with the fleeing apostles and disciples; but just as he emerged, one of the last of the returning soldiers who had pursued the fleeing disciples was passing near and, seeing this young man in his linen coat, gave chase, almost overtaking him. In fact, the soldier got near enough to John to lay hold upon his coat, but the young man freed himself from the garment, escaping naked while the soldier held the empty coat. John Mark made his way in all haste to David Zebedee on the upper trail. When he had told David what had happened, they both hastened back to the tents of the sleeping apostles and informed all eight of the Master’s betrayal and arrest.
 \vs p183 3:10 At about the time the eight apostles were being awakened, those who had fled up the ravine were returning, and they all gathered together near the olive press to debate what should be done. In the meantime, Simon Peter and John Zebedee, who had hidden among the olive trees, had already gone on after the mob of soldiers, guards, and servants, who were now leading Jesus back to Jerusalem as they would have led a desperate criminal. John followed close behind the mob, but Peter followed afar off. After John Mark’s escape from the clutch of the soldier, he provided himself with a cloak which he found in the tent of Simon Peter and John Zebedee. He suspected the guards were going to take Jesus to the home of Annas, the high priest emeritus; so he skirted around through the olive orchards and was there ahead of the mob, hiding near the entrance to the gate of the high priest’s palace.
 \usection{Discussion at the Olive Press}
 \vs p183 4:1 James Zebedee found himself separated from Simon Peter and his brother John, and so he now joined the other apostles and their fellow campers at the olive press to deliberate on what should be done in view of the Master’s arrest.
